@@ -17,7 +17,6 @@ import java.lang.invoke.MethodType;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -39,6 +38,7 @@ public class ScriptClassInfo {
     public final List<FunctionTable.LocalFunction> converters;
     public final FunctionTable.LocalFunction defConverter;
 
+    @SuppressWarnings("HiddenField")
     public ScriptClassInfo(PainlessLookup painlessLookup, Class<?> baseClass) {
         this.baseClass = baseClass;
 
@@ -59,25 +59,38 @@ public class ScriptClassInfo {
                     returnType = m.getReturnType();
                 } else {
                     throw new IllegalArgumentException(
-                            "Painless can only implement interfaces that have a single method named [execute] but [" + baseClass.getName()
-                                    + "] has more than one.");
+                        "Painless can only implement interfaces that have a single method named [execute] but ["
+                            + baseClass.getName()
+                            + "] has more than one."
+                    );
                 }
-            } else if (m.getName().startsWith("needs") &&
-                       m.getReturnType() == boolean.class &&
-                       m.getParameterTypes().length == 0) {
+            } else if (m.getName().startsWith("needs") && m.getReturnType() == boolean.class && m.getParameterTypes().length == 0) {
                 needsMethods.add(new org.objectweb.asm.commons.Method(m.getName(), NEEDS_PARAMETER_METHOD_TYPE.toMethodDescriptorString()));
-            } else if (m.getName().startsWith("get") &&
-                       m.getName().equals("getClass") == false &&
-                       Modifier.isStatic(m.getModifiers()) == false) {
-                getReturns.add(
-                    definitionTypeForClass(painlessLookup, m.getReturnType(), componentType -> "[" + m.getName() + "] has unknown return " +
-                        "type [" + componentType.getName() + "]. Painless can only support getters with return types that are " +
-                        "whitelisted."));
+            } else if (m.getName().startsWith("get")
+                && m.getName().equals("getClass") == false
+                && Modifier.isStatic(m.getModifiers()) == false) {
+                    getReturns.add(
+                        definitionTypeForClass(
+                            painlessLookup,
+                            m.getReturnType(),
+                            componentType -> "["
+                                + m.getName()
+                                + "] has unknown return "
+                                + "type ["
+                                + componentType.getName()
+                                + "]. Painless can only support getters with return types that are "
+                                + "whitelisted."
+                        )
+                    );
 
-                getMethods.add(new org.objectweb.asm.commons.Method(m.getName(),
-                    MethodType.methodType(m.getReturnType()).toMethodDescriptorString()));
+                    getMethods.add(
+                        new org.objectweb.asm.commons.Method(
+                            m.getName(),
+                            MethodType.methodType(m.getReturnType()).toMethodDescriptorString()
+                        )
+                    );
 
-            }
+                }
         }
 
         if (executeMethod == null) {
@@ -86,21 +99,27 @@ public class ScriptClassInfo {
         ArrayList<FunctionTable.LocalFunction> converters = new ArrayList<>();
         FunctionTable.LocalFunction defConverter = null;
         for (java.lang.reflect.Method m : baseClass.getMethods()) {
-            if (m.getName().startsWith("convertFrom") &&
-                m.getParameterTypes().length == 1 &&
-                m.getReturnType() == returnType &&
-                Modifier.isStatic(m.getModifiers())) {
+            if (m.getName().startsWith("convertFrom")
+                && m.getParameterTypes().length == 1
+                && m.getReturnType() == returnType
+                && Modifier.isStatic(m.getModifiers())) {
 
                 if (m.getName().equals("convertFromDef")) {
                     if (m.getParameterTypes()[0] != Object.class) {
-                        throw new IllegalStateException("convertFromDef must take a single Object as an argument, " +
-                            "not [" + m.getParameterTypes()[0] + "]");
+                        throw new IllegalStateException(
+                            "convertFromDef must take a single Object as an argument, " + "not [" + m.getParameterTypes()[0] + "]"
+                        );
                     }
-                    defConverter = new FunctionTable.LocalFunction(m.getName(), m.getReturnType(), Arrays.asList(m.getParameterTypes()),
-                                                                   true, true);
+                    defConverter = new FunctionTable.LocalFunction(
+                        m.getName(),
+                        m.getReturnType(),
+                        List.of(m.getParameterTypes()),
+                        true,
+                        true
+                    );
                 } else {
                     converters.add(
-                        new FunctionTable.LocalFunction(m.getName(), m.getReturnType(), Arrays.asList(m.getParameterTypes()), true, true)
+                        new FunctionTable.LocalFunction(m.getName(), m.getReturnType(), List.of(m.getParameterTypes()), true, true)
                     );
                 }
             }
@@ -110,17 +129,24 @@ public class ScriptClassInfo {
 
         MethodType methodType = MethodType.methodType(executeMethod.getReturnType(), executeMethod.getParameterTypes());
         this.executeMethod = new org.objectweb.asm.commons.Method(executeMethod.getName(), methodType.toMethodDescriptorString());
-        executeMethodReturnType = definitionTypeForClass(painlessLookup, executeMethod.getReturnType(),
-                componentType -> "Painless can only implement execute methods returning a whitelisted type but [" + baseClass.getName()
-                        + "#execute] returns [" + componentType.getName() + "] which isn't whitelisted.");
+        executeMethodReturnType = definitionTypeForClass(
+            painlessLookup,
+            executeMethod.getReturnType(),
+            componentType -> "Painless can only implement execute methods returning a whitelisted type but ["
+                + baseClass.getName()
+                + "#execute] returns ["
+                + componentType.getName()
+                + "] which isn't whitelisted."
+        );
 
         // Look up the argument
         List<MethodArgument> arguments = new ArrayList<>();
         String[] argumentNamesConstant = readArgumentNamesConstant(baseClass);
         Class<?>[] types = executeMethod.getParameterTypes();
         if (argumentNamesConstant.length != types.length) {
-            throw new IllegalArgumentException("[" + baseClass.getName() + "#ARGUMENTS] has length [2] but ["
-                    + baseClass.getName() + "#execute] takes [1] argument.");
+            throw new IllegalArgumentException(
+                "[" + baseClass.getName() + "#ARGUMENTS] has length [2] but [" + baseClass.getName() + "#execute] takes [1] argument."
+            );
         }
         for (int arg = 0; arg < types.length; arg++) {
             arguments.add(methodArgument(painlessLookup, types[arg], argumentNamesConstant[arg]));
@@ -185,32 +211,26 @@ public class ScriptClassInfo {
     /**
      * Painless {@link Class}es and name of the argument to the {@code execute} method.
      */
-    public static class MethodArgument {
-        private final Class<?> clazz;
-        private final String name;
-
-        public MethodArgument(Class<?> clazz, String name) {
-            this.clazz = clazz;
-            this.name = name;
-        }
-
-        public Class<?> getClazz() {
-            return clazz;
-        }
-
-        public String getName() {
-            return name;
-        }
-    }
+    public record MethodArgument(Class<?> clazz, String name) {}
 
     private MethodArgument methodArgument(PainlessLookup painlessLookup, Class<?> clazz, String argName) {
-        Class<?> defClass = definitionTypeForClass(painlessLookup, clazz, componentType -> "[" + argName + "] is of unknown type ["
-                + componentType.getName() + ". Painless interfaces can only accept arguments that are of whitelisted types.");
+        Class<?> defClass = definitionTypeForClass(
+            painlessLookup,
+            clazz,
+            componentType -> "["
+                + argName
+                + "] is of unknown type ["
+                + componentType.getName()
+                + ". Painless interfaces can only accept arguments that are of whitelisted types."
+        );
         return new MethodArgument(defClass, argName);
     }
 
-    private static Class<?> definitionTypeForClass(PainlessLookup painlessLookup, Class<?> type,
-                                                   Function<Class<?>, String> unknownErrorMessageSource) {
+    private static Class<?> definitionTypeForClass(
+        PainlessLookup painlessLookup,
+        Class<?> type,
+        Function<Class<?>, String> unknownErrorMessageSource
+    ) {
         type = PainlessLookupUtility.javaTypeToType(type);
         Class<?> componentType = type;
 
@@ -230,12 +250,21 @@ public class ScriptClassInfo {
         try {
             argumentNamesField = iface.getField("PARAMETERS");
         } catch (NoSuchFieldException e) {
-            throw new IllegalArgumentException("Painless needs a constant [String[] PARAMETERS] on all interfaces it implements with the "
-                    + "names of the method arguments but [" + iface.getName() + "] doesn't have one.", e);
+            throw new IllegalArgumentException(
+                "Painless needs a constant [String[] PARAMETERS] on all interfaces it implements with the "
+                    + "names of the method arguments but ["
+                    + iface.getName()
+                    + "] doesn't have one.",
+                e
+            );
         }
         if (false == argumentNamesField.getType().equals(String[].class)) {
-            throw new IllegalArgumentException("Painless needs a constant [String[] PARAMETERS] on all interfaces it implements with the "
-                    + "names of the method arguments but [" + iface.getName() + "] doesn't have one.");
+            throw new IllegalArgumentException(
+                "Painless needs a constant [String[] PARAMETERS] on all interfaces it implements with the "
+                    + "names of the method arguments but ["
+                    + iface.getName()
+                    + "] doesn't have one."
+            );
         }
         try {
             return (String[]) argumentNamesField.get(null);
