@@ -8,8 +8,6 @@
 
 package org.elasticsearch.action.admin.cluster.snapshots.get;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.CollectionUtil;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.action.ActionListener;
@@ -57,6 +55,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.BiPredicate;
 import java.util.function.Predicate;
 import java.util.function.ToLongFunction;
 import java.util.stream.Collectors;
@@ -66,8 +65,6 @@ import java.util.stream.Stream;
  * Transport Action for get snapshots operation
  */
 public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSnapshotsRequest, GetSnapshotsResponse> {
-
-    private static final Logger logger = LogManager.getLogger(TransportGetSnapshotsAction.class);
 
     private final RepositoriesService repositoriesService;
 
@@ -89,7 +86,11 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             GetSnapshotsRequest::new,
             indexNameExpressionResolver,
             GetSnapshotsResponse::new,
-            ThreadPool.Names.SAME
+            ThreadPool.Names.MANAGEMENT // Execute this on the management pool because creating the response can become fairly expensive
+                                        // for large repositories in the verbose=false case when there are a lot of indices per snapshot.
+                                        // This is intentionally not using the snapshot_meta pool because that pool is sized rather large
+                                        // to accommodate concurrent IO and could consume excessive CPU resources through concurrent
+                                        // verbose=false requests that are CPU bound only.
         );
         this.repositoriesService = repositoriesService;
     }
@@ -111,7 +112,12 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         getMultipleReposSnapshotInfo(
             request.isSingleRepositoryRequest() == false,
             state.custom(SnapshotsInProgress.TYPE, SnapshotsInProgress.EMPTY),
-            TransportGetRepositoriesAction.getRepositories(state, request.repositories()),
+            maybeFilterRepositories(
+                TransportGetRepositoriesAction.getRepositories(state, request.repositories()),
+                request.sort(),
+                request.order(),
+                request.fromSortValue()
+            ),
             request.snapshots(),
             request.ignoreUnavailable(),
             request.verbose(),
@@ -121,9 +127,30 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             request.offset(),
             request.size(),
             request.order(),
-            request.policies(),
+            SnapshotPredicates.fromRequest(request),
+            request.includeIndexNames(),
             listener
         );
+    }
+
+    /**
+     * Filters the list of repositories that a request will fetch snapshots from in the special case of sorting by repository
+     * name and having a non-null value for {@link GetSnapshotsRequest#fromSortValue()} on the request to exclude repositories outside
+     * the sort value range if possible.
+     */
+    private static List<RepositoryMetadata> maybeFilterRepositories(
+        List<RepositoryMetadata> repositories,
+        GetSnapshotsRequest.SortBy sortBy,
+        SortOrder order,
+        @Nullable String fromSortValue
+    ) {
+        if (sortBy != GetSnapshotsRequest.SortBy.REPOSITORY || fromSortValue == null) {
+            return repositories;
+        }
+        final Predicate<RepositoryMetadata> predicate = order == SortOrder.ASC
+            ? repositoryMetadata -> fromSortValue.compareTo(repositoryMetadata.name()) <= 0
+            : repositoryMetadata -> fromSortValue.compareTo(repositoryMetadata.name()) >= 0;
+        return repositories.stream().filter(predicate).toList();
     }
 
     private void getMultipleReposSnapshotInfo(
@@ -139,7 +166,8 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         int offset,
         int size,
         SortOrder order,
-        String[] slmPolicies,
+        SnapshotPredicates predicates,
+        boolean indices,
         ActionListener<GetSnapshotsResponse> listener
     ) {
         // short-circuit if there are no repos, because we can not create GroupedActionListener of size 0
@@ -154,12 +182,12 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                     .map(Tuple::v2)
                     .filter(Objects::nonNull)
                     .flatMap(snapshotsInRepo -> snapshotsInRepo.snapshotInfos.stream())
-                    .collect(Collectors.toUnmodifiableList());
+                    .toList();
                 final Map<String, ElasticsearchException> failures = responses.stream()
                     .map(Tuple::v1)
                     .filter(Objects::nonNull)
                     .collect(Collectors.toMap(Tuple::v1, Tuple::v2));
-                final SnapshotsInRepo snInfos = sortAndFilterSnapshots(allSnapshots, sortBy, after, offset, size, order, slmPolicies);
+                final SnapshotsInRepo snInfos = sortSnapshots(allSnapshots, sortBy, after, offset, size, order);
                 final List<SnapshotInfo> snapshotInfos = snInfos.snapshotInfos;
                 final int remaining = snInfos.remaining + responses.stream()
                     .map(Tuple::v2)
@@ -167,7 +195,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                     .mapToInt(s -> s.remaining)
                     .sum();
                 return new GetSnapshotsResponse(
-                    snapshotInfos,
+                    indices ? snapshotInfos : snapshotInfos.stream().map(SnapshotInfo::withoutIndices).toList(),
                     failures,
                     remaining > 0
                         ? GetSnapshotsRequest.After.from(snapshotInfos.get(snapshotInfos.size() - 1), sortBy).asQueryParam()
@@ -183,7 +211,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                 snapshotsInProgress,
                 repoName,
                 snapshots,
-                slmPolicies,
+                predicates,
                 ignoreUnavailable,
                 verbose,
                 cancellableTask,
@@ -205,7 +233,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         SnapshotsInProgress snapshotsInProgress,
         String repo,
         String[] snapshots,
-        String[] slmPolicies,
+        SnapshotPredicates predicates,
         boolean ignoreUnavailable,
         boolean verbose,
         CancellableTask task,
@@ -243,7 +271,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
                 sortBy,
                 after,
                 order,
-                slmPolicies,
+                predicates,
                 listener
             ),
             listener::onFailure
@@ -265,7 +293,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             Collections.emptyList()
         );
         for (SnapshotsInProgress.Entry entry : entries) {
-            snapshotList.add(new SnapshotInfo(entry));
+            snapshotList.add(SnapshotInfo.inProgress(entry));
         }
         return snapshotList;
     }
@@ -283,7 +311,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         GetSnapshotsRequest.SortBy sortBy,
         @Nullable final GetSnapshotsRequest.After after,
         SortOrder order,
-        String[] slmPolicies,
+        SnapshotPredicates predicates,
         ActionListener<SnapshotsInRepo> listener
     ) {
         if (task.notifyIfCancelled(listener)) {
@@ -292,32 +320,56 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
 
         if (repositoryData != null) {
             for (SnapshotId snapshotId : repositoryData.getSnapshotIds()) {
-                allSnapshotIds.put(snapshotId.getName(), new Snapshot(repo, snapshotId));
+                if (predicates.test(snapshotId, repositoryData)) {
+                    allSnapshotIds.put(snapshotId.getName(), new Snapshot(repo, snapshotId));
+                }
             }
         }
 
         final Set<Snapshot> toResolve = new HashSet<>();
-        if (isAllSnapshots(snapshots)) {
+        if (TransportGetRepositoriesAction.isMatchAll(snapshots)) {
             toResolve.addAll(allSnapshotIds.values());
         } else {
+            final List<String> includePatterns = new ArrayList<>();
+            final List<String> excludePatterns = new ArrayList<>();
+            boolean hasCurrent = false;
+            boolean seenWildcard = false;
             for (String snapshotOrPattern : snapshots) {
-                if (GetSnapshotsRequest.CURRENT_SNAPSHOT.equalsIgnoreCase(snapshotOrPattern)) {
-                    toResolve.addAll(currentSnapshots.stream().map(SnapshotInfo::snapshot).collect(Collectors.toList()));
-                } else if (Regex.isSimpleMatchPattern(snapshotOrPattern) == false) {
-                    if (allSnapshotIds.containsKey(snapshotOrPattern)) {
-                        toResolve.add(allSnapshotIds.get(snapshotOrPattern));
-                    } else if (ignoreUnavailable == false) {
-                        throw new SnapshotMissingException(repo, snapshotOrPattern);
-                    }
+                if (seenWildcard && snapshotOrPattern.length() > 1 && snapshotOrPattern.startsWith("-")) {
+                    excludePatterns.add(snapshotOrPattern.substring(1));
                 } else {
-                    for (Map.Entry<String, Snapshot> entry : allSnapshotIds.entrySet()) {
-                        if (Regex.simpleMatch(snapshotOrPattern, entry.getKey())) {
-                            toResolve.add(entry.getValue());
+                    if (Regex.isSimpleMatchPattern(snapshotOrPattern)) {
+                        seenWildcard = true;
+                        includePatterns.add(snapshotOrPattern);
+                    } else if (GetSnapshotsRequest.CURRENT_SNAPSHOT.equalsIgnoreCase(snapshotOrPattern)) {
+                        hasCurrent = true;
+                        seenWildcard = true;
+                    } else {
+                        if (ignoreUnavailable == false && allSnapshotIds.containsKey(snapshotOrPattern) == false) {
+                            throw new SnapshotMissingException(repo, snapshotOrPattern);
                         }
+                        includePatterns.add(snapshotOrPattern);
                     }
                 }
             }
-
+            final String[] includes = includePatterns.toArray(Strings.EMPTY_ARRAY);
+            final String[] excludes = excludePatterns.toArray(Strings.EMPTY_ARRAY);
+            for (Map.Entry<String, Snapshot> entry : allSnapshotIds.entrySet()) {
+                final Snapshot snapshot = entry.getValue();
+                if (toResolve.contains(snapshot) == false
+                    && Regex.simpleMatch(includes, entry.getKey())
+                    && Regex.simpleMatch(excludes, entry.getKey()) == false) {
+                    toResolve.add(snapshot);
+                }
+            }
+            if (hasCurrent) {
+                for (SnapshotInfo snapshotInfo : currentSnapshots) {
+                    final Snapshot snapshot = snapshotInfo.snapshot();
+                    if (Regex.simpleMatch(excludes, snapshot.getSnapshotId().getName()) == false) {
+                        toResolve.add(snapshot);
+                    }
+                }
+            }
             if (toResolve.isEmpty() && ignoreUnavailable == false && isCurrentSnapshotsOnly(snapshots) == false) {
                 throw new SnapshotMissingException(repo, snapshots[0]);
             }
@@ -327,20 +379,17 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             snapshots(
                 snapshotsInProgress,
                 repo,
-                toResolve.stream().map(Snapshot::getSnapshotId).collect(Collectors.toUnmodifiableList()),
+                toResolve.stream().map(Snapshot::getSnapshotId).toList(),
                 ignoreUnavailable,
                 task,
                 sortBy,
                 after,
                 order,
-                slmPolicies,
+                predicates,
                 listener
             );
         } else {
-            assert slmPolicies.length == 0
-                : "slm policy filtering not support for non-verbose request but saw ["
-                    + Strings.arrayToCommaDelimitedString(slmPolicies)
-                    + "]";
+            assert predicates.isMatchAll() : "filtering is not supported in non-verbose mode";
             final SnapshotsInRepo snapshotInfos;
             if (repositoryData != null) {
                 // want non-current snapshots as well, which are found in the repository data
@@ -348,7 +397,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             } else {
                 // only want current snapshots
                 snapshotInfos = sortSnapshots(
-                    currentSnapshots.stream().map(SnapshotInfo::basic).collect(Collectors.toList()),
+                    currentSnapshots.stream().map(SnapshotInfo::basic).toList(),
                     sortBy,
                     after,
                     0,
@@ -376,7 +425,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         GetSnapshotsRequest.SortBy sortBy,
         @Nullable GetSnapshotsRequest.After after,
         SortOrder order,
-        String[] slmPolicies,
+        SnapshotPredicates predicate,
         ActionListener<SnapshotsInRepo> listener
     ) {
         if (task.notifyIfCancelled(listener)) {
@@ -388,11 +437,14 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         final List<SnapshotsInProgress.Entry> entries = SnapshotsService.currentSnapshots(
             snapshotsInProgress,
             repositoryName,
-            snapshotIdsToIterate.stream().map(SnapshotId::getName).collect(Collectors.toList())
+            snapshotIdsToIterate.stream().map(SnapshotId::getName).toList()
         );
         for (SnapshotsInProgress.Entry entry : entries) {
             if (snapshotIdsToIterate.remove(entry.snapshot().getSnapshotId())) {
-                snapshotSet.add(new SnapshotInfo(entry));
+                final SnapshotInfo snapshotInfo = SnapshotInfo.inProgress(entry);
+                if (predicate.test(snapshotInfo)) {
+                    snapshotSet.add(snapshotInfo);
+                }
             }
         }
         // then, look in the repository if there's any matching snapshots left
@@ -405,7 +457,7 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         final ActionListener<Void> allDoneListener = listener.delegateFailure((l, v) -> {
             final ArrayList<SnapshotInfo> snapshotList = new ArrayList<>(snapshotInfos);
             snapshotList.addAll(snapshotSet);
-            listener.onResponse(sortAndFilterSnapshots(snapshotList, sortBy, after, 0, GetSnapshotsRequest.NO_LIMIT, order, slmPolicies));
+            listener.onResponse(sortSnapshots(snapshotList, sortBy, after, 0, GetSnapshotsRequest.NO_LIMIT, order));
         });
         if (snapshotIdsToIterate.isEmpty()) {
             allDoneListener.onResponse(null);
@@ -419,32 +471,15 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
             return;
         }
         repository.getSnapshotInfo(
-            new GetSnapshotInfoContext(
-                snapshotIdsToIterate,
-                ignoreUnavailable == false,
-                task::isCancelled,
-                (context, snapshotInfo) -> snapshotInfos.add(snapshotInfo),
-                ignoreUnavailable ? ActionListener.runAfter(new ActionListener<>() {
-                    @Override
-                    public void onResponse(Void unused) {
-                        logger.trace("done fetching snapshot infos [{}]", snapshotIdsToIterate);
-                    }
-
-                    @Override
-                    public void onFailure(Exception e) {
-                        assert false : new AssertionError("listener should always complete successfully for ignoreUnavailable=true", e);
-                        logger.warn("failed to fetch snapshot info for some snapshots", e);
-                    }
-                }, () -> allDoneListener.onResponse(null)) : allDoneListener
-            )
+            new GetSnapshotInfoContext(snapshotIdsToIterate, ignoreUnavailable == false, task::isCancelled, (context, snapshotInfo) -> {
+                if (predicate.test(snapshotInfo)) {
+                    snapshotInfos.add(snapshotInfo);
+                }
+            }, allDoneListener)
         );
     }
 
-    private boolean isAllSnapshots(String[] snapshots) {
-        return (snapshots.length == 0) || (snapshots.length == 1 && GetSnapshotsRequest.ALL_SNAPSHOTS.equalsIgnoreCase(snapshots[0]));
-    }
-
-    private boolean isCurrentSnapshotsOnly(String[] snapshots) {
+    private static boolean isCurrentSnapshotsOnly(String[] snapshots) {
         return (snapshots.length == 1 && GetSnapshotsRequest.CURRENT_SNAPSHOT.equalsIgnoreCase(snapshots[0]));
     }
 
@@ -508,22 +543,36 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
     private static final Comparator<SnapshotInfo> BY_REPOSITORY = Comparator.comparing(SnapshotInfo::repository)
         .thenComparing(SnapshotInfo::snapshotId);
 
-    private static SnapshotsInRepo sortAndFilterSnapshots(
-        final List<SnapshotInfo> snapshotInfos,
-        final GetSnapshotsRequest.SortBy sortBy,
-        final @Nullable GetSnapshotsRequest.After after,
-        final int offset,
-        final int size,
-        final SortOrder order,
-        final String[] slmPolicies
-    ) {
-        final List<SnapshotInfo> filteredSnapshotInfos;
-        if (slmPolicies.length == 0) {
-            filteredSnapshotInfos = snapshotInfos;
-        } else {
-            filteredSnapshotInfos = filterBySLMPolicies(snapshotInfos, slmPolicies);
+    private static long getDuration(SnapshotId snapshotId, RepositoryData repositoryData) {
+        final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
+        if (details == null) {
+            return -1;
         }
-        return sortSnapshots(filteredSnapshotInfos, sortBy, after, offset, size, order);
+        final long startTime = details.getStartTimeMillis();
+        if (startTime == -1) {
+            return -1;
+        }
+        final long endTime = details.getEndTimeMillis();
+        if (endTime == -1) {
+            return -1;
+        }
+        return endTime - startTime;
+    }
+
+    private static long getStartTime(SnapshotId snapshotId, RepositoryData repositoryData) {
+        final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
+        return details == null ? -1 : details.getStartTimeMillis();
+    }
+
+    private static int indexCount(SnapshotId snapshotId, RepositoryData repositoryData) {
+        // TODO: this could be made more efficient by caching this number in RepositoryData
+        int indexCount = 0;
+        for (IndexId idx : repositoryData.getIndices().values()) {
+            if (repositoryData.getSnapshots(idx).contains(snapshotId)) {
+                indexCount++;
+            }
+        }
+        return indexCount;
     }
 
     private static SnapshotsInRepo sortSnapshots(
@@ -534,94 +583,27 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         int size,
         SortOrder order
     ) {
-        final Comparator<SnapshotInfo> comparator;
-        switch (sortBy) {
-            case START_TIME:
-                comparator = BY_START_TIME;
-                break;
-            case NAME:
-                comparator = BY_NAME;
-                break;
-            case DURATION:
-                comparator = BY_DURATION;
-                break;
-            case INDICES:
-                comparator = BY_INDICES_COUNT;
-                break;
-            case SHARDS:
-                comparator = BY_SHARDS_COUNT;
-                break;
-            case FAILED_SHARDS:
-                comparator = BY_FAILED_SHARDS_COUNT;
-                break;
-            case REPOSITORY:
-                comparator = BY_REPOSITORY;
-                break;
-            default:
-                throw new AssertionError("unexpected sort column [" + sortBy + "]");
-        }
+        final Comparator<SnapshotInfo> comparator = switch (sortBy) {
+            case START_TIME -> BY_START_TIME;
+            case NAME -> BY_NAME;
+            case DURATION -> BY_DURATION;
+            case INDICES -> BY_INDICES_COUNT;
+            case SHARDS -> BY_SHARDS_COUNT;
+            case FAILED_SHARDS -> BY_FAILED_SHARDS_COUNT;
+            case REPOSITORY -> BY_REPOSITORY;
+        };
 
         Stream<SnapshotInfo> infos = snapshotInfos.stream();
 
         if (after != null) {
             assert offset == 0 : "can't combine after and offset but saw [" + after + "] and offset [" + offset + "]";
-            final Predicate<SnapshotInfo> isAfter;
-            final String snapshotName = after.snapshotName();
-            final String repoName = after.repoName();
-            switch (sortBy) {
-                case START_TIME:
-                    isAfter = filterByLongOffset(SnapshotInfo::startTime, Long.parseLong(after.value()), snapshotName, repoName, order);
-                    break;
-                case NAME:
-                    isAfter = order == SortOrder.ASC
-                        ? (info -> compareName(snapshotName, repoName, info) < 0)
-                        : (info -> compareName(snapshotName, repoName, info) > 0);
-                    break;
-                case DURATION:
-                    isAfter = filterByLongOffset(
-                        info -> info.endTime() - info.startTime(),
-                        Long.parseLong(after.value()),
-                        snapshotName,
-                        repoName,
-                        order
-                    );
-                    break;
-                case INDICES:
-                    isAfter = filterByLongOffset(
-                        info -> info.indices().size(),
-                        Integer.parseInt(after.value()),
-                        snapshotName,
-                        repoName,
-                        order
-                    );
-                    break;
-                case SHARDS:
-                    isAfter = filterByLongOffset(SnapshotInfo::totalShards, Integer.parseInt(after.value()), snapshotName, repoName, order);
-                    break;
-                case FAILED_SHARDS:
-                    isAfter = filterByLongOffset(
-                        SnapshotInfo::failedShards,
-                        Integer.parseInt(after.value()),
-                        snapshotName,
-                        repoName,
-                        order
-                    );
-                    break;
-                case REPOSITORY:
-                    isAfter = order == SortOrder.ASC
-                        ? (info -> compareRepositoryName(snapshotName, repoName, info) < 0)
-                        : (info -> compareRepositoryName(snapshotName, repoName, info) > 0);
-                    break;
-                default:
-                    throw new AssertionError("unexpected sort column [" + sortBy + "]");
-            }
-            infos = infos.filter(isAfter);
+            infos = infos.filter(buildAfterPredicate(sortBy, after, order));
         }
         infos = infos.sorted(order == SortOrder.DESC ? comparator.reversed() : comparator).skip(offset);
-        final List<SnapshotInfo> allSnapshots = infos.collect(Collectors.toUnmodifiableList());
+        final List<SnapshotInfo> allSnapshots = infos.toList();
         final List<SnapshotInfo> snapshots;
         if (size != GetSnapshotsRequest.NO_LIMIT) {
-            snapshots = allSnapshots.stream().limit(size + 1).collect(Collectors.toUnmodifiableList());
+            snapshots = allSnapshots.stream().limit(size + 1).toList();
         } else {
             snapshots = allSnapshots;
         }
@@ -631,43 +613,39 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         return new SnapshotsInRepo(resultSet, snapshotInfos.size(), allSnapshots.size() - resultSet.size());
     }
 
-    private static List<SnapshotInfo> filterBySLMPolicies(List<SnapshotInfo> snapshotInfos, String[] slmPolicies) {
-        final List<String> includePatterns = new ArrayList<>();
-        final List<String> excludePatterns = new ArrayList<>();
-        boolean seenWildcard = false;
-        boolean matchNoPolicy = false;
-        for (String slmPolicy : slmPolicies) {
-            if (seenWildcard && slmPolicy.length() > 1 && slmPolicy.startsWith("-")) {
-                excludePatterns.add(slmPolicy.substring(1));
-            } else {
-                if (Regex.isSimpleMatchPattern(slmPolicy)) {
-                    seenWildcard = true;
-                } else if (GetSnapshotsRequest.NO_POLICY_PATTERN.equals(slmPolicy)) {
-                    matchNoPolicy = true;
-                }
-                includePatterns.add(slmPolicy);
-            }
-        }
-        final String[] includes = includePatterns.toArray(Strings.EMPTY_ARRAY);
-        final String[] excludes = excludePatterns.toArray(Strings.EMPTY_ARRAY);
-        final boolean matchWithoutPolicy = matchNoPolicy;
-        return snapshotInfos.stream().filter(snapshotInfo -> {
-            final Map<String, Object> metadata = snapshotInfo.userMetadata();
-            final String policy;
-            if (metadata == null) {
-                policy = null;
-            } else {
-                final Object policyFound = metadata.get(SnapshotsService.POLICY_ID_METADATA_FIELD);
-                policy = policyFound instanceof String ? (String) policyFound : null;
-            }
-            if (policy == null) {
-                return matchWithoutPolicy;
-            }
-            if (Regex.simpleMatch(includes, policy) == false) {
-                return false;
-            }
-            return excludes.length == 0 || Regex.simpleMatch(excludes, policy) == false;
-        }).collect(Collectors.toUnmodifiableList());
+    private static Predicate<SnapshotInfo> buildAfterPredicate(
+        GetSnapshotsRequest.SortBy sortBy,
+        GetSnapshotsRequest.After after,
+        SortOrder order
+    ) {
+        final String snapshotName = after.snapshotName();
+        final String repoName = after.repoName();
+        final String value = after.value();
+        return switch (sortBy) {
+            case START_TIME -> filterByLongOffset(SnapshotInfo::startTime, Long.parseLong(value), snapshotName, repoName, order);
+            case NAME ->
+                // TODO: cover via pre-flight predicate
+                order == SortOrder.ASC
+                    ? (info -> compareName(snapshotName, repoName, info) < 0)
+                    : (info -> compareName(snapshotName, repoName, info) > 0);
+            case DURATION -> filterByLongOffset(
+                info -> info.endTime() - info.startTime(),
+                Long.parseLong(value),
+                snapshotName,
+                repoName,
+                order
+            );
+            case INDICES ->
+                // TODO: cover via pre-flight predicate
+                filterByLongOffset(info -> info.indices().size(), Integer.parseInt(value), snapshotName, repoName, order);
+            case SHARDS -> filterByLongOffset(SnapshotInfo::totalShards, Integer.parseInt(value), snapshotName, repoName, order);
+            case FAILED_SHARDS -> filterByLongOffset(SnapshotInfo::failedShards, Integer.parseInt(value), snapshotName, repoName, order);
+            case REPOSITORY ->
+                // TODO: cover via pre-flight predicate
+                order == SortOrder.ASC
+                    ? (info -> compareRepositoryName(snapshotName, repoName, info) < 0)
+                    : (info -> compareRepositoryName(snapshotName, repoName, info) > 0);
+        };
     }
 
     private static Predicate<SnapshotInfo> filterByLongOffset(
@@ -679,7 +657,6 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
     ) {
         return order == SortOrder.ASC ? info -> {
             final long val = extractor.applyAsLong(info);
-
             return after < val || (after == val && compareName(snapshotName, repoName, info) < 0);
         } : info -> {
             final long val = extractor.applyAsLong(info);
@@ -703,18 +680,187 @@ public class TransportGetSnapshotsAction extends TransportMasterNodeAction<GetSn
         return repoName.compareTo(info.repository());
     }
 
-    private static final class SnapshotsInRepo {
+    /**
+     * A pair of predicates for the get snapshots action. The {@link #test(SnapshotId, RepositoryData)} predicate is applied to combinations
+     * of snapshot id and repository data to determine which snapshots to fully load from the repository and rules out all snapshots that do
+     * not match the given {@link GetSnapshotsRequest} that can be ruled out through the information in {@link RepositoryData}.
+     * The predicate returned by {@link #test(SnapshotInfo)} predicate is then applied the instances of {@link SnapshotInfo} that were
+     * loaded from the repository to filter out those remaining that did not match the request but could not be ruled out without loading
+     * their {@link SnapshotInfo}.
+     */
+    private static final class SnapshotPredicates {
 
-        private final List<SnapshotInfo> snapshotInfos;
+        private static final SnapshotPredicates MATCH_ALL = new SnapshotPredicates(null, null);
 
-        private final int totalCount;
+        @Nullable // if all snapshot IDs match
+        private final BiPredicate<SnapshotId, RepositoryData> preflightPredicate;
 
-        private final int remaining;
+        @Nullable // if all snapshots match
+        private final Predicate<SnapshotInfo> snapshotPredicate;
 
-        SnapshotsInRepo(List<SnapshotInfo> snapshotInfos, int totalCount, int remaining) {
-            this.snapshotInfos = snapshotInfos;
-            this.totalCount = totalCount;
-            this.remaining = remaining;
+        private SnapshotPredicates(
+            @Nullable BiPredicate<SnapshotId, RepositoryData> preflightPredicate,
+            @Nullable Predicate<SnapshotInfo> snapshotPredicate
+        ) {
+            this.snapshotPredicate = snapshotPredicate;
+            this.preflightPredicate = preflightPredicate;
         }
+
+        boolean test(SnapshotId snapshotId, RepositoryData repositoryData) {
+            return preflightPredicate == null || preflightPredicate.test(snapshotId, repositoryData);
+        }
+
+        boolean isMatchAll() {
+            return snapshotPredicate == null;
+        }
+
+        boolean test(SnapshotInfo snapshotInfo) {
+            return snapshotPredicate == null || snapshotPredicate.test(snapshotInfo);
+        }
+
+        private SnapshotPredicates and(SnapshotPredicates other) {
+            return this == MATCH_ALL ? other
+                : other == MATCH_ALL ? this
+                : new SnapshotPredicates(
+                    preflightPredicate == null ? other.preflightPredicate : other.preflightPredicate == null ? preflightPredicate : null,
+                    snapshotPredicate == null ? other.snapshotPredicate : other.snapshotPredicate == null ? snapshotPredicate : null
+                );
+        }
+
+        static SnapshotPredicates fromRequest(GetSnapshotsRequest request) {
+            return getSortValuePredicate(request.fromSortValue(), request.sort(), request.order()).and(
+                getSlmPredicates(request.policies())
+            );
+        }
+
+        private static SnapshotPredicates getSlmPredicates(String[] slmPolicies) {
+            if (slmPolicies.length == 0) {
+                return MATCH_ALL;
+            }
+
+            final List<String> includePatterns = new ArrayList<>();
+            final List<String> excludePatterns = new ArrayList<>();
+            boolean seenWildcard = false;
+            boolean matchNoPolicy = false;
+            for (String slmPolicy : slmPolicies) {
+                if (seenWildcard && slmPolicy.length() > 1 && slmPolicy.startsWith("-")) {
+                    excludePatterns.add(slmPolicy.substring(1));
+                } else {
+                    if (Regex.isSimpleMatchPattern(slmPolicy)) {
+                        seenWildcard = true;
+                    } else if (GetSnapshotsRequest.NO_POLICY_PATTERN.equals(slmPolicy)) {
+                        matchNoPolicy = true;
+                    }
+                    includePatterns.add(slmPolicy);
+                }
+            }
+            final String[] includes = includePatterns.toArray(Strings.EMPTY_ARRAY);
+            final String[] excludes = excludePatterns.toArray(Strings.EMPTY_ARRAY);
+            final boolean matchWithoutPolicy = matchNoPolicy;
+            return new SnapshotPredicates(((snapshotId, repositoryData) -> {
+                final RepositoryData.SnapshotDetails details = repositoryData.getSnapshotDetails(snapshotId);
+                final String policy;
+                if (details == null || (details.getSlmPolicy() == null)) {
+                    // no SLM policy recorded
+                    return true;
+                } else {
+                    final String policyFound = details.getSlmPolicy();
+                    // empty string means that snapshot was not created by an SLM policy
+                    policy = policyFound.isEmpty() ? null : policyFound;
+                }
+                return matchPolicy(includes, excludes, matchWithoutPolicy, policy);
+            }), snapshotInfo -> {
+                final Map<String, Object> metadata = snapshotInfo.userMetadata();
+                final String policy;
+                if (metadata == null) {
+                    policy = null;
+                } else {
+                    final Object policyFound = metadata.get(SnapshotsService.POLICY_ID_METADATA_FIELD);
+                    policy = policyFound instanceof String ? (String) policyFound : null;
+                }
+                return matchPolicy(includes, excludes, matchWithoutPolicy, policy);
+            });
+        }
+
+        private static boolean matchPolicy(String[] includes, String[] excludes, boolean matchWithoutPolicy, @Nullable String policy) {
+            if (policy == null) {
+                return matchWithoutPolicy;
+            }
+            if (Regex.simpleMatch(includes, policy) == false) {
+                return false;
+            }
+            return excludes.length == 0 || Regex.simpleMatch(excludes, policy) == false;
+        }
+
+        private static SnapshotPredicates getSortValuePredicate(String fromSortValue, GetSnapshotsRequest.SortBy sortBy, SortOrder order) {
+            if (fromSortValue == null) {
+                return MATCH_ALL;
+            }
+
+            switch (sortBy) {
+                case START_TIME:
+                    final long after = Long.parseLong(fromSortValue);
+                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
+                        final long startTime = getStartTime(snapshotId, repositoryData);
+                        return startTime == -1 || after <= startTime;
+                    } : (snapshotId, repositoryData) -> {
+                        final long startTime = getStartTime(snapshotId, repositoryData);
+                        return startTime == -1 || after >= startTime;
+                    }, filterByLongOffset(SnapshotInfo::startTime, after, order));
+
+                case NAME:
+                    return new SnapshotPredicates(
+                        order == SortOrder.ASC
+                            ? (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) <= 0
+                            : (snapshotId, repositoryData) -> fromSortValue.compareTo(snapshotId.getName()) >= 0,
+                        null
+                    );
+
+                case DURATION:
+                    final long afterDuration = Long.parseLong(fromSortValue);
+                    return new SnapshotPredicates(order == SortOrder.ASC ? (snapshotId, repositoryData) -> {
+                        final long duration = getDuration(snapshotId, repositoryData);
+                        return duration == -1 || afterDuration <= duration;
+                    } : (snapshotId, repositoryData) -> {
+                        final long duration = getDuration(snapshotId, repositoryData);
+                        return duration == -1 || afterDuration >= duration;
+                    }, filterByLongOffset(info -> info.endTime() - info.startTime(), afterDuration, order));
+
+                case INDICES:
+                    final int afterIndexCount = Integer.parseInt(fromSortValue);
+                    return new SnapshotPredicates(
+                        order == SortOrder.ASC
+                            ? (snapshotId, repositoryData) -> afterIndexCount <= indexCount(snapshotId, repositoryData)
+                            : (snapshotId, repositoryData) -> afterIndexCount >= indexCount(snapshotId, repositoryData),
+                        null
+                    );
+
+                case REPOSITORY:
+                    // already handled in #maybeFilterRepositories
+                    return MATCH_ALL;
+
+                case SHARDS:
+                    return new SnapshotPredicates(
+                        null,
+                        filterByLongOffset(SnapshotInfo::totalShards, Integer.parseInt(fromSortValue), order)
+                    );
+                case FAILED_SHARDS:
+                    return new SnapshotPredicates(
+                        null,
+                        filterByLongOffset(SnapshotInfo::failedShards, Integer.parseInt(fromSortValue), order)
+                    );
+                default:
+                    throw new AssertionError("unexpected sort column [" + sortBy + "]");
+            }
+        }
+
+        private static Predicate<SnapshotInfo> filterByLongOffset(ToLongFunction<SnapshotInfo> extractor, long after, SortOrder order) {
+            return order == SortOrder.ASC ? info -> after <= extractor.applyAsLong(info) : info -> after >= extractor.applyAsLong(info);
+        }
+
+    }
+
+    private record SnapshotsInRepo(List<SnapshotInfo> snapshotInfos, int totalCount, int remaining) {
+
     }
 }
