@@ -8,10 +8,8 @@
 
 package org.elasticsearch.cluster.metadata;
 
-import com.carrotsearch.hppc.cursors.IntObjectCursor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
@@ -32,30 +30,37 @@ import org.elasticsearch.action.support.ActiveShardsObserver;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.action.support.master.ShardsAcknowledgedResponse;
 import org.elasticsearch.action.support.replication.ReplicationResponse;
-import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.cluster.AckedClusterStateUpdateTask;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateUpdateTask;
+import org.elasticsearch.cluster.ClusterStateAckListener;
+import org.elasticsearch.cluster.ClusterStateTaskConfig;
+import org.elasticsearch.cluster.ClusterStateTaskExecutor;
+import org.elasticsearch.cluster.ClusterStateTaskListener;
+import org.elasticsearch.cluster.SimpleBatchedExecutor;
 import org.elasticsearch.cluster.block.ClusterBlock;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.block.ClusterBlocks;
 import org.elasticsearch.cluster.metadata.IndexMetadata.APIBlock;
+import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
 import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.routing.allocation.AllocationService;
+import org.elasticsearch.cluster.routing.allocation.allocator.AllocationActionMultiListener;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.collect.ImmutableOpenIntMap;
-import org.elasticsearch.core.Tuple;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.concurrent.CountDown;
+import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.SuppressForbidden;
+import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.shard.IndexLongFieldRange;
@@ -71,7 +76,6 @@ import org.elasticsearch.threadpool.ThreadPool;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -83,8 +87,8 @@ import java.util.SortedMap;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.singleton;
-import static java.util.Collections.unmodifiableMap;
+import static java.util.stream.Collectors.joining;
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * Service responsible for submitting open/close index requests as well as for adding index blocks
@@ -93,33 +97,57 @@ public class MetadataIndexStateService {
     private static final Logger logger = LogManager.getLogger(MetadataIndexStateService.class);
 
     public static final int INDEX_CLOSED_BLOCK_ID = 4;
-    public static final ClusterBlock INDEX_CLOSED_BLOCK = new ClusterBlock(4, "index closed", false,
-        false, false, RestStatus.FORBIDDEN, ClusterBlockLevel.READ_WRITE);
-    public static final Setting<Boolean> VERIFIED_BEFORE_CLOSE_SETTING =
-        Setting.boolSetting("index.verified_before_close", false, Setting.Property.IndexScope, Setting.Property.PrivateIndex);
+    public static final ClusterBlock INDEX_CLOSED_BLOCK = new ClusterBlock(
+        4,
+        "index closed",
+        false,
+        false,
+        false,
+        RestStatus.FORBIDDEN,
+        ClusterBlockLevel.READ_WRITE
+    );
+    public static final Setting<Boolean> VERIFIED_BEFORE_CLOSE_SETTING = Setting.boolSetting(
+        "index.verified_before_close",
+        false,
+        Setting.Property.IndexScope,
+        Setting.Property.PrivateIndex
+    );
 
     private final ClusterService clusterService;
     private final AllocationService allocationService;
     private final IndexMetadataVerifier indexMetadataVerifier;
     private final IndicesService indicesService;
     private final ShardLimitValidator shardLimitValidator;
-    private final ThreadPool threadPool;
     private final NodeClient client;
-    private final ActiveShardsObserver activeShardsObserver;
+    private final ThreadPool threadPool;
+    private final ClusterStateTaskExecutor<OpenIndicesTask> opensExecutor;
+    private final ClusterStateTaskExecutor<AddBlocksToCloseTask> addBlocksToCloseExecutor;
+    private final ClusterStateTaskExecutor<CloseIndicesTask> closesExecutor;
+    private final ClusterStateTaskExecutor<AddBlocksTask> addBlocksExecutor;
+    private final ClusterStateTaskExecutor<FinalizeBlocksTask> finalizeBlocksExecutor;
 
     @Inject
-    public MetadataIndexStateService(ClusterService clusterService, AllocationService allocationService,
-                                     IndexMetadataVerifier indexMetadataVerifier,
-                                     IndicesService indicesService, ShardLimitValidator shardLimitValidator,
-                                     NodeClient client, ThreadPool threadPool) {
-        this.indicesService = indicesService;
+    public MetadataIndexStateService(
+        ClusterService clusterService,
+        AllocationService allocationService,
+        IndexMetadataVerifier indexMetadataVerifier,
+        IndicesService indicesService,
+        ShardLimitValidator shardLimitValidator,
+        NodeClient client,
+        ThreadPool threadPool
+    ) {
         this.clusterService = clusterService;
         this.allocationService = allocationService;
-        this.threadPool = threadPool;
-        this.client = client;
         this.indexMetadataVerifier = indexMetadataVerifier;
+        this.indicesService = indicesService;
         this.shardLimitValidator = shardLimitValidator;
-        this.activeShardsObserver = new ActiveShardsObserver(clusterService, threadPool);
+        this.client = client;
+        this.threadPool = threadPool;
+        this.opensExecutor = new OpenIndicesExecutor();
+        this.addBlocksToCloseExecutor = new AddBlocksToCloseExecutor();
+        this.closesExecutor = new CloseIndicesExecutor();
+        this.addBlocksExecutor = new AddBlocksExecutor();
+        this.finalizeBlocksExecutor = new FinalizeBlocksExecutor();
     }
 
     /**
@@ -129,89 +157,137 @@ public class MetadataIndexStateService {
      * to be terminated and finally closes the indices by moving their state to CLOSE.
      */
     public void closeIndices(final CloseIndexClusterStateUpdateRequest request, final ActionListener<CloseIndexResponse> listener) {
-        final Index[] concreteIndices = request.indices();
-        if (concreteIndices == null || concreteIndices.length == 0) {
+        if (request.indices() == null || request.indices().length == 0) {
             throw new IllegalArgumentException("Index name is required");
         }
 
-        clusterService.submitStateUpdateTask("add-block-index-to-close " + Arrays.toString(concreteIndices),
-            new ClusterStateUpdateTask(Priority.URGENT, request.masterNodeTimeout()) {
+        clusterService.submitStateUpdateTask(
+            "add-block-index-to-close " + Arrays.toString(request.indices()),
+            new AddBlocksToCloseTask(request, listener),
+            ClusterStateTaskConfig.build(Priority.URGENT, request.masterNodeTimeout()),
+            this.addBlocksToCloseExecutor
+        );
+    }
 
-                private final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
+    private class AddBlocksToCloseExecutor extends SimpleBatchedExecutor<AddBlocksToCloseTask, Map<Index, ClusterBlock>> {
 
-                @Override
-                public ClusterState execute(final ClusterState currentState) {
-                    return addIndexClosedBlocks(concreteIndices, blockedIndices, currentState);
-                }
+        @Override
+        public Tuple<ClusterState, Map<Index, ClusterBlock>> executeTask(AddBlocksToCloseTask task, ClusterState clusterState)
+            throws Exception {
+            final Map<Index, ClusterBlock> blockedIndices = new HashMap<>(task.request.indices().length);
+            var updatedClusterState = addIndexClosedBlocks(task.request.indices(), blockedIndices, clusterState);
+            return Tuple.tuple(updatedClusterState, blockedIndices);
+        }
 
-                @Override
-                public void clusterStateProcessed(final String source, final ClusterState oldState, final ClusterState newState) {
-                    if (oldState == newState) {
-                        assert blockedIndices.isEmpty() : "List of blocked indices is not empty but cluster state wasn't changed";
-                        listener.onResponse(new CloseIndexResponse(true, false, Collections.emptyList()));
-                    } else {
-                        assert blockedIndices.isEmpty() == false : "List of blocked indices is empty but cluster state was changed";
-                        threadPool.executor(ThreadPool.Names.MANAGEMENT)
-                            .execute(new WaitForClosedBlocksApplied(blockedIndices, request,
-                                ActionListener.wrap(verifyResults ->
-                                    clusterService.submitStateUpdateTask("close-indices", new ClusterStateUpdateTask(Priority.URGENT) {
-                                        private final List<IndexResult> indices = new ArrayList<>();
+        @Override
+        public void taskSucceeded(AddBlocksToCloseTask task, Map<Index, ClusterBlock> blockedIndices) {
+            if (blockedIndices.isEmpty()) {
+                task.listener().onResponse(CloseIndexResponse.EMPTY);
+            } else {
+                threadPool.executor(ThreadPool.Names.MANAGEMENT)
+                    .execute(
+                        new WaitForClosedBlocksApplied(
+                            blockedIndices,
+                            task.request,
+                            task.listener().delegateFailure((delegate2, verifyResults) -> {
+                                clusterService.submitStateUpdateTask(
+                                    "close-indices",
+                                    new CloseIndicesTask(task.request, blockedIndices, verifyResults, delegate2),
+                                    ClusterStateTaskConfig.build(Priority.URGENT),
+                                    closesExecutor
+                                );
+                            })
+                        )
+                    );
+            }
+        }
+    }
 
-                                        @Override
-                                        public ClusterState execute(final ClusterState currentState) throws Exception {
-                                            Tuple<ClusterState, Collection<IndexResult>> closingResult =
-                                                closeRoutingTable(currentState, blockedIndices, verifyResults);
-                                            assert verifyResults.size() == closingResult.v2().size();
-                                            indices.addAll(closingResult.v2());
-                                            return allocationService.reroute(closingResult.v1(), "indices closed");
-                                        }
+    private record AddBlocksToCloseTask(CloseIndexClusterStateUpdateRequest request, ActionListener<CloseIndexResponse> listener)
+        implements
+            ClusterStateTaskListener {
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
+    }
 
-                                        @Override
-                                        public void onFailure(final String source, final Exception e) {
-                                            listener.onFailure(e);
-                                        }
+    private class CloseIndicesExecutor implements ClusterStateTaskExecutor<CloseIndicesTask> {
 
-                                        @Override
-                                        public void clusterStateProcessed(final String source,
-                                                                          final ClusterState oldState, final ClusterState newState) {
+        @Override
+        @SuppressForbidden(reason = "consuming published cluster state for legacy reasons")
+        public ClusterState execute(BatchExecutionContext<CloseIndicesTask> batchExecutionContext) {
+            var listener = new AllocationActionMultiListener<CloseIndexResponse>(threadPool.getThreadContext());
+            var state = batchExecutionContext.initialState();
+            for (final var taskContext : batchExecutionContext.taskContexts()) {
+                final var task = taskContext.getTask();
+                try {
+                    final Tuple<ClusterState, List<IndexResult>> closingResult = closeRoutingTable(
+                        state,
+                        task.blockedIndices,
+                        task.verifyResults
+                    );
+                    state = closingResult.v1();
+                    final List<IndexResult> indices = closingResult.v2();
+                    assert indices.size() == task.verifyResults.size();
 
-                                            final boolean acknowledged = indices.stream().noneMatch(IndexResult::hasFailures);
-                                            final String[] waitForIndices = indices.stream()
-                                                .filter(result -> result.hasFailures() == false)
-                                                .filter(result -> newState.routingTable().hasIndex(result.getIndex()))
-                                                .map(result -> result.getIndex().getName())
-                                                .toArray(String[]::new);
+                    taskContext.success(clusterState -> {
+                        final boolean acknowledged = indices.stream().noneMatch(IndexResult::hasFailures);
+                        final String[] waitForIndices = indices.stream()
+                            .filter(result -> result.hasFailures() == false)
+                            .filter(result -> clusterState.routingTable().hasIndex(result.getIndex()))
+                            .map(result -> result.getIndex().getName())
+                            .toArray(String[]::new);
 
-                                            if (waitForIndices.length > 0) {
-                                                activeShardsObserver.waitForActiveShards(waitForIndices, request.waitForActiveShards(),
-                                                    request.ackTimeout(), shardsAcknowledged -> {
-                                                        if (shardsAcknowledged == false) {
-                                                            logger.debug("[{}] indices closed, but the operation timed out while waiting " +
-                                                                "for enough shards to be started.", Arrays.toString(waitForIndices));
-                                                        }
-                                                        // acknowledged maybe be false but some indices may have been correctly closed, so
-                                                        // we maintain a kind of coherency by overriding the shardsAcknowledged value
-                                                        // (see ShardsAcknowledgedResponse constructor)
-                                                        boolean shardsAcked = acknowledged ? shardsAcknowledged : false;
-                                                        listener.onResponse(new CloseIndexResponse(acknowledged, shardsAcked, indices));
-                                                    }, listener::onFailure);
-                                            } else {
-                                                listener.onResponse(new CloseIndexResponse(acknowledged, false, indices));
-                                            }
-                                        }
-                                    }),
-                                    listener::onFailure)
-                                )
+                        if (waitForIndices.length > 0) {
+                            ActiveShardsObserver.waitForActiveShards(
+                                clusterService,
+                                waitForIndices,
+                                task.request.waitForActiveShards(),
+                                task.request.ackTimeout(),
+                                listener.delay(task.listener()).map(shardsAcknowledged -> {
+                                    if (shardsAcknowledged == false) {
+                                        logger.debug(
+                                            () -> format(
+                                                "[%s] indices closed, but the operation timed out while "
+                                                    + "waiting for enough shards to be started.",
+                                                Arrays.toString(waitForIndices)
+                                            )
+                                        );
+                                    }
+                                    // acknowledged maybe be false but some indices may have been correctly closed,
+                                    // so we maintain a kind of coherency by overriding the shardsAcknowledged value
+                                    // (see ShardsAcknowledgedResponse constructor)
+                                    boolean shardsAcked = acknowledged ? shardsAcknowledged : false;
+                                    return new CloseIndexResponse(acknowledged, shardsAcked, indices);
+                                })
                             );
-                    }
-                }
-
-                @Override
-                public void onFailure(final String source, final Exception e) {
-                    listener.onFailure(e);
+                        } else {
+                            listener.delay(task.listener()).onResponse(new CloseIndexResponse(acknowledged, false, indices));
+                        }
+                    });
+                } catch (Exception e) {
+                    taskContext.onFailure(e);
                 }
             }
-        );
+
+            try (var ignored = batchExecutionContext.dropHeadersContext()) {
+                // reroute may encounter deprecated features but the resulting warnings are not associated with any particular task
+                return allocationService.reroute(state, "indices closed", listener.reroute());
+            }
+        }
+    }
+
+    private record CloseIndicesTask(
+        CloseIndexClusterStateUpdateRequest request,
+        Map<Index, ClusterBlock> blockedIndices,
+        Map<Index, CloseIndexResponse.IndexResult> verifyResults,
+        ActionListener<CloseIndexResponse> listener
+    ) implements ClusterStateTaskListener {
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
     }
 
     /**
@@ -221,13 +297,14 @@ public class MetadataIndexStateService {
      * block (or reuses an existing one) to every index to close in the cluster state. After the cluster state is published, the shards
      * should start to reject writing operations and we can proceed with step 2.
      */
-    static ClusterState addIndexClosedBlocks(final Index[] indices, final Map<Index, ClusterBlock> blockedIndices,
-                                             final ClusterState currentState) {
-        final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
-
+    static ClusterState addIndexClosedBlocks(
+        final Index[] indices,
+        final Map<Index, ClusterBlock> blockedIndices,
+        final ClusterState currentState
+    ) {
         final Set<Index> indicesToClose = new HashSet<>();
         for (Index index : indices) {
-            final IndexMetadata indexMetadata = metadata.getSafe(index);
+            final IndexMetadata indexMetadata = currentState.metadata().getIndexSafe(index);
             if (indexMetadata.getState() != IndexMetadata.State.CLOSE) {
                 indicesToClose.add(index);
             } else {
@@ -249,12 +326,14 @@ public class MetadataIndexStateService {
         // Check if index closing conflicts with any running snapshots
         Set<Index> snapshottingIndices = SnapshotsService.snapshottingIndices(currentState, indicesToClose);
         if (snapshottingIndices.isEmpty() == false) {
-            throw new SnapshotInProgressException("Cannot close indices that are being snapshotted: " + snapshottingIndices +
-                ". Try again after snapshot finishes or cancel the currently running snapshot.");
+            throw new SnapshotInProgressException(
+                "Cannot close indices that are being snapshotted: "
+                    + snapshottingIndices
+                    + ". Try again after snapshot finishes or cancel the currently running snapshot."
+            );
         }
 
-        final ClusterBlocks.Builder blocks = ClusterBlocks.builder().blocks(currentState.blocks());
-        final RoutingTable.Builder routingTable = RoutingTable.builder(currentState.routingTable());
+        final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
 
         for (Index index : indicesToClose) {
             ClusterBlock indexBlock = null;
@@ -277,9 +356,8 @@ public class MetadataIndexStateService {
             blockedIndices.put(index, indexBlock);
         }
 
-        logger.info(() -> new ParameterizedMessage("closing indices {}",
-            blockedIndices.keySet().stream().map(Object::toString).collect(Collectors.joining(","))));
-        return ClusterState.builder(currentState).blocks(blocks).metadata(metadata).routingTable(routingTable.build()).build();
+        logger.info(() -> format("closing indices %s", blockedIndices.keySet().stream().map(Object::toString).collect(joining(","))));
+        return ClusterState.builder(currentState).blocks(blocks).build();
     }
 
     /**
@@ -290,8 +368,11 @@ public class MetadataIndexStateService {
      * @param block The type of block to add
      * @return a tuple of the updated cluster state, as well as the blocks that got added
      */
-    static Tuple<ClusterState, Map<Index, ClusterBlock>> addIndexBlock(final Index[] indices, final ClusterState currentState,
-                                                                       final APIBlock block) {
+    private static Tuple<ClusterState, Map<Index, ClusterBlock>> addIndexBlock(
+        final Index[] indices,
+        final ClusterState currentState,
+        final APIBlock block
+    ) {
         final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
 
         final Set<Index> indicesToAddBlock = new HashSet<>();
@@ -305,11 +386,10 @@ public class MetadataIndexStateService {
         }
 
         if (indicesToAddBlock.isEmpty()) {
-            return Tuple.tuple(currentState, Collections.emptyMap());
+            return Tuple.tuple(currentState, Map.of());
         }
 
-        final ClusterBlocks.Builder blocks = ClusterBlocks.builder().blocks(currentState.blocks());
-        final RoutingTable.Builder routingTable = RoutingTable.builder(currentState.routingTable());
+        final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
         final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
 
         for (Index index : indicesToAddBlock) {
@@ -334,19 +414,20 @@ public class MetadataIndexStateService {
             // update index settings as well to match the block
             final IndexMetadata indexMetadata = metadata.getSafe(index);
             if (block.setting().get(indexMetadata.getSettings()) == false) {
-                final Settings updatedSettings = Settings.builder()
-                    .put(indexMetadata.getSettings()).put(block.settingName(), true).build();
+                final Settings updatedSettings = Settings.builder().put(indexMetadata.getSettings()).put(block.settingName(), true).build();
 
-                metadata.put(IndexMetadata.builder(indexMetadata)
-                    .settings(updatedSettings)
-                    .settingsVersion(indexMetadata.getSettingsVersion() + 1));
+                metadata.put(
+                    IndexMetadata.builder(indexMetadata).settings(updatedSettings).settingsVersion(indexMetadata.getSettingsVersion() + 1)
+                );
             }
         }
 
-        logger.info("adding block {} to indices {}", block.name,
-            blockedIndices.keySet().stream().map(Object::toString).collect(Collectors.toList()));
-        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).metadata(metadata)
-                .routingTable(routingTable.build()).build(), blockedIndices);
+        logger.info(
+            "adding [index.blocks.{}] block to indices {}",
+            block.name,
+            blockedIndices.keySet().stream().map(Object::toString).toList()
+        );
+        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).metadata(metadata).build(), blockedIndices);
     }
 
     /**
@@ -361,90 +442,115 @@ public class MetadataIndexStateService {
      * Using this three-step process ensures non-interference by other operations in case where
      * we notify successful completion here.
      */
-    public void addIndexBlock(AddIndexBlockClusterStateUpdateRequest request,
-                              ActionListener<AddIndexBlockResponse> listener) {
+    public void addIndexBlock(AddIndexBlockClusterStateUpdateRequest request, ActionListener<AddIndexBlockResponse> listener) {
         final Index[] concreteIndices = request.indices();
         if (concreteIndices == null || concreteIndices.length == 0) {
             throw new IllegalArgumentException("Index name is required");
         }
+        Metadata metadata = clusterService.state().metadata();
         List<String> writeIndices = new ArrayList<>();
-        SortedMap<String, IndexAbstraction> lookup = clusterService.state().metadata().getIndicesLookup();
+        SortedMap<String, IndexAbstraction> lookup = metadata.getIndicesLookup();
         for (Index index : concreteIndices) {
             IndexAbstraction ia = lookup.get(index.getName());
-            if (ia != null && ia.getParentDataStream() != null && ia.getParentDataStream().getWriteIndex().getIndex().equals(index)) {
-                writeIndices.add(index.getName());
+            if (ia != null && ia.getParentDataStream() != null) {
+                Index writeIndex = metadata.index(ia.getParentDataStream().getWriteIndex()).getIndex();
+                if (writeIndex.equals(index)) {
+                    writeIndices.add(index.getName());
+                }
             }
         }
         if (writeIndices.size() > 0) {
-            throw new IllegalArgumentException("cannot add a block to the following data stream write indices [" +
-                Strings.collectionToCommaDelimitedString(writeIndices) + "]");
+            throw new IllegalArgumentException(
+                "cannot add a block to the following data stream write indices ["
+                    + Strings.collectionToCommaDelimitedString(writeIndices)
+                    + "]"
+            );
         }
 
-        clusterService.submitStateUpdateTask("add-index-block-[" + request.getBlock().name + "]-" + Arrays.toString(concreteIndices),
-            new ClusterStateUpdateTask(Priority.URGENT, request.masterNodeTimeout()) {
-
-                private Map<Index, ClusterBlock> blockedIndices;
-
-                @Override
-                public ClusterState execute(final ClusterState currentState) {
-                    final Tuple<ClusterState, Map<Index, ClusterBlock>> tup =
-                        addIndexBlock(concreteIndices, currentState, request.getBlock());
-                    blockedIndices = tup.v2();
-                    return tup.v1();
-                }
-
-                @Override
-                public void clusterStateProcessed(final String source, final ClusterState oldState, final ClusterState newState) {
-                    if (oldState == newState) {
-                        assert blockedIndices.isEmpty() : "List of blocked indices is not empty but cluster state wasn't changed";
-                        listener.onResponse(new AddIndexBlockResponse(true, false, Collections.emptyList()));
-                    } else {
-                        assert blockedIndices.isEmpty() == false : "List of blocked indices is empty but cluster state was changed";
-                        threadPool.executor(ThreadPool.Names.MANAGEMENT)
-                            .execute(new WaitForBlocksApplied(blockedIndices, request,
-                                    ActionListener.wrap(verifyResults ->
-                                            clusterService.submitStateUpdateTask("finalize-index-block-[" + request.getBlock().name +
-                                                    "]-[" + blockedIndices.keySet().stream().map(Index::getName)
-                                                        .collect(Collectors.joining(", ")) + "]",
-                                                new ClusterStateUpdateTask(Priority.URGENT) {
-                                                private final List<AddBlockResult> indices = new ArrayList<>();
-
-                                                @Override
-                                                public ClusterState execute(final ClusterState currentState) throws Exception {
-                                                    Tuple<ClusterState, Collection<AddBlockResult>> addBlockResult =
-                                                        finalizeBlock(currentState, blockedIndices, verifyResults, request.getBlock());
-                                                    assert verifyResults.size() == addBlockResult.v2().size();
-                                                    indices.addAll(addBlockResult.v2());
-                                                    return addBlockResult.v1();
-                                                }
-
-                                                @Override
-                                                public void onFailure(final String source, final Exception e) {
-                                                    listener.onFailure(e);
-                                                }
-
-                                                @Override
-                                                public void clusterStateProcessed(final String source,
-                                                                                  final ClusterState oldState,
-                                                                                  final ClusterState newState) {
-
-                                                    final boolean acknowledged = indices.stream().noneMatch(
-                                                        AddBlockResult::hasFailures);
-                                                    listener.onResponse(new AddIndexBlockResponse(acknowledged, acknowledged, indices));
-                                                }
-                                            }),
-                                        listener::onFailure)
-                                )
-                            );
-                    }
-                }
-
-                @Override
-                public void onFailure(final String source, final Exception e) {
-                    listener.onFailure(e);
-                }
-            }
+        clusterService.submitStateUpdateTask(
+            "add-index-block-[" + request.getBlock().name + "]-" + Arrays.toString(concreteIndices),
+            new AddBlocksTask(request, listener),
+            ClusterStateTaskConfig.build(Priority.URGENT, request.masterNodeTimeout()),
+            addBlocksExecutor
         );
+    }
+
+    private class AddBlocksExecutor extends SimpleBatchedExecutor<AddBlocksTask, Map<Index, ClusterBlock>> {
+
+        @Override
+        public Tuple<ClusterState, Map<Index, ClusterBlock>> executeTask(AddBlocksTask task, ClusterState clusterState) {
+            return addIndexBlock(task.request.indices(), clusterState, task.request.getBlock());
+        }
+
+        @Override
+        public void taskSucceeded(AddBlocksTask task, Map<Index, ClusterBlock> blockedIndices) {
+            if (blockedIndices.isEmpty()) {
+                task.listener().onResponse(AddIndexBlockResponse.EMPTY);
+            } else {
+                threadPool.executor(ThreadPool.Names.MANAGEMENT)
+                    .execute(
+                        new WaitForBlocksApplied(
+                            blockedIndices,
+                            task.request,
+                            task.listener().delegateFailure((delegate2, verifyResults) -> {
+                                clusterService.submitStateUpdateTask(
+                                    "finalize-index-block-["
+                                        + task.request.getBlock().name
+                                        + "]-["
+                                        + blockedIndices.keySet().stream().map(Index::getName).collect(Collectors.joining(", "))
+                                        + "]",
+                                    new FinalizeBlocksTask(task.request, blockedIndices, verifyResults, delegate2),
+                                    ClusterStateTaskConfig.build(Priority.URGENT),
+                                    finalizeBlocksExecutor
+                                );
+                            })
+                        )
+                    );
+            }
+        }
+    }
+
+    private record AddBlocksTask(AddIndexBlockClusterStateUpdateRequest request, ActionListener<AddIndexBlockResponse> listener)
+        implements
+            ClusterStateTaskListener {
+
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
+    }
+
+    private static class FinalizeBlocksExecutor extends SimpleBatchedExecutor<FinalizeBlocksTask, List<AddBlockResult>> {
+
+        @Override
+        public Tuple<ClusterState, List<AddBlockResult>> executeTask(FinalizeBlocksTask task, ClusterState clusterState) throws Exception {
+            final Tuple<ClusterState, List<AddBlockResult>> finalizeResult = finalizeBlock(
+                clusterState,
+                task.blockedIndices,
+                task.verifyResults,
+                task.request.getBlock()
+            );
+            assert finalizeResult.v2().size() == task.verifyResults.size();
+            return finalizeResult;
+        }
+
+        @Override
+        public void taskSucceeded(FinalizeBlocksTask task, List<AddBlockResult> indices) {
+            final boolean acknowledged = indices.stream().noneMatch(AddBlockResult::hasFailures);
+            task.listener().onResponse(new AddIndexBlockResponse(acknowledged, acknowledged, indices));
+        }
+    }
+
+    private record FinalizeBlocksTask(
+        AddIndexBlockClusterStateUpdateRequest request,
+        Map<Index, ClusterBlock> blockedIndices,
+        Map<Index, AddBlockResult> verifyResults,
+        ActionListener<AddIndexBlockResponse> listener
+    ) implements ClusterStateTaskListener {
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
     }
 
     /**
@@ -454,15 +560,17 @@ public class MetadataIndexStateService {
      * this action succeed then the shard is considered to be ready for closing. When all shards of a given index are ready for closing,
      * the index is considered ready to be closed.
      */
-    class WaitForClosedBlocksApplied extends ActionRunnable<Map<Index, IndexResult>> {
+    private class WaitForClosedBlocksApplied extends ActionRunnable<Map<Index, IndexResult>> {
 
         private final Map<Index, ClusterBlock> blockedIndices;
         private final CloseIndexClusterStateUpdateRequest request;
 
-        private WaitForClosedBlocksApplied(final Map<Index, ClusterBlock> blockedIndices,
-                                           final CloseIndexClusterStateUpdateRequest request,
-                                           final ActionListener<Map<Index, IndexResult>> listener) {
-                super(listener);
+        private WaitForClosedBlocksApplied(
+            final Map<Index, ClusterBlock> blockedIndices,
+            final CloseIndexClusterStateUpdateRequest request,
+            final ActionListener<Map<Index, IndexResult>> listener
+        ) {
+            super(listener);
             if (blockedIndices == null || blockedIndices.isEmpty()) {
                 throw new IllegalArgumentException("Cannot wait for closed blocks to be applied, list of blocked indices is empty or null");
             }
@@ -479,16 +587,18 @@ public class MetadataIndexStateService {
                 waitForShardsReadyForClosing(index, block, state, response -> {
                     results.put(index, response);
                     if (countDown.countDown()) {
-                        listener.onResponse(unmodifiableMap(results));
+                        listener.onResponse(Map.copyOf(results));
                     }
                 });
             });
         }
 
-        private void waitForShardsReadyForClosing(final Index index,
-                                                  final ClusterBlock closingBlock,
-                                                  final ClusterState state,
-                                                  final Consumer<IndexResult> onResponse) {
+        private void waitForShardsReadyForClosing(
+            final Index index,
+            final ClusterBlock closingBlock,
+            final ClusterState state,
+            final Consumer<IndexResult> onResponse
+        ) {
             final IndexMetadata indexMetadata = state.metadata().index(index);
             if (indexMetadata == null) {
                 logger.debug("index {} has been blocked before closing and is now deleted, ignoring", index);
@@ -503,14 +613,13 @@ public class MetadataIndexStateService {
                 return;
             }
 
-            final ImmutableOpenIntMap<IndexShardRoutingTable> shards = indexRoutingTable.getShards();
-            final AtomicArray<ShardResult> results = new AtomicArray<>(shards.size());
-            final CountDown countDown = new CountDown(shards.size());
+            final AtomicArray<ShardResult> results = new AtomicArray<>(indexRoutingTable.size());
+            final CountDown countDown = new CountDown(indexRoutingTable.size());
 
-            for (IntObjectCursor<IndexShardRoutingTable> shard : shards) {
-                final IndexShardRoutingTable shardRoutingTable = shard.value;
+            for (int i = 0; i < indexRoutingTable.size(); i++) {
+                IndexShardRoutingTable shardRoutingTable = indexRoutingTable.shard(i);
                 final int shardId = shardRoutingTable.shardId().id();
-                sendVerifyShardBeforeCloseRequest(shardRoutingTable, closingBlock, new NotifyOnceListener<ReplicationResponse>() {
+                sendVerifyShardBeforeCloseRequest(shardRoutingTable, closingBlock, new NotifyOnceListener<>() {
                     @Override
                     public void innerOnResponse(final ReplicationResponse replicationResponse) {
                         ShardResult.Failure[] failures = Arrays.stream(replicationResponse.getShardInfo().getFailures())
@@ -523,7 +632,7 @@ public class MetadataIndexStateService {
                     @Override
                     public void innerOnFailure(final Exception e) {
                         ShardResult.Failure failure = new ShardResult.Failure(index.getName(), shardId, e);
-                        results.setOnce(shardId, new ShardResult(shardId, new ShardResult.Failure[]{failure}));
+                        results.setOnce(shardId, new ShardResult(shardId, new ShardResult.Failure[] { failure }));
                         processIfFinished();
                     }
 
@@ -536,9 +645,11 @@ public class MetadataIndexStateService {
             }
         }
 
-        private void sendVerifyShardBeforeCloseRequest(final IndexShardRoutingTable shardRoutingTable,
-                                                       final ClusterBlock closingBlock,
-                                                       final ActionListener<ReplicationResponse> listener) {
+        private void sendVerifyShardBeforeCloseRequest(
+            final IndexShardRoutingTable shardRoutingTable,
+            final ClusterBlock closingBlock,
+            final ActionListener<ReplicationResponse> listener
+        ) {
             final ShardId shardId = shardRoutingTable.shardId();
             if (shardRoutingTable.primaryShard().unassigned()) {
                 logger.debug("primary shard {} is unassigned, ignoring", shardId);
@@ -548,20 +659,31 @@ public class MetadataIndexStateService {
                 return;
             }
             final TaskId parentTaskId = new TaskId(clusterService.localNode().getId(), request.taskId());
-            final TransportVerifyShardBeforeCloseAction.ShardRequest shardRequest =
-                new TransportVerifyShardBeforeCloseAction.ShardRequest(shardId, closingBlock, true, parentTaskId);
+            final TransportVerifyShardBeforeCloseAction.ShardRequest shardRequest = new TransportVerifyShardBeforeCloseAction.ShardRequest(
+                shardId,
+                closingBlock,
+                true,
+                parentTaskId
+            );
             if (request.ackTimeout() != null) {
                 shardRequest.timeout(request.ackTimeout());
             }
-            client.executeLocally(TransportVerifyShardBeforeCloseAction.TYPE, shardRequest,
-                    listener.delegateFailure((delegate, replicationResponse) -> {
-                        final TransportVerifyShardBeforeCloseAction.ShardRequest req =
-                                new TransportVerifyShardBeforeCloseAction.ShardRequest(shardId, closingBlock, false, parentTaskId);
-                        if (request.ackTimeout() != null) {
-                            req.timeout(request.ackTimeout());
-                        }
-                        client.executeLocally(TransportVerifyShardBeforeCloseAction.TYPE, req, delegate);
-                    }));
+            client.executeLocally(
+                TransportVerifyShardBeforeCloseAction.TYPE,
+                shardRequest,
+                listener.delegateFailure((delegate, replicationResponse) -> {
+                    final TransportVerifyShardBeforeCloseAction.ShardRequest req = new TransportVerifyShardBeforeCloseAction.ShardRequest(
+                        shardId,
+                        closingBlock,
+                        false,
+                        parentTaskId
+                    );
+                    if (request.ackTimeout() != null) {
+                        req.timeout(request.ackTimeout());
+                    }
+                    client.executeLocally(TransportVerifyShardBeforeCloseAction.TYPE, req, delegate);
+                })
+            );
         }
     }
 
@@ -569,14 +691,16 @@ public class MetadataIndexStateService {
      * Helper class that coordinates with shards to ensure that blocks have been properly applied to all shards using
      * {@link TransportVerifyShardIndexBlockAction}.
      */
-    class WaitForBlocksApplied extends ActionRunnable<Map<Index, AddBlockResult>> {
+    private class WaitForBlocksApplied extends ActionRunnable<Map<Index, AddBlockResult>> {
 
         private final Map<Index, ClusterBlock> blockedIndices;
         private final AddIndexBlockClusterStateUpdateRequest request;
 
-        private WaitForBlocksApplied(final Map<Index, ClusterBlock> blockedIndices,
-                                     final AddIndexBlockClusterStateUpdateRequest request,
-                                     final ActionListener<Map<Index, AddBlockResult>> listener) {
+        private WaitForBlocksApplied(
+            final Map<Index, ClusterBlock> blockedIndices,
+            final AddIndexBlockClusterStateUpdateRequest request,
+            final ActionListener<Map<Index, AddBlockResult>> listener
+        ) {
             super(listener);
             if (blockedIndices == null || blockedIndices.isEmpty()) {
                 throw new IllegalArgumentException("Cannot wait for blocks to be applied, list of blocked indices is empty or null");
@@ -594,16 +718,18 @@ public class MetadataIndexStateService {
                 waitForShardsReady(index, block, state, response -> {
                     results.put(index, response);
                     if (countDown.countDown()) {
-                        listener.onResponse(unmodifiableMap(results));
+                        listener.onResponse(Map.copyOf(results));
                     }
                 });
             });
         }
 
-        private void waitForShardsReady(final Index index,
-                                        final ClusterBlock clusterBlock,
-                                        final ClusterState state,
-                                        final Consumer<AddBlockResult> onResponse) {
+        private void waitForShardsReady(
+            final Index index,
+            final ClusterBlock clusterBlock,
+            final ClusterState state,
+            final Consumer<AddBlockResult> onResponse
+        ) {
             final IndexMetadata indexMetadata = state.metadata().index(index);
             if (indexMetadata == null) {
                 logger.debug("index {} has since been deleted, ignoring", index);
@@ -617,14 +743,13 @@ public class MetadataIndexStateService {
                 return;
             }
 
-            final ImmutableOpenIntMap<IndexShardRoutingTable> shards = indexRoutingTable.getShards();
-            final AtomicArray<AddBlockShardResult> results = new AtomicArray<>(shards.size());
-            final CountDown countDown = new CountDown(shards.size());
+            final AtomicArray<AddBlockShardResult> results = new AtomicArray<>(indexRoutingTable.size());
+            final CountDown countDown = new CountDown(indexRoutingTable.size());
 
-            for (IntObjectCursor<IndexShardRoutingTable> shard : shards) {
-                final IndexShardRoutingTable shardRoutingTable = shard.value;
+            for (int i = 0; i < indexRoutingTable.size(); i++) {
+                IndexShardRoutingTable shardRoutingTable = indexRoutingTable.shard(i);
                 final int shardId = shardRoutingTable.shardId().id();
-                sendVerifyShardBlockRequest(shardRoutingTable, clusterBlock, new NotifyOnceListener<ReplicationResponse>() {
+                sendVerifyShardBlockRequest(shardRoutingTable, clusterBlock, new NotifyOnceListener<>() {
                     @Override
                     public void innerOnResponse(final ReplicationResponse replicationResponse) {
                         AddBlockShardResult.Failure[] failures = Arrays.stream(replicationResponse.getShardInfo().getFailures())
@@ -637,7 +762,7 @@ public class MetadataIndexStateService {
                     @Override
                     public void innerOnFailure(final Exception e) {
                         AddBlockShardResult.Failure failure = new AddBlockShardResult.Failure(index.getName(), shardId, e);
-                        results.setOnce(shardId, new AddBlockShardResult(shardId, new AddBlockShardResult.Failure[]{failure}));
+                        results.setOnce(shardId, new AddBlockShardResult(shardId, new AddBlockShardResult.Failure[] { failure }));
                         processIfFinished();
                     }
 
@@ -652,9 +777,11 @@ public class MetadataIndexStateService {
             }
         }
 
-        private void sendVerifyShardBlockRequest(final IndexShardRoutingTable shardRoutingTable,
-                                                 final ClusterBlock block,
-                                                 final ActionListener<ReplicationResponse> listener) {
+        private void sendVerifyShardBlockRequest(
+            final IndexShardRoutingTable shardRoutingTable,
+            final ClusterBlock block,
+            final ActionListener<ReplicationResponse> listener
+        ) {
             final ShardId shardId = shardRoutingTable.shardId();
             if (shardRoutingTable.primaryShard().unassigned()) {
                 logger.debug("primary shard {} is unassigned, ignoring", shardId);
@@ -664,8 +791,11 @@ public class MetadataIndexStateService {
                 return;
             }
             final TaskId parentTaskId = new TaskId(clusterService.localNode().getId(), request.taskId());
-            final TransportVerifyShardIndexBlockAction.ShardRequest shardRequest =
-                new TransportVerifyShardIndexBlockAction.ShardRequest(shardId, block, parentTaskId);
+            final TransportVerifyShardIndexBlockAction.ShardRequest shardRequest = new TransportVerifyShardIndexBlockAction.ShardRequest(
+                shardId,
+                block,
+                parentTaskId
+            );
             if (request.ackTimeout() != null) {
                 shardRequest.timeout(request.ackTimeout());
             }
@@ -676,12 +806,13 @@ public class MetadataIndexStateService {
     /**
      * Step 3 - Move index states from OPEN to CLOSE in cluster state for indices that are ready for closing.
      */
-    static Tuple<ClusterState, Collection<IndexResult>> closeRoutingTable(final ClusterState currentState,
-                                                                          final Map<Index, ClusterBlock> blockedIndices,
-                                                                          final Map<Index, IndexResult> verifyResult) {
-
+    static Tuple<ClusterState, List<IndexResult>> closeRoutingTable(
+        final ClusterState currentState,
+        final Map<Index, ClusterBlock> blockedIndices,
+        final Map<Index, IndexResult> verifyResult
+    ) {
         final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
-        final ClusterBlocks.Builder blocks = ClusterBlocks.builder().blocks(currentState.blocks());
+        final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
         final RoutingTable.Builder routingTable = RoutingTable.builder(currentState.routingTable());
 
         final Set<String> closedIndices = new HashSet<>();
@@ -704,26 +835,47 @@ public class MetadataIndexStateService {
                 assert closingBlock != null;
                 if (currentState.blocks().hasIndexBlock(index.getName(), closingBlock) == false) {
                     // we should report error in this case as the index can be left as open.
-                    closingResults.put(result.getKey(), new IndexResult(result.getKey(), new IllegalStateException(
-                        "verification of shards before closing " + index + " succeeded but block has been removed in the meantime")));
+                    closingResults.put(
+                        result.getKey(),
+                        new IndexResult(
+                            result.getKey(),
+                            new IllegalStateException(
+                                "verification of shards before closing " + index + " succeeded but block has been removed in the meantime"
+                            )
+                        )
+                    );
                     logger.debug("verification of shards before closing {} succeeded but block has been removed in the meantime", index);
                     continue;
                 }
 
                 // Check if index closing conflicts with any running restores
-                Set<Index> restoringIndices = RestoreService.restoringIndices(currentState, singleton(index));
+                Set<Index> restoringIndices = RestoreService.restoringIndices(currentState, Set.of(index));
                 if (restoringIndices.isEmpty() == false) {
-                    closingResults.put(result.getKey(), new IndexResult(result.getKey(), new IllegalStateException(
-                        "verification of shards before closing " + index + " succeeded but index is being restored in the meantime")));
+                    closingResults.put(
+                        result.getKey(),
+                        new IndexResult(
+                            result.getKey(),
+                            new IllegalStateException(
+                                "verification of shards before closing " + index + " succeeded but index is being restored in the meantime"
+                            )
+                        )
+                    );
                     logger.debug("verification of shards before closing {} succeeded but index is being restored in the meantime", index);
                     continue;
                 }
 
                 // Check if index closing conflicts with any running snapshots
-                Set<Index> snapshottingIndices = SnapshotsService.snapshottingIndices(currentState, singleton(index));
+                Set<Index> snapshottingIndices = SnapshotsService.snapshottingIndices(currentState, Set.of(index));
                 if (snapshottingIndices.isEmpty() == false) {
-                    closingResults.put(result.getKey(), new IndexResult(result.getKey(), new IllegalStateException(
-                        "verification of shards before closing " + index + " succeeded but index is being snapshot in the meantime")));
+                    closingResults.put(
+                        result.getKey(),
+                        new IndexResult(
+                            result.getKey(),
+                            new IllegalStateException(
+                                "verification of shards before closing " + index + " succeeded but index is being snapshot in the meantime"
+                            )
+                        )
+                    );
                     logger.debug("verification of shards before closing {} succeeded but index is being snapshot in the meantime", index);
                     continue;
                 }
@@ -731,12 +883,11 @@ public class MetadataIndexStateService {
                 blocks.removeIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID);
                 blocks.addIndexBlock(index.getName(), INDEX_CLOSED_BLOCK);
                 final IndexMetadata.Builder updatedMetadata = IndexMetadata.builder(indexMetadata).state(IndexMetadata.State.CLOSE);
-                metadata.put(updatedMetadata
-                        .timestampRange(IndexLongFieldRange.NO_SHARDS)
+                metadata.put(
+                    updatedMetadata.timestampRange(IndexLongFieldRange.NO_SHARDS)
                         .settingsVersion(indexMetadata.getSettingsVersion() + 1)
-                        .settings(Settings.builder()
-                                .put(indexMetadata.getSettings())
-                                .put(VERIFIED_BEFORE_CLOSE_SETTING.getKey(), true)));
+                        .settings(Settings.builder().put(indexMetadata.getSettings()).put(VERIFIED_BEFORE_CLOSE_SETTING.getKey(), true))
+                );
                 routingTable.addAsFromOpenToClose(metadata.getSafe(index));
 
                 logger.debug("closing index {} succeeded", index);
@@ -746,108 +897,50 @@ public class MetadataIndexStateService {
             }
         }
         logger.info("completed closing of indices {}", closedIndices);
-        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).metadata(metadata).routingTable(routingTable.build()).build(),
-            closingResults.values());
+        return Tuple.tuple(
+            ClusterState.builder(currentState).blocks(blocks).metadata(metadata).routingTable(routingTable).build(),
+            List.copyOf(closingResults.values())
+        );
     }
 
-    public void openIndex(final OpenIndexClusterStateUpdateRequest request,
-                          final ActionListener<ShardsAcknowledgedResponse> listener) {
-        onlyOpenIndex(request, ActionListener.wrap(response -> {
+    public void openIndices(final OpenIndexClusterStateUpdateRequest request, final ActionListener<ShardsAcknowledgedResponse> listener) {
+        onlyOpenIndices(request, listener.delegateFailure((delegate, response) -> {
             if (response.isAcknowledged()) {
                 String[] indexNames = Arrays.stream(request.indices()).map(Index::getName).toArray(String[]::new);
-                activeShardsObserver.waitForActiveShards(indexNames, request.waitForActiveShards(), request.ackTimeout(),
-                    shardsAcknowledged -> {
+                ActiveShardsObserver.waitForActiveShards(
+                    clusterService,
+                    indexNames,
+                    request.waitForActiveShards(),
+                    request.ackTimeout(),
+                    delegate.map(shardsAcknowledged -> {
                         if (shardsAcknowledged == false) {
-                            logger.debug("[{}] indices opened, but the operation timed out while waiting for " +
-                                "enough shards to be started.", Arrays.toString(indexNames));
+                            logger.debug(
+                                () -> format(
+                                    "[%s] indices opened, but the operation timed out while waiting for enough shards to be started.",
+                                    Arrays.toString(indexNames)
+                                )
+                            );
                         }
-                        listener.onResponse(ShardsAcknowledgedResponse.of(true, shardsAcknowledged));
-                    }, listener::onFailure);
+                        return ShardsAcknowledgedResponse.of(true, shardsAcknowledged);
+                    })
+                );
             } else {
-                listener.onResponse(ShardsAcknowledgedResponse.NOT_ACKNOWLEDGED);
+                delegate.onResponse(ShardsAcknowledgedResponse.NOT_ACKNOWLEDGED);
             }
-        }, listener::onFailure));
+        }));
     }
 
-    private void onlyOpenIndex(final OpenIndexClusterStateUpdateRequest request,
-                               final ActionListener<AcknowledgedResponse> listener) {
+    private void onlyOpenIndices(final OpenIndexClusterStateUpdateRequest request, final ActionListener<AcknowledgedResponse> listener) {
         if (request.indices() == null || request.indices().length == 0) {
             throw new IllegalArgumentException("Index name is required");
         }
 
-        final String indicesAsString = Arrays.toString(request.indices());
-        clusterService.submitStateUpdateTask("open-indices " + indicesAsString,
-            new AckedClusterStateUpdateTask(Priority.URGENT, request, listener) {
-                @Override
-                public ClusterState execute(final ClusterState currentState) {
-                    final ClusterState updatedState = openIndices(request.indices(), currentState);
-                    //no explicit wait for other nodes needed as we use AckedClusterStateUpdateTask
-                    return allocationService.reroute(updatedState, "indices opened [" + indicesAsString + "]");
-                }
-            }
+        clusterService.submitStateUpdateTask(
+            "open-indices " + Arrays.toString(request.indices()),
+            new OpenIndicesTask(request, listener),
+            ClusterStateTaskConfig.build(Priority.URGENT, request.masterNodeTimeout()),
+            this.opensExecutor
         );
-    }
-
-    ClusterState openIndices(final Index[] indices, final ClusterState currentState) {
-        final List<IndexMetadata> indicesToOpen = new ArrayList<>();
-        for (Index index : indices) {
-            final IndexMetadata indexMetadata = currentState.metadata().getIndexSafe(index);
-            if (indexMetadata.getState() != IndexMetadata.State.OPEN) {
-                indicesToOpen.add(indexMetadata);
-            } else if (currentState.blocks().hasIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID)) {
-                indicesToOpen.add(indexMetadata);
-            }
-        }
-
-        shardLimitValidator.validateShardLimit(currentState, indices);
-        if (indicesToOpen.isEmpty()) {
-            return currentState;
-        }
-
-        logger.info(() -> new ParameterizedMessage("opening indices [{}]",
-            String.join(",", indicesToOpen.stream().map(i -> (CharSequence) i.getIndex().toString())::iterator)));
-
-        final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
-        final ClusterBlocks.Builder blocks = ClusterBlocks.builder().blocks(currentState.blocks());
-        final Version minIndexCompatibilityVersion = currentState.getNodes().getMaxNodeVersion().minimumIndexCompatibilityVersion();
-
-        for (IndexMetadata indexMetadata : indicesToOpen) {
-            final Index index = indexMetadata.getIndex();
-            if (indexMetadata.getState() != IndexMetadata.State.OPEN) {
-                final Settings.Builder updatedSettings = Settings.builder().put(indexMetadata.getSettings());
-                updatedSettings.remove(VERIFIED_BEFORE_CLOSE_SETTING.getKey());
-
-                IndexMetadata newIndexMetadata = IndexMetadata.builder(indexMetadata)
-                    .state(IndexMetadata.State.OPEN)
-                    .settingsVersion(indexMetadata.getSettingsVersion() + 1)
-                    .settings(updatedSettings)
-                    .timestampRange(IndexLongFieldRange.NO_SHARDS)
-                    .build();
-
-                // The index might be closed because we couldn't import it due to an old incompatible
-                // version, so we need to verify its compatibility.
-                newIndexMetadata = indexMetadataVerifier.verifyIndexMetadata(newIndexMetadata, minIndexCompatibilityVersion);
-                try {
-                    indicesService.verifyIndexMetadata(newIndexMetadata, newIndexMetadata);
-                } catch (Exception e) {
-                    throw new ElasticsearchException("Failed to verify index " + index, e);
-                }
-                metadata.put(newIndexMetadata, true);
-            }
-
-            // Always removes index closed blocks (note: this can fail on-going close index actions)
-            blocks.removeIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID);
-        }
-
-        ClusterState updatedState = ClusterState.builder(currentState).metadata(metadata).blocks(blocks).build();
-
-        final RoutingTable.Builder routingTable = RoutingTable.builder(updatedState.routingTable());
-        for (IndexMetadata previousIndexMetadata : indicesToOpen) {
-            if (previousIndexMetadata.getState() != IndexMetadata.State.OPEN) {
-                routingTable.addAsFromCloseToOpen(updatedState.metadata().getIndexSafe(previousIndexMetadata.getIndex()));
-            }
-        }
-        return ClusterState.builder(updatedState).routingTable(routingTable.build()).build();
     }
 
     /**
@@ -858,14 +951,13 @@ public class MetadataIndexStateService {
      * @param block the full block to convert to
      * @return the updated cluster state, as well as the (failed and successful) index-level results for adding the block
      */
-    static Tuple<ClusterState, Collection<AddBlockResult>> finalizeBlock(final ClusterState currentState,
-                                                                         final Map<Index, ClusterBlock> blockedIndices,
-                                                                         final Map<Index, AddBlockResult> verifyResult,
-                                                                         final APIBlock block) {
-
-        final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
-        final ClusterBlocks.Builder blocks = ClusterBlocks.builder().blocks(currentState.blocks());
-        final RoutingTable.Builder routingTable = RoutingTable.builder(currentState.routingTable());
+    private static Tuple<ClusterState, List<AddBlockResult>> finalizeBlock(
+        final ClusterState currentState,
+        final Map<Index, ClusterBlock> blockedIndices,
+        final Map<Index, AddBlockResult> verifyResult,
+        final APIBlock block
+    ) {
+        final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
 
         final Set<String> effectivelyBlockedIndices = new HashSet<>();
         Map<Index, AddBlockResult> blockingResults = new HashMap<>(verifyResult);
@@ -882,15 +974,26 @@ public class MetadataIndexStateService {
                 assert tempBlock.uuid() != null;
                 final ClusterBlock currentBlock = currentState.blocks().getIndexBlockWithId(index.getName(), tempBlock.id());
                 if (currentBlock != null && currentBlock.equals(block.block)) {
-                    logger.debug("verification of shards for {} succeeded, but block finalization already occurred" +
-                        " (possibly for another block) [{}]", index, result);
+                    logger.debug(
+                        "verification of shards for {} succeeded, but block finalization already occurred"
+                            + " (possibly for another block) [{}]",
+                        index,
+                        result
+                    );
                     continue;
                 }
 
                 if (currentBlock == null || currentBlock.equals(tempBlock) == false) {
                     // we should report error in this case as the index can be left as open.
-                    blockingResults.put(result.getKey(), new AddBlockResult(result.getKey(), new IllegalStateException(
-                        "verification of shards before blocking " + index + " succeeded but block has been removed in the meantime")));
+                    blockingResults.put(
+                        result.getKey(),
+                        new AddBlockResult(
+                            result.getKey(),
+                            new IllegalStateException(
+                                "verification of shards before blocking " + index + " succeeded but block has been removed in the meantime"
+                            )
+                        )
+                    );
                     logger.debug("verification of shards before blocking {} succeeded but block has been removed in the meantime", index);
                     continue;
                 }
@@ -906,9 +1009,8 @@ public class MetadataIndexStateService {
                 logger.debug("index {} has been deleted since blocking it started, ignoring", index);
             }
         }
-        logger.info("completed adding block {} to indices {}", block.name, effectivelyBlockedIndices);
-        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).metadata(metadata).routingTable(routingTable.build()).build(),
-            blockingResults.values());
+        logger.info("completed adding [index.blocks.{}] block to indices {}", block.name, effectivelyBlockedIndices);
+        return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).build(), List.copyOf(blockingResults.values()));
     }
 
     /**
@@ -916,9 +1018,16 @@ public class MetadataIndexStateService {
      * cluster block is generated with the id value equals to {@link #INDEX_CLOSED_BLOCK_ID} and a unique UUID.
      */
     public static ClusterBlock createIndexClosingBlock() {
-        return new ClusterBlock(INDEX_CLOSED_BLOCK_ID, UUIDs.randomBase64UUID(), "index preparing to close. Reopen the index to allow " +
-            "writes again or retry closing the index to fully close the index.", false, false, false, RestStatus.FORBIDDEN,
-            EnumSet.of(ClusterBlockLevel.WRITE));
+        return new ClusterBlock(
+            INDEX_CLOSED_BLOCK_ID,
+            UUIDs.randomBase64UUID(),
+            "index preparing to close. Reopen the index to allow writes again or retry closing the index to fully close the index.",
+            false,
+            false,
+            false,
+            RestStatus.FORBIDDEN,
+            EnumSet.of(ClusterBlockLevel.WRITE)
+        );
     }
 
     public static boolean isIndexVerifiedBeforeClosed(final IndexMetadata indexMetadata) {
@@ -930,8 +1039,164 @@ public class MetadataIndexStateService {
     // Create UUID based block based on non-UUID one
     public static ClusterBlock createUUIDBasedBlock(ClusterBlock clusterBlock) {
         assert clusterBlock.uuid() == null : "no UUID expected on source block";
-        return new ClusterBlock(clusterBlock.id(), UUIDs.randomBase64UUID(), "moving to block " + clusterBlock.description(),
-            clusterBlock.retryable(), clusterBlock.disableStatePersistence(), clusterBlock.isAllowReleaseResources(), clusterBlock.status(),
-            clusterBlock.levels());
+        return new ClusterBlock(
+            clusterBlock.id(),
+            UUIDs.randomBase64UUID(),
+            "moving to block " + clusterBlock.description(),
+            clusterBlock.retryable(),
+            clusterBlock.disableStatePersistence(),
+            clusterBlock.isAllowReleaseResources(),
+            clusterBlock.status(),
+            clusterBlock.levels()
+        );
+    }
+
+    private class OpenIndicesExecutor implements ClusterStateTaskExecutor<OpenIndicesTask> {
+
+        @Override
+        public ClusterState execute(BatchExecutionContext<OpenIndicesTask> batchExecutionContext) {
+            var listener = new AllocationActionMultiListener<AcknowledgedResponse>(threadPool.getThreadContext());
+            var state = batchExecutionContext.initialState();
+
+            try (var ignored = batchExecutionContext.dropHeadersContext()) {
+                // we may encounter deprecated settings but they are not directly related to opening the indices, nor are they really
+                // associated with any particular tasks, so we drop them
+
+                // build an in-order de-duplicated array of all the indices to open
+                final Set<Index> indicesToOpen = Sets.newLinkedHashSetWithExpectedSize(batchExecutionContext.taskContexts().size());
+                for (final var taskContext : batchExecutionContext.taskContexts()) {
+                    Collections.addAll(indicesToOpen, taskContext.getTask().request.indices());
+                }
+                Index[] indices = indicesToOpen.toArray(Index.EMPTY_ARRAY);
+
+                // open them
+                state = openIndices(indices, state);
+
+                // do a final reroute
+                state = allocationService.reroute(state, "indices opened", listener.reroute());
+
+                for (final var taskContext : batchExecutionContext.taskContexts()) {
+                    final var task = taskContext.getTask();
+                    taskContext.success(task.getAckListener(listener));
+                }
+            } catch (Exception e) {
+                for (final var taskContext : batchExecutionContext.taskContexts()) {
+                    taskContext.onFailure(e);
+                }
+            }
+
+            return state;
+        }
+
+        private ClusterState openIndices(final Index[] indices, final ClusterState currentState) {
+            final List<IndexMetadata> indicesToOpen = new ArrayList<>(indices.length);
+            for (Index index : indices) {
+                final IndexMetadata indexMetadata = currentState.metadata().getIndexSafe(index);
+                if (indexMetadata.getState() != IndexMetadata.State.OPEN) {
+                    indicesToOpen.add(indexMetadata);
+                } else if (currentState.blocks().hasIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID)) {
+                    indicesToOpen.add(indexMetadata);
+                }
+            }
+
+            shardLimitValidator.validateShardLimit(currentState, indices);
+            if (indicesToOpen.isEmpty()) {
+                return currentState;
+            }
+
+            logger.info(() -> {
+                final StringBuilder indexNames = new StringBuilder();
+                Strings.collectionToDelimitedStringWithLimit(
+                    indicesToOpen.stream().map(i -> (CharSequence) i.getIndex().toString()).toList(),
+                    ",",
+                    "",
+                    "",
+                    512,
+                    indexNames
+                );
+                return "opening indices [" + indexNames + "]";
+            });
+
+            final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
+            final ClusterBlocks.Builder blocks = ClusterBlocks.builder(currentState.blocks());
+            final Version minIndexCompatibilityVersion = currentState.getNodes().getMaxNodeVersion().minimumIndexCompatibilityVersion();
+
+            for (IndexMetadata indexMetadata : indicesToOpen) {
+                final Index index = indexMetadata.getIndex();
+                if (indexMetadata.getState() != IndexMetadata.State.OPEN) {
+                    final Settings.Builder updatedSettings = Settings.builder().put(indexMetadata.getSettings());
+                    updatedSettings.remove(VERIFIED_BEFORE_CLOSE_SETTING.getKey());
+
+                    IndexMetadata newIndexMetadata = IndexMetadata.builder(indexMetadata)
+                        .state(IndexMetadata.State.OPEN)
+                        .settingsVersion(indexMetadata.getSettingsVersion() + 1)
+                        .settings(updatedSettings)
+                        .timestampRange(IndexLongFieldRange.NO_SHARDS)
+                        .build();
+
+                    // The index might be closed because we couldn't import it due to an old incompatible
+                    // version, so we need to verify its compatibility.
+                    newIndexMetadata = indexMetadataVerifier.verifyIndexMetadata(newIndexMetadata, minIndexCompatibilityVersion);
+                    try {
+                        indicesService.verifyIndexMetadata(newIndexMetadata, newIndexMetadata);
+                    } catch (Exception e) {
+                        throw new ElasticsearchException("Failed to verify index " + index, e);
+                    }
+                    metadata.put(newIndexMetadata, true);
+                }
+
+                // Always removes index closed blocks (note: this can fail on-going close index actions)
+                blocks.removeIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID);
+            }
+
+            ClusterState updatedState = ClusterState.builder(currentState).metadata(metadata).blocks(blocks).build();
+
+            final RoutingTable.Builder routingTable = RoutingTable.builder(updatedState.routingTable());
+            for (IndexMetadata previousIndexMetadata : indicesToOpen) {
+                if (previousIndexMetadata.getState() != IndexMetadata.State.OPEN) {
+                    routingTable.addAsFromCloseToOpen(updatedState.metadata().getIndexSafe(previousIndexMetadata.getIndex()));
+                }
+            }
+            return ClusterState.builder(updatedState).routingTable(routingTable).build();
+        }
+    }
+
+    private record OpenIndicesTask(OpenIndexClusterStateUpdateRequest request, ActionListener<AcknowledgedResponse> listener)
+        implements
+            ClusterStateTaskListener {
+
+        @Override
+        public void onFailure(Exception e) {
+            listener.onFailure(e);
+        }
+
+        public ClusterStateAckListener getAckListener(AllocationActionMultiListener<AcknowledgedResponse> multiListener) {
+            return new ClusterStateAckListener() {
+                @Override
+                public boolean mustAck(DiscoveryNode discoveryNode) {
+                    return true;
+                }
+
+                @Override
+                public void onAllNodesAcked() {
+                    multiListener.delay(listener).onResponse(AcknowledgedResponse.of(true));
+                }
+
+                @Override
+                public void onAckFailure(Exception e) {
+                    multiListener.delay(listener).onResponse(AcknowledgedResponse.of(false));
+                }
+
+                @Override
+                public void onAckTimeout() {
+                    multiListener.delay(listener).onResponse(AcknowledgedResponse.FALSE);
+                }
+
+                @Override
+                public TimeValue ackTimeout() {
+                    return request.ackTimeout();
+                }
+            };
+        }
     }
 }
