@@ -25,13 +25,16 @@ import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
 import org.apache.lucene.index.StoredFieldVisitor;
 import org.apache.lucene.index.Terms;
+import org.apache.lucene.index.VectorEncoding;
+import org.apache.lucene.index.VectorSimilarityFunction;
+import org.apache.lucene.index.VectorValues;
 import org.apache.lucene.index.memory.MemoryIndex;
 import org.apache.lucene.search.DocIdSetIterator;
+import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -39,7 +42,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * A {@link LeafReader} over a lucene document that exposes doc values and stored fields.
@@ -65,9 +67,7 @@ class DocumentLeafReader extends LeafReader {
             // this means that a mapper script is referring to another calculated field;
             // in which case we need to execute that field first. We also check for loops here
             if (fieldPath.add(field) == false) {
-                throw new IllegalArgumentException(
-                    "Loop in field resolution detected: " + String.join("->", fieldPath) + "->" + field
-                );
+                throw new IllegalArgumentException("Loop in field resolution detected: " + String.join("->", fieldPath) + "->" + field);
             }
             calculatedFields.get(field).accept(this.getContext());
             fieldPath.remove(field);
@@ -77,60 +77,65 @@ class DocumentLeafReader extends LeafReader {
     @Override
     public NumericDocValues getNumericDocValues(String field) throws IOException {
         checkField(field);
-        List<Number> values = document.getFields().stream()
+        List<Number> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return numericDocValues(values);
     }
 
     @Override
     public BinaryDocValues getBinaryDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.BINARY)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return binaryDocValues(values);
     }
 
     @Override
     public SortedDocValues getSortedDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedDocValues(values);
     }
 
     @Override
     public SortedNumericDocValues getSortedNumericDocValues(String field) throws IOException {
         checkField(field);
-        List<Number> values = document.getFields().stream()
+        List<Number> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedNumericDocValues(values);
     }
 
     @Override
     public SortedSetDocValues getSortedSetDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_SET)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedSetDocValues(values);
     }
 
@@ -141,9 +146,7 @@ class DocumentLeafReader extends LeafReader {
 
     @Override
     public void document(int docID, StoredFieldVisitor visitor) throws IOException {
-        List<IndexableField> fields = document.getFields().stream()
-            .filter(f -> f.fieldType().stored())
-            .collect(Collectors.toList());
+        List<IndexableField> fields = document.getFields().stream().filter(f -> f.fieldType().stored()).toList();
         for (IndexableField field : fields) {
             FieldInfo fieldInfo = fieldInfo(field.name());
             if (visitor.needsField(fieldInfo) != StoredFieldVisitor.Status.YES) {
@@ -161,7 +164,7 @@ class DocumentLeafReader extends LeafReader {
                     visitor.doubleField(fieldInfo, v.doubleValue());
                 }
             } else if (field.stringValue() != null) {
-                visitor.stringField(fieldInfo, field.stringValue().getBytes(StandardCharsets.UTF_8));
+                visitor.stringField(fieldInfo, field.stringValue());
             } else if (field.binaryValue() != null) {
                 // We can't just pass field.binaryValue().bytes here as there may be offset/length
                 // considerations
@@ -184,6 +187,16 @@ class DocumentLeafReader extends LeafReader {
 
     @Override
     public NumericDocValues getNormValues(String field) throws IOException {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public VectorValues getVectorValues(String field) throws IOException {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public TopDocs searchNearestVectors(String field, float[] target, int k, Bits acceptDocs, int visitedLimit) {
         throw new UnsupportedOperationException();
     }
 
@@ -248,6 +261,9 @@ class DocumentLeafReader extends LeafReader {
             0,
             0,
             0,
+            0,
+            VectorEncoding.FLOAT32,
+            VectorSimilarityFunction.EUCLIDEAN,
             false
         );
     }
@@ -446,8 +462,13 @@ class DocumentLeafReader extends LeafReader {
             }
 
             @Override
+            public int docValueCount() {
+                return values.size();
+            }
+
+            @Override
             public BytesRef lookupOrd(long ord) {
-                return values.get((int)ord);
+                return values.get((int) ord);
             }
 
             @Override
