@@ -8,25 +8,25 @@
 
 package org.elasticsearch.index.seqno;
 
-import org.elasticsearch.common.xcontent.ParseField;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ConstructingObjectParser;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.ToXContentFragment;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.gateway.MetadataStateFormat;
+import org.elasticsearch.xcontent.ConstructingObjectParser;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.ToXContentFragment;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * Represents a versioned collection of retention leases. We version the collection of retention leases to ensure that sync requests that
@@ -90,7 +90,7 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
      * @return the retention leases
      */
     public Collection<RetentionLease> leases() {
-        return Collections.unmodifiableCollection(leases.values());
+        return leases.values();
     }
 
     /**
@@ -126,7 +126,7 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
      * @param version the version of this retention lease collection
      * @param leases  the retention leases
      */
-    public RetentionLeases(final long primaryTerm, final long version, final Collection<RetentionLease> leases) {
+    public RetentionLeases(final long primaryTerm, final long version, final List<RetentionLease> leases) {
         if (primaryTerm <= 0) {
             throw new IllegalArgumentException("primary term must be positive but was [" + primaryTerm + "]");
         }
@@ -136,7 +136,30 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
         Objects.requireNonNull(leases);
         this.primaryTerm = primaryTerm;
         this.version = version;
-        this.leases = Collections.unmodifiableMap(toMap(leases));
+        final int leasesCount = leases.size();
+        switch (leasesCount) {
+            case 0 -> this.leases = Map.of();
+            case 1 -> {
+                final RetentionLease lease = leases.get(0);
+                this.leases = Map.of(lease.id(), lease);
+            }
+            default -> {
+                // use a linked hash map to preserve order
+                final LinkedHashMap<String, RetentionLease> map = Maps.newLinkedHashMapWithExpectedSize(leasesCount);
+                for (RetentionLease lease : leases) {
+                    final RetentionLease existing = map.put(lease.id(), lease);
+                    if (existing != null) {
+                        throwOnIdCollision(existing, lease);
+                    }
+                }
+                this.leases = Collections.unmodifiableMap(map);
+            }
+        }
+    }
+
+    private static void throwOnIdCollision(RetentionLease existing, RetentionLease added) {
+        assert existing.id().equals(added.id()) : "expected [" + existing.id() + "] to equal [" + added.id() + "]";
+        throw new IllegalStateException("duplicate retention lease ID [" + existing.id() + "]");
     }
 
     /**
@@ -149,7 +172,22 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
     public RetentionLeases(final StreamInput in) throws IOException {
         primaryTerm = in.readVLong();
         version = in.readVLong();
-        leases = Collections.unmodifiableMap(toMap(in.readList(RetentionLease::new)));
+        final int leasesCount = in.readVInt();
+        switch (leasesCount) {
+            case 0 -> leases = Map.of();
+            case 1 -> {
+                final RetentionLease lease = new RetentionLease(in);
+                leases = Map.of(lease.id(), lease);
+            }
+            default -> {
+                final Map<String, RetentionLease> m = Maps.newLinkedHashMapWithExpectedSize(leasesCount);
+                for (int i = 0; i < leasesCount; i++) {
+                    final RetentionLease lease = new RetentionLease(in);
+                    m.put(lease.id(), lease);
+                }
+                leases = Collections.unmodifiableMap(m);
+            }
+        }
     }
 
     /**
@@ -172,8 +210,9 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
 
     @SuppressWarnings("unchecked")
     private static final ConstructingObjectParser<RetentionLeases, Void> PARSER = new ConstructingObjectParser<>(
-            "retention_leases",
-            (a) -> new RetentionLeases((Long) a[0], (Long) a[1], (Collection<RetentionLease>) a[2]));
+        "retention_leases",
+        (a) -> new RetentionLeases((Long) a[0], (Long) a[1], (List<RetentionLease>) a[2])
+    );
 
     static {
         PARSER.declareLong(ConstructingObjectParser.constructorArg(), PRIMARY_TERM_FIELD);
@@ -196,8 +235,8 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
     }
 
     /**
-     * Parses a retention leases collection from {@link org.elasticsearch.common.xcontent.XContent}. This method assumes that the retention
-     * leases were converted to {@link org.elasticsearch.common.xcontent.XContent} via {@link #toXContent(XContentBuilder, Params)}.
+     * Parses a retention leases collection from {@link org.elasticsearch.xcontent.XContent}. This method assumes that the retention
+     * leases were converted to {@link org.elasticsearch.xcontent.XContent} via {@link #toXContent(XContentBuilder, Params)}.
      *
      * @param parser the parser
      * @return a retention leases collection
@@ -225,9 +264,7 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
         final RetentionLeases that = (RetentionLeases) o;
-        return primaryTerm == that.primaryTerm &&
-                version == that.version &&
-                Objects.equals(leases, that.leases);
+        return primaryTerm == that.primaryTerm && version == that.version && Objects.equals(leases, that.leases);
     }
 
     @Override
@@ -237,31 +274,7 @@ public class RetentionLeases implements ToXContentFragment, Writeable {
 
     @Override
     public String toString() {
-        return "RetentionLeases{" +
-                "primaryTerm=" + primaryTerm +
-                ", version=" + version +
-                ", leases=" + leases +
-                '}';
-    }
-
-    /**
-     * A utility method to convert retention leases to a map from retention lease ID to retention lease.
-     *
-     * @param leases the retention leases
-     * @return the map from retention lease ID to retention lease
-     */
-    private static Map<String, RetentionLease> toMap(final Collection<RetentionLease> leases) {
-        // use a linked hash map to preserve order
-        return leases.stream()
-                .collect(Collectors.toMap(
-                        RetentionLease::id,
-                        Function.identity(),
-                        (left, right) -> {
-                            assert left.id().equals(right.id()) : "expected [" + left.id() + "] to equal [" + right.id() + "]";
-                            throw new IllegalStateException("duplicate retention lease ID [" + left.id() + "]");
-                        },
-                        LinkedHashMap::new));
+        return "RetentionLeases{primaryTerm=" + primaryTerm + ", version=" + version + ", leases=" + leases + '}';
     }
 
 }
-
