@@ -7,11 +7,11 @@
  */
 package org.elasticsearch.transport;
 
-import com.carrotsearch.hppc.IntHashSet;
-import com.carrotsearch.hppc.IntSet;
+import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
+import org.apache.lucene.util.BytesRef;
+import org.elasticsearch.Build;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
@@ -24,23 +24,26 @@ import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.component.AbstractLifecycleComponent;
 import org.elasticsearch.common.component.Lifecycle;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
+import org.elasticsearch.common.io.stream.RecyclerBytesStreamOutput;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.metrics.MeanMetric;
 import org.elasticsearch.common.network.CloseableChannel;
+import org.elasticsearch.common.network.HandlingTimeTracker;
 import org.elasticsearch.common.network.NetworkAddress;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.network.NetworkUtils;
+import org.elasticsearch.common.recycler.Recycler;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.BoundTransportAddress;
+import org.elasticsearch.common.transport.NetworkExceptionHelper;
 import org.elasticsearch.common.transport.PortsRange;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.unit.ByteSizeValue;
-import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.common.util.BigArrays;
 import org.elasticsearch.common.util.PageCacheRecycler;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.concurrent.CountDown;
+import org.elasticsearch.core.Booleans;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.indices.breaker.CircuitBreakerService;
 import org.elasticsearch.monitor.jvm.JvmInfo;
 import org.elasticsearch.node.Node;
@@ -66,8 +69,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
@@ -76,12 +77,11 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.unmodifiableMap;
-import static org.elasticsearch.common.transport.NetworkExceptionHelper.isCloseConnectionException;
 import static org.elasticsearch.common.transport.NetworkExceptionHelper.isConnectException;
 import static org.elasticsearch.common.util.concurrent.ConcurrentCollections.newConcurrentMap;
+import static org.elasticsearch.core.Strings.format;
 
 public abstract class TcpTransport extends AbstractLifecycleComponent implements Transport {
     private static final Logger logger = LogManager.getLogger(TcpTransport.class);
@@ -97,12 +97,40 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     // this limit is per-address
     private static final int LIMIT_LOCAL_PORTS_COUNT = 6;
 
+    // Deliberately unregistered, only used in unit tests. Copied to AbstractSimpleTransportTestCase#IGNORE_DESERIALIZATION_ERRORS_SETTING
+    // so that tests in other packages can see it too.
+    static final Setting<Boolean> IGNORE_DESERIALIZATION_ERRORS_SETTING = Setting.boolSetting(
+        "transport.ignore_deserialization_errors",
+        false,
+        Setting.Property.NodeScope
+    );
+
+    private static final Boolean UNTRUSTED_REMOTE_CLUSTER_FEATURE_FLAG_REGISTERED;
+
+    static {
+        final String property = System.getProperty("es.untrusted_remote_cluster_feature_flag_registered");
+        if (Build.CURRENT.isSnapshot() && property != null) {
+            throw new IllegalArgumentException(
+                "es.untrusted_remote_cluster_feature_flag_registered " + "is only supported in non-snapshot builds"
+            );
+        }
+        UNTRUSTED_REMOTE_CLUSTER_FEATURE_FLAG_REGISTERED = Booleans.parseBoolean(property, null);
+    }
+
+    public static boolean isUntrustedRemoteClusterEnabled() {
+        return Build.CURRENT.isSnapshot()
+            || (UNTRUSTED_REMOTE_CLUSTER_FEATURE_FLAG_REGISTERED != null && UNTRUSTED_REMOTE_CLUSTER_FEATURE_FLAG_REGISTERED);
+    }
+
+    private final boolean ignoreDeserializationErrors;
+
     protected final Settings settings;
-    private final Version version;
     protected final ThreadPool threadPool;
-    protected final PageCacheRecycler pageCacheRecycler;
+    protected final Recycler<BytesRef> recycler;
     protected final NetworkService networkService;
-    protected final Set<ProfileSettings> profileSettings;
+    protected final Set<ProfileSettings> profileSettingsSet;
+    protected final boolean rstOnClose;
+    private final Version version;
     private final CircuitBreakerService circuitBreakerService;
 
     private final ConcurrentMap<String, BoundTransportAddress> profileBoundAddresses = newConcurrentMap();
@@ -116,6 +144,7 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
     private final TransportHandshaker handshaker;
     private final TransportKeepAlive keepAlive;
+    private final HandlingTimeTracker outboundHandlingTimeTracker = new HandlingTimeTracker();
     private final OutboundHandler outboundHandler;
     private final InboundHandler inboundHandler;
     private final ResponseHandlers responseHandlers = new ResponseHandlers();
@@ -123,27 +152,66 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
     private final AtomicLong outboundConnectionCount = new AtomicLong(); // also used as a correlation ID for open/close logs
 
-    public TcpTransport(Settings settings, Version version, ThreadPool threadPool, PageCacheRecycler pageCacheRecycler,
-                        CircuitBreakerService circuitBreakerService, NamedWriteableRegistry namedWriteableRegistry,
-                        NetworkService networkService) {
+    public TcpTransport(
+        Settings settings,
+        Version version,
+        ThreadPool threadPool,
+        PageCacheRecycler pageCacheRecycler,
+        CircuitBreakerService circuitBreakerService,
+        NamedWriteableRegistry namedWriteableRegistry,
+        NetworkService networkService
+    ) {
         this.settings = settings;
-        this.profileSettings = getProfileSettings(settings);
+        this.profileSettingsSet = getProfileSettings(settings);
         this.version = version;
         this.threadPool = threadPool;
-        this.pageCacheRecycler = pageCacheRecycler;
         this.circuitBreakerService = circuitBreakerService;
         this.networkService = networkService;
         String nodeName = Node.NODE_NAME_SETTING.get(settings);
-        BigArrays bigArrays = new BigArrays(pageCacheRecycler, circuitBreakerService, CircuitBreaker.IN_FLIGHT_REQUESTS);
 
-        this.outboundHandler = new OutboundHandler(nodeName, version, statsTracker, threadPool, bigArrays);
-        this.handshaker = new TransportHandshaker(version, threadPool,
-            (node, channel, requestId, v) -> outboundHandler.sendRequest(node, channel, requestId,
-                TransportHandshaker.HANDSHAKE_ACTION_NAME, new TransportHandshaker.HandshakeRequest(version),
-                TransportRequestOptions.EMPTY, v, null, true));
+        this.rstOnClose = TransportSettings.RST_ON_CLOSE.get(settings);
+
+        this.recycler = createRecycler(settings, pageCacheRecycler);
+        this.outboundHandler = new OutboundHandler(
+            nodeName,
+            version,
+            statsTracker,
+            threadPool,
+            recycler,
+            outboundHandlingTimeTracker,
+            rstOnClose
+        );
+
+        ignoreDeserializationErrors = IGNORE_DESERIALIZATION_ERRORS_SETTING.get(settings);
+
+        this.handshaker = new TransportHandshaker(
+            version,
+            threadPool,
+            (node, channel, requestId, v) -> outboundHandler.sendRequest(
+                node,
+                channel,
+                requestId,
+                TransportHandshaker.HANDSHAKE_ACTION_NAME,
+                new TransportHandshaker.HandshakeRequest(version),
+                TransportRequestOptions.EMPTY,
+                v,
+                null,
+                true
+            ),
+            ignoreDeserializationErrors
+        );
         this.keepAlive = new TransportKeepAlive(threadPool, this.outboundHandler::sendBytes);
-        this.inboundHandler = new InboundHandler(threadPool, outboundHandler, namedWriteableRegistry, handshaker, keepAlive,
-            requestHandlers, responseHandlers);
+        this.inboundHandler = new InboundHandler(
+            threadPool,
+            outboundHandler,
+            namedWriteableRegistry,
+            handshaker,
+            keepAlive,
+            requestHandlers,
+            responseHandlers,
+            networkService.getHandlingTimeTracker(),
+            ignoreDeserializationErrors
+        );
     }
 
     public Version getVersion() {
@@ -163,10 +231,6 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     }
 
     @Override
-    protected void doStart() {
-    }
-
-    @Override
     public synchronized void setMessageListener(TransportMessageListener listener) {
         outboundHandler.setMessageListener(listener);
         inboundHandler.setMessageListener(listener);
@@ -176,6 +240,13 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     public void setSlowLogThreshold(TimeValue slowLogThreshold) {
         inboundHandler.setSlowLogThreshold(slowLogThreshold);
         outboundHandler.setSlowLogThreshold(slowLogThreshold);
+    }
+
+    /**
+     * Only used in tests, see {@link #IGNORE_DESERIALIZATION_ERRORS_SETTING}.
+     */
+    public boolean ignoreDeserializationErrors() {
+        return ignoreDeserializationErrors;
     }
 
     public final class NodeChannels extends CloseableConnection {
@@ -190,8 +261,8 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         NodeChannels(DiscoveryNode node, List<TcpChannel> channels, ConnectionProfile connectionProfile, Version handshakeVersion) {
             this.node = node;
             this.channels = Collections.unmodifiableList(channels);
-            assert channels.size() == connectionProfile.getNumConnections() : "expected channels size to be == "
-                + connectionProfile.getNumConnections() + " but was: [" + channels.size() + "]";
+            assert channels.size() == connectionProfile.getNumConnections()
+                : "expected channels size to be == " + connectionProfile.getNumConnections() + " but was: [" + channels.size() + "]";
             typeMapping = new EnumMap<>(TransportRequestOptions.Type.class);
             for (ConnectionProfile.ConnectionTypeHandle handle : connectionProfile.getHandles()) {
                 for (TransportRequestOptions.Type type : handle.getTypes())
@@ -244,15 +315,28 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
                 throw new NodeNotConnectedException(node, "connection already closed");
             }
             TcpChannel channel = channel(options.type());
+
+            // In this is a proxy request, determine whether we want to compress based on the wrapped request
+            final TransportRequest wrapped;
+            if (request instanceof TransportActionProxy.ProxyRequest) {
+                wrapped = ((TransportActionProxy.ProxyRequest<?>) request).wrapped;
+            } else {
+                wrapped = request;
+            }
+
+            final Compression.Scheme schemeToUse = getCompressionScheme(wrapped);
+            outboundHandler.sendRequest(node, channel, requestId, action, request, options, getVersion(), schemeToUse, false);
+        }
+
+        private Compression.Scheme getCompressionScheme(TransportRequest request) {
             // We compress if total transport compression is enabled or if indexing_data transport compression
             // is enabled and the request is a RawIndexingDataTransportRequest which indicates it should be
             // compressed.
-            final boolean shouldCompress = compress == Compression.Enabled.TRUE ||
-                (compress == Compression.Enabled.INDEXING_DATA
+            final boolean shouldCompress = compress == Compression.Enabled.TRUE
+                || (compress == Compression.Enabled.INDEXING_DATA
                     && request instanceof RawIndexingDataTransportRequest
                     && ((RawIndexingDataTransportRequest) request).isRawIndexingData());
-            final Compression.Scheme schemeToUse = shouldCompress ? compressionScheme : null;
-            outboundHandler.sendRequest(node, channel, requestId, action, request, options, getVersion(), schemeToUse, false);
+            return shouldCompress ? compressionScheme : null;
         }
 
         @Override
@@ -267,8 +351,12 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
     // This allows transport implementations to potentially override specific connection profiles. This
     // primarily exists for the test implementations.
-    protected ConnectionProfile maybeOverrideConnectionProfile(ConnectionProfile connectionProfile) {
+    protected static ConnectionProfile maybeOverrideConnectionProfile(ConnectionProfile connectionProfile) {
         return connectionProfile;
+    }
+
+    protected Recycler<BytesRef> createRecycler(Settings settings, PageCacheRecycler pageCacheRecycler) {
+        return new BytesRefRecycler(pageCacheRecycler);
     }
 
     @Override
@@ -279,7 +367,11 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
             throw new ConnectTransportException(null, "can't open connection to a null node");
         }
         ConnectionProfile finalProfile = maybeOverrideConnectionProfile(profile);
-        closeLock.readLock().lock(); // ensure we don't open connections while we are closing
+        if (closeLock.readLock().tryLock() == false) {
+            ensureOpen();
+            assert false : "should not get here ever because close-write-lock should only be held on shutdown";
+            throw new ConnectTransportException(node, "failed to acquire close-read-lock");
+        }
         try {
             ensureOpen();
             initiateConnection(node, finalProfile, listener);
@@ -288,8 +380,7 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         }
     }
 
-    private List<TcpChannel> initiateConnection(DiscoveryNode node, ConnectionProfile connectionProfile,
-                                                ActionListener<Transport.Connection> listener) {
+    private void initiateConnection(DiscoveryNode node, ConnectionProfile connectionProfile, ActionListener<Connection> listener) {
         int numConnections = connectionProfile.getNumConnections();
         assert numConnections > 0 : "A connection profile must be configured with at least one connection";
 
@@ -297,22 +388,28 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
         for (int i = 0; i < numConnections; ++i) {
             try {
-                TcpChannel channel = initiateChannel(node);
-                logger.trace(() -> new ParameterizedMessage("Tcp transport channel opened: {}", channel));
+                final TcpChannel channel = initiateChannel(node);
+                if (logger.isTraceEnabled()) {
+                    channel.addConnectListener(new ChannelOpenTraceLogger(channel));
+                }
                 channels.add(channel);
             } catch (ConnectTransportException e) {
                 CloseableChannel.closeChannels(channels, false);
                 listener.onFailure(e);
-                return channels;
+                return;
             } catch (Exception e) {
                 CloseableChannel.closeChannels(channels, false);
                 listener.onFailure(new ConnectTransportException(node, "general node connection failure", e));
-                return channels;
+                return;
             }
         }
 
-        ChannelsConnectedListener channelsConnectedListener = new ChannelsConnectedListener(node, connectionProfile, channels,
-            new ThreadedActionListener<>(logger, threadPool, ThreadPool.Names.GENERIC, listener, false));
+        ChannelsConnectedListener channelsConnectedListener = new ChannelsConnectedListener(
+            node,
+            connectionProfile,
+            channels,
+            new ThreadedActionListener<>(logger, threadPool, ThreadPool.Names.GENERIC, listener, false)
+        );
 
         for (TcpChannel channel : channels) {
             channel.addConnectListener(channelsConnectedListener);
@@ -320,7 +417,6 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
         TimeValue connectTimeout = connectionProfile.getConnectTimeout();
         threadPool.schedule(channelsConnectedListener::onTimeout, connectTimeout, ThreadPool.Names.GENERIC);
-        return channels;
     }
 
     @Override
@@ -342,12 +438,8 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
             local.add("[::1]"); // may get ports appended!
         }
         return local.stream()
-            .flatMap(
-                address -> Arrays.stream(defaultPortRange())
-                    .limit(LIMIT_LOCAL_PORTS_COUNT)
-                    .mapToObj(port -> address + ":" + port)
-            )
-            .collect(Collectors.toList());
+            .flatMap(address -> Arrays.stream(defaultPortRange()).limit(LIMIT_LOCAL_PORTS_COUNT).mapToObj(port -> address + ":" + port))
+            .toList();
     }
 
     protected void bindServer(ProfileSettings profileSettings) {
@@ -387,7 +479,10 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         PortsRange portsRange = new PortsRange(port);
         final AtomicReference<Exception> lastException = new AtomicReference<>();
         final AtomicReference<InetSocketAddress> boundSocket = new AtomicReference<>();
-        closeLock.writeLock().lock();
+        if (closeLock.writeLock().tryLock() == false) {
+            assert false; // can't be concurrently stopping and mustn't be opening any connections yet
+            throw new IllegalStateException("failed to acquire close-write-lock");
+        }
         try {
             // No need for locking here since Lifecycle objects can't move from STARTED to INITIALIZED
             if (lifecycle.initialized() == false && lifecycle.started() == false) {
@@ -420,14 +515,13 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         return boundSocket.get();
     }
 
-    private BoundTransportAddress createBoundTransportAddress(ProfileSettings profileSettings,
-                                                              List<InetSocketAddress> boundAddresses) {
+    private BoundTransportAddress createBoundTransportAddress(ProfileSettings profileSettings, List<InetSocketAddress> boundAddresses) {
         String[] boundAddressesHostStrings = new String[boundAddresses.size()];
         TransportAddress[] transportBoundAddresses = new TransportAddress[boundAddresses.size()];
         for (int i = 0; i < boundAddresses.size(); i++) {
-            InetSocketAddress boundAddress = boundAddresses.get(i);
-            boundAddressesHostStrings[i] = boundAddress.getHostString();
-            transportBoundAddresses[i] = new TransportAddress(boundAddress);
+            InetSocketAddress nextAddress = boundAddresses.get(i);
+            boundAddressesHostStrings[i] = nextAddress.getHostString();
+            transportBoundAddresses[i] = new TransportAddress(nextAddress);
         }
 
         List<String> publishHosts = profileSettings.publishHosts;
@@ -451,8 +545,7 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     }
 
     // package private for tests
-    static int resolvePublishPort(ProfileSettings profileSettings, List<InetSocketAddress> boundAddresses,
-                                  InetAddress publishInetAddress) {
+    static int resolvePublishPort(ProfileSettings profileSettings, List<InetSocketAddress> boundAddresses, InetAddress publishInetAddress) {
         int publishPort = profileSettings.publishPort;
 
         // if port not explicitly provided, search for port of address in boundAddresses that matches publishInetAddress
@@ -468,21 +561,30 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
         // if no matching boundAddress found, check if there is a unique port for all bound addresses
         if (publishPort < 0) {
-            final IntSet ports = new IntHashSet();
+            final Set<Integer> ports = new HashSet<>();
             for (InetSocketAddress boundAddress : boundAddresses) {
                 ports.add(boundAddress.getPort());
             }
             if (ports.size() == 1) {
-                publishPort = ports.iterator().next().value;
+                publishPort = ports.iterator().next();
             }
         }
 
         if (publishPort < 0) {
             String profileExplanation = profileSettings.isDefaultProfile ? "" : " for profile " + profileSettings.profileName;
-            throw new BindTransportException("Failed to auto-resolve publish port" + profileExplanation + ", multiple bound addresses " +
-                boundAddresses + " with distinct ports and none of them matched the publish address (" + publishInetAddress + "). " +
-                "Please specify a unique port by setting " + TransportSettings.PORT.getKey() + " or " +
-                TransportSettings.PUBLISH_PORT.getKey());
+            throw new BindTransportException(
+                "Failed to auto-resolve publish port"
+                    + profileExplanation
+                    + ", multiple bound addresses "
+                    + boundAddresses
+                    + " with distinct ports and none of them matched the publish address ("
+                    + publishInetAddress
+                    + "). "
+                    + "Please specify a unique port by setting "
+                    + TransportSettings.PORT.getKey()
+                    + " or "
+                    + TransportSettings.PUBLISH_PORT.getKey()
+            );
         }
         return publishPort;
     }
@@ -526,11 +628,11 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         } else {
             int colonPos = hostPortString.indexOf(':');
             if (colonPos >= 0 && hostPortString.indexOf(':', colonPos + 1) == -1) {
-                // Exactly 1 colon.  Split into host:port.
+                // Exactly 1 colon. Split into host:port.
                 host = hostPortString.substring(0, colonPos);
                 portString = hostPortString.substring(colonPos + 1);
             } else {
-                // 0 or 2+ colons.  Bare hostname or IPv6 literal.
+                // 0 or 2+ colons. Bare hostname or IPv6 literal.
                 host = hostPortString;
                 // 2+ colons and not bracketed: exception
                 if (colonPos >= 0) {
@@ -554,47 +656,36 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
     }
 
     @Override
-    protected final void doClose() {
-    }
+    protected final void doClose() {}
 
     @Override
     protected final void doStop() {
-        final CountDownLatch latch = new CountDownLatch(1);
-        // make sure we run it on another thread than a possible IO handler thread
+        assert Transports.assertNotTransportThread("Must not block transport thread that might be needed for closing channels below");
         assert threadPool.generic().isShutdown() == false : "Must stop transport before terminating underlying threadpool";
-        threadPool.generic().execute(() -> {
-            closeLock.writeLock().lock();
-            try {
-                keepAlive.close();
-
-                // first stop to accept any incoming connections so nobody can connect to this transport
-                for (Map.Entry<String, List<TcpServerChannel>> entry : serverChannels.entrySet()) {
-                    String profile = entry.getKey();
-                    List<TcpServerChannel> channels = entry.getValue();
-                    ActionListener<Void> closeFailLogger = ActionListener.wrap(c -> {
-                        },
-                        e -> logger.warn(() -> new ParameterizedMessage("Error closing serverChannel for profile [{}]", profile), e));
-                    channels.forEach(c -> c.addCloseListener(closeFailLogger));
-                    CloseableChannel.closeChannels(channels, true);
-                }
-                serverChannels.clear();
-
-                // close all of the incoming channels. The closeChannels method takes a list so we must convert the set.
-                CloseableChannel.closeChannels(new ArrayList<>(acceptedChannels), true);
-                acceptedChannels.clear();
-
-                stopInternal();
-            } finally {
-                closeLock.writeLock().unlock();
-                latch.countDown();
-            }
-        });
-
+        closeLock.writeLock().lock();
         try {
-            latch.await(30, TimeUnit.SECONDS);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            // ignore
+            keepAlive.close();
+
+            // first stop to accept any incoming connections so nobody can connect to this transport
+            for (Map.Entry<String, List<TcpServerChannel>> entry : serverChannels.entrySet()) {
+                String profile = entry.getKey();
+                List<TcpServerChannel> channels = entry.getValue();
+                ActionListener<Void> closeFailLogger = ActionListener.wrap(
+                    c -> {},
+                    e -> logger.warn(() -> "Error closing serverChannel for profile [" + profile + "]", e)
+                );
+                channels.forEach(c -> c.addCloseListener(closeFailLogger));
+                CloseableChannel.closeChannels(channels, true);
+            }
+            serverChannels.clear();
+
+            // close all of the incoming channels. The closeChannels method takes a list so we must convert the set.
+            CloseableChannel.closeChannels(new ArrayList<>(acceptedChannels), true);
+            acceptedChannels.clear();
+
+            stopInternal();
+        } finally {
+            closeLock.writeLock().unlock();
         }
     }
 
@@ -604,54 +695,74 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
     // exposed for tests
     static void handleException(TcpChannel channel, Exception e, Lifecycle lifecycle, OutboundHandler outboundHandler) {
-        if (lifecycle.started() == false) {
-            // just close and ignore - we are already stopped and just need to make sure we release all resources
-            CloseableChannel.closeChannel(channel);
-            return;
-        }
 
-        if (isCloseConnectionException(e)) {
-            logger.debug(() -> new ParameterizedMessage(
-                "close connection exception caught on transport layer [{}], disconnecting from relevant node", channel), e);
-            // close the channel, which will cause a node to be disconnected if relevant
-            CloseableChannel.closeChannel(channel);
-        } else if (isConnectException(e)) {
-            logger.debug(() -> new ParameterizedMessage("connect exception caught on transport layer [{}]", channel), e);
-            // close the channel as safe measure, which will cause a node to be disconnected if relevant
-            CloseableChannel.closeChannel(channel);
-        } else if (e instanceof BindException) {
-            logger.debug(() -> new ParameterizedMessage("bind exception caught on transport layer [{}]", channel), e);
-            // close the channel as safe measure, which will cause a node to be disconnected if relevant
-            CloseableChannel.closeChannel(channel);
-        } else if (e instanceof CancelledKeyException) {
-            logger.debug(() -> new ParameterizedMessage(
-                "cancelled key exception caught on transport layer [{}], disconnecting from relevant node", channel), e);
-            // close the channel as safe measure, which will cause a node to be disconnected if relevant
-            CloseableChannel.closeChannel(channel);
-        } else if (e instanceof HttpRequestOnTransportException) {
-            // in case we are able to return data, serialize the exception content and sent it back to the client
-            if (channel.isOpen()) {
-                BytesArray message = new BytesArray(e.getMessage().getBytes(StandardCharsets.UTF_8));
-                outboundHandler.sendBytes(channel, message, ActionListener.wrap(() -> CloseableChannel.closeChannel(channel)));
+        // these exceptions mean the channel cannot be salvaged: disconnect the node so that we reset everything back to a known-good state
+        boolean closeChannel = true;
+
+        try {
+            if (lifecycle.started() == false) {
+                return;
             }
-        } else if (e instanceof StreamCorruptedException) {
-            logger.warn(() -> new ParameterizedMessage("{}, [{}], closing connection", e.getMessage(), channel));
-            CloseableChannel.closeChannel(channel);
-        } else if (e instanceof TransportNotReadyException) {
-            logger.debug(() -> new ParameterizedMessage("{} on [{}], closing connection", e.getMessage(), channel));
-            CloseableChannel.closeChannel(channel);
-        } else {
-            logger.warn(() -> new ParameterizedMessage("exception caught on transport layer [{}], closing connection", channel), e);
-            // close the channel, which will cause a node to be disconnected if relevant
-            CloseableChannel.closeChannel(channel);
+
+            final Level closeConnectionExceptionLevel = NetworkExceptionHelper.getCloseConnectionExceptionLevel(
+                e,
+                outboundHandler.rstOnClose()
+            );
+            if (closeConnectionExceptionLevel != Level.OFF) {
+                if (closeConnectionExceptionLevel == Level.INFO && logger.isDebugEnabled() == false) {
+                    logger.info(
+                        "close connection exception caught on transport layer [{}], disconnecting from relevant node: {}",
+                        channel,
+                        e.getMessage()
+                    );
+                } else {
+                    logger.log(
+                        closeConnectionExceptionLevel,
+                        () -> format(
+                            "close connection exception caught on transport layer [%s], disconnecting from relevant node",
+                            channel
+                        ),
+                        e
+                    );
+                }
+            } else if (isConnectException(e)) {
+                logger.debug(() -> "connect exception caught on transport layer [" + channel + "]", e);
+            } else if (e instanceof BindException) {
+                logger.debug(() -> "bind exception caught on transport layer [" + channel + "]", e);
+            } else if (e instanceof CancelledKeyException) {
+                logger.debug(
+                    () -> format("cancelled key exception caught on transport layer [%s], disconnecting from relevant node", channel),
+                    e
+                );
+            } else if (e instanceof HttpRequestOnTransportException) {
+                // in this case the client is speaking HTTP so we can do something a bit more useful than simply closing the channel
+                if (channel.isOpen()) {
+                    outboundHandler.sendBytes(
+                        channel,
+                        new BytesArray(e.getMessage().getBytes(StandardCharsets.UTF_8)),
+                        ActionListener.wrap(() -> CloseableChannel.closeChannel(channel))
+                    );
+                    closeChannel = false;
+                }
+            } else if (e instanceof StreamCorruptedException) {
+                logger.warn(() -> format("%s, [%s], closing connection", e.getMessage(), channel));
+            } else if (e instanceof TransportNotReadyException) {
+                logger.debug(() -> format("%s on [%s], closing connection", e.getMessage(), channel));
+            } else {
+                logger.warn(() -> "exception caught on transport layer [" + channel + "], closing connection", e);
+            }
+        } finally {
+            if (closeChannel) {
+                CloseableChannel.closeChannel(channel);
+            }
         }
     }
 
-    protected void onServerException(TcpServerChannel channel, Exception e) {
+    protected static void onServerException(TcpServerChannel channel, Exception e) {
         if (e instanceof BindException) {
-            logger.debug(() -> new ParameterizedMessage("bind exception from server channel caught on transport layer [{}]", channel), e);
+            logger.debug(() -> "bind exception from server channel caught on transport layer [" + channel + "]", e);
         } else {
-            logger.error(new ParameterizedMessage("exception from server channel caught on transport layer [{}]", channel), e);
+            logger.error(() -> "exception from server channel caught on transport layer [" + channel + "]", e);
         }
     }
 
@@ -661,7 +772,7 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         // Mark the channel init time
         channel.getChannelStats().markAccessed(threadPool.relativeTimeInMillis());
         channel.addCloseListener(ActionListener.wrap(() -> acceptedChannels.remove(channel)));
-        logger.trace(() -> new ParameterizedMessage("Tcp transport channel accepted: {}", channel));
+        logger.trace(() -> format("Tcp transport channel accepted: %s", channel));
     }
 
     /**
@@ -726,15 +837,21 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
             }
 
             if (appearsToBeHTTPResponse(headerBuffer)) {
-                throw new StreamCorruptedException("received HTTP response on transport port, ensure that transport port (not " +
-                        "HTTP port) of a remote node is specified in the configuration");
+                throw new StreamCorruptedException(
+                    "received HTTP response on transport port, ensure that transport port (not "
+                        + "HTTP port) of a remote node is specified in the configuration"
+                );
             }
 
             String firstBytes = "("
-                    + Integer.toHexString(headerBuffer.get(0) & 0xFF) + ","
-                    + Integer.toHexString(headerBuffer.get(1) & 0xFF) + ","
-                    + Integer.toHexString(headerBuffer.get(2) & 0xFF) + ","
-                    + Integer.toHexString(headerBuffer.get(3) & 0xFF) + ")";
+                + Integer.toHexString(headerBuffer.get(0) & 0xFF)
+                + ","
+                + Integer.toHexString(headerBuffer.get(1) & 0xFF)
+                + ","
+                + Integer.toHexString(headerBuffer.get(2) & 0xFF)
+                + ","
+                + Integer.toHexString(headerBuffer.get(3) & 0xFF)
+                + ")";
 
             if (appearsToBeTLS(headerBuffer)) {
                 throw new StreamCorruptedException("SSL/TLS request received but SSL/TLS is not enabled on this node, got " + firstBytes);
@@ -754,8 +871,13 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         }
 
         if (messageLength > THIRTY_PER_HEAP_SIZE) {
-            throw new IllegalArgumentException("illegal transport message of size [" + new ByteSizeValue(messageLength) +
-                    "] which exceeds 30% of this node's heap size [" + new ByteSizeValue(THIRTY_PER_HEAP_SIZE) + "], closing connection");
+            throw new IllegalArgumentException(
+                "illegal transport message of size ["
+                    + ByteSizeValue.ofBytes(messageLength)
+                    + "] which exceeds 30% of this node's heap size ["
+                    + ByteSizeValue.ofBytes(THIRTY_PER_HEAP_SIZE)
+                    + "], closing connection"
+            );
         }
 
         return messageLength;
@@ -832,6 +954,11 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         return Collections.unmodifiableSet(acceptedChannels);
     }
 
+    @Override
+    public RecyclerBytesStreamOutput newNetworkBytesStream() {
+        return new RecyclerBytesStreamOutput(recycler);
+    }
+
     /**
      * Ensures this transport is still started / open
      *
@@ -845,13 +972,20 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
 
     @Override
     public final TransportStats getStats() {
-        final MeanMetric writeBytesMetric = statsTracker.getWriteBytes();
         final long bytesWritten = statsTracker.getBytesWritten();
         final long messagesSent = statsTracker.getMessagesSent();
         final long messagesReceived = statsTracker.getMessagesReceived();
         final long bytesRead = statsTracker.getBytesRead();
-        return new TransportStats(acceptedChannels.size(), outboundConnectionCount.get(),
-                messagesReceived, bytesRead, messagesSent, bytesWritten);
+        return new TransportStats(
+            acceptedChannels.size(),
+            outboundConnectionCount.get(),
+            messagesReceived,
+            bytesRead,
+            messagesSent,
+            bytesWritten,
+            networkService.getHandlingTimeTracker().getHistogram(),
+            outboundHandlingTimeTracker.getHistogram()
+        );
     }
 
     /**
@@ -910,8 +1044,9 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
                 throw new IllegalStateException("profile [" + profileName + "] has no port configured");
             }
             portOrRange = TransportSettings.PORT_PROFILE.getConcreteSettingForNamespace(profileName).get(settings);
-            publishPort = isDefaultProfile ? TransportSettings.PUBLISH_PORT.get(settings) :
-                TransportSettings.PUBLISH_PORT_PROFILE.getConcreteSettingForNamespace(profileName).get(settings);
+            publishPort = isDefaultProfile
+                ? TransportSettings.PUBLISH_PORT.get(settings)
+                : TransportSettings.PUBLISH_PORT_PROFILE.getConcreteSettingForNamespace(profileName).get(settings);
         }
     }
 
@@ -933,8 +1068,12 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         private final ActionListener<Transport.Connection> listener;
         private final CountDown countDown;
 
-        private ChannelsConnectedListener(DiscoveryNode node, ConnectionProfile connectionProfile, List<TcpChannel> channels,
-                                          ActionListener<Transport.Connection> listener) {
+        private ChannelsConnectedListener(
+            DiscoveryNode node,
+            ConnectionProfile connectionProfile,
+            List<TcpChannel> channels,
+            ActionListener<Transport.Connection> listener
+        ) {
             this.node = node;
             this.connectionProfile = connectionProfile;
             this.channels = channels;
@@ -948,10 +1087,10 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
             if (countDown.countDown()) {
                 final TcpChannel handshakeChannel = channels.get(0);
                 try {
-                    executeHandshake(node, handshakeChannel, connectionProfile, ActionListener.wrap(version -> {
+                    executeHandshake(node, handshakeChannel, connectionProfile, ActionListener.wrap(responseVersion -> {
                         final long connectionId = outboundConnectionCount.incrementAndGet();
                         logger.debug("opened transport connection [{}] to [{}] using channels [{}]", connectionId, node, channels);
-                        NodeChannels nodeChannels = new NodeChannels(node, channels, connectionProfile, version);
+                        NodeChannels nodeChannels = new NodeChannels(node, channels, connectionProfile, responseVersion);
                         long relativeMillisTime = threadPool.relativeTimeInMillis();
                         nodeChannels.channels.forEach(ch -> {
                             // Mark the channel init time
@@ -961,8 +1100,13 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
                         keepAlive.registerNodeConnection(nodeChannels.channels, connectionProfile);
                         nodeChannels.addCloseListener(new ChannelCloseLogger(node, connectionId, relativeMillisTime));
                         listener.onResponse(nodeChannels);
-                    }, e -> closeAndFail(e instanceof ConnectTransportException ?
-                        e : new ConnectTransportException(node, "general node connection failure", e))));
+                    },
+                        e -> closeAndFail(
+                            e instanceof ConnectTransportException
+                                ? e
+                                : new ConnectTransportException(node, "general node connection failure", e)
+                        )
+                    ));
                 } catch (Exception ex) {
                     closeAndFail(ex);
                 }
@@ -1013,6 +1157,27 @@ public abstract class TcpTransport extends AbstractLifecycleComponent implements
         @Override
         public void onFailure(Exception e) {
             assert false : e; // never called
+        }
+    }
+
+    private static final class ChannelOpenTraceLogger implements ActionListener<Void> {
+        private final TcpChannel channel;
+
+        ChannelOpenTraceLogger(TcpChannel channel) {
+            this.channel = channel;
+        }
+
+        @Override
+        public void onResponse(Void unused) {
+            logger.trace("Tcp transport channel opened: {}", channel);
+        }
+
+        @Override
+        public void onFailure(Exception e) {
+            // Connection failures are generally logged elsewhere, but go via the ChannelsConnectedListener which only captures the first
+            // exception for each bundle of channels. If the ChannelOpenTraceLogger is installed then trace-logging is enabled so we can log
+            // every failure.
+            logger.trace(() -> format("failed to open transport channel: %s", channel), e);
         }
     }
 
