@@ -8,6 +8,8 @@
 
 package org.elasticsearch.action.search;
 
+import com.carrotsearch.randomizedtesting.generators.RandomPicks;
+
 import org.apache.lucene.search.TotalHits;
 import org.apache.lucene.util.SetOnce;
 import org.elasticsearch.Version;
@@ -17,8 +19,11 @@ import org.elasticsearch.action.OriginalIndices;
 import org.elasticsearch.action.OriginalIndicesTests;
 import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsGroup;
 import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsResponse;
+import org.elasticsearch.action.support.ActionFilter;
+import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.action.support.replication.ClusterStateCreationUtils;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.block.ClusterBlocks;
@@ -30,24 +35,33 @@ import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.TestShardRouting;
+import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.core.Tuple;
+import org.elasticsearch.common.io.stream.StreamOutput;
+import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
+import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.query.InnerHitBuilder;
 import org.elasticsearch.index.query.MatchAllQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
+import org.elasticsearch.index.query.QueryRewriteContext;
 import org.elasticsearch.index.query.TermsQueryBuilder;
 import org.elasticsearch.index.shard.ShardId;
+import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.rest.RestStatus;
+import org.elasticsearch.search.DummyQueryBuilder;
 import org.elasticsearch.search.Scroll;
 import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
+import org.elasticsearch.search.SearchService;
 import org.elasticsearch.search.SearchShardTarget;
-import org.elasticsearch.search.aggregations.InternalAggregation;
+import org.elasticsearch.search.aggregations.AggregationReduceContext;
 import org.elasticsearch.search.aggregations.InternalAggregations;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.collapse.CollapseBuilder;
@@ -56,6 +70,9 @@ import org.elasticsearch.search.internal.InternalSearchResponse;
 import org.elasticsearch.search.internal.SearchContext;
 import org.elasticsearch.search.internal.ShardSearchContextId;
 import org.elasticsearch.search.sort.SortBuilders;
+import org.elasticsearch.search.suggest.SuggestBuilder;
+import org.elasticsearch.search.suggest.term.TermSuggestionBuilder;
+import org.elasticsearch.search.vectors.KnnSearchBuilder;
 import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.transport.MockTransportService;
@@ -73,6 +90,7 @@ import org.elasticsearch.transport.TransportRequest;
 import org.elasticsearch.transport.TransportRequestOptions;
 import org.elasticsearch.transport.TransportService;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -81,6 +99,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
@@ -89,8 +108,8 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
+import static org.elasticsearch.action.search.SearchRequest.DEFAULT_PRE_FILTER_SHARD_SIZE;
 import static org.elasticsearch.test.InternalAggregationTestCase.emptyReduceContextBuilder;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.awaitLatch;
 import static org.hamcrest.CoreMatchers.containsString;
@@ -99,6 +118,9 @@ import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.CoreMatchers.startsWith;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.hasSize;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class TransportSearchActionTests extends ESTestCase {
 
@@ -110,8 +132,12 @@ public class TransportSearchActionTests extends ESTestCase {
         ThreadPool.terminate(threadPool, 10, TimeUnit.SECONDS);
     }
 
-    private static SearchShardIterator createSearchShardIterator(int id, Index index,
-                                                                 OriginalIndices originalIndices, String clusterAlias) {
+    private static SearchShardIterator createSearchShardIterator(
+        int id,
+        Index index,
+        OriginalIndices originalIndices,
+        String clusterAlias
+    ) {
         ShardId shardId = new ShardId(index, id);
         List<ShardRouting> shardRoutings = GroupShardsIteratorTests.randomShardRoutings(shardId);
         return new SearchShardIterator(clusterAlias, shardId, shardRoutings, originalIndices);
@@ -156,9 +182,13 @@ public class TransportSearchActionTests extends ESTestCase {
                     localShardIterators.add(localIterator);
                     if (rarely()) {
                         String remoteClusterAlias = randomFrom(remoteClusters);
-                        //simulate scenario where the local cluster is also registered as a remote one
-                        SearchShardIterator remoteIterator = createSearchShardIterator(i, index,
-                            OriginalIndicesTests.randomOriginalIndices(), remoteClusterAlias);
+                        // simulate scenario where the local cluster is also registered as a remote one
+                        SearchShardIterator remoteIterator = createSearchShardIterator(
+                            i,
+                            index,
+                            OriginalIndicesTests.randomOriginalIndices(),
+                            remoteClusterAlias
+                        );
                         remoteShardIterators.add(remoteIterator);
                         assert remoteClusterAlias.equals(localClusterAlias) == false;
                         if (remoteClusterAlias.compareTo(localClusterAlias) < 0) {
@@ -174,28 +204,37 @@ public class TransportSearchActionTests extends ESTestCase {
                 } else if (rarely()) {
                     int numClusters = randomIntBetween(1, remoteClusters.length);
                     for (int k = 0; k < numClusters; k++) {
-                        //simulate scenario where the same cluster is registered multiple times with different aliases
+                        // simulate scenario where the same cluster is registered multiple times with different aliases
                         String clusterAlias = remoteClusters[k];
-                        SearchShardIterator iterator = createSearchShardIterator(i, index, OriginalIndicesTests.randomOriginalIndices(),
-                            clusterAlias);
+                        SearchShardIterator iterator = createSearchShardIterator(
+                            i,
+                            index,
+                            OriginalIndicesTests.randomOriginalIndices(),
+                            clusterAlias
+                        );
                         expected.add(iterator);
                         remoteShardIterators.add(iterator);
                     }
                 } else {
-                    SearchShardIterator iterator = createSearchShardIterator(i, index, OriginalIndicesTests.randomOriginalIndices(),
-                        randomFrom(remoteClusters));
+                    SearchShardIterator iterator = createSearchShardIterator(
+                        i,
+                        index,
+                        OriginalIndicesTests.randomOriginalIndices(),
+                        randomFrom(remoteClusters)
+                    );
                     expected.add(iterator);
                     remoteShardIterators.add(iterator);
                 }
             }
         }
 
-
         Collections.shuffle(localShardIterators, random());
         Collections.shuffle(remoteShardIterators, random());
 
-        GroupShardsIterator<SearchShardIterator> groupShardsIterator =
-            TransportSearchAction.mergeShardsIterators(localShardIterators, remoteShardIterators);
+        GroupShardsIterator<SearchShardIterator> groupShardsIterator = TransportSearchAction.mergeShardsIterators(
+            localShardIterators,
+            remoteShardIterators
+        );
         List<SearchShardIterator> result = new ArrayList<>();
         for (SearchShardIterator searchShardIterator : groupShardsIterator) {
             result.add(searchShardIterator);
@@ -204,55 +243,65 @@ public class TransportSearchActionTests extends ESTestCase {
     }
 
     public void testProcessRemoteShards() {
-        try (TransportService transportService = MockTransportService.createNewService(Settings.EMPTY, Version.CURRENT, threadPool,
-            null)) {
+        try (TransportService transportService = MockTransportService.createNewService(Settings.EMPTY, Version.CURRENT, threadPool, null)) {
             RemoteClusterService service = transportService.getRemoteClusterService();
             assertFalse(service.isCrossClusterSearchEnabled());
             Map<String, ClusterSearchShardsResponse> searchShardsResponseMap = new HashMap<>();
             DiscoveryNode[] nodes = new DiscoveryNode[] {
                 new DiscoveryNode("node1", buildNewFakeTransportAddress(), Version.CURRENT),
-                new DiscoveryNode("node2", buildNewFakeTransportAddress(), Version.CURRENT)
-            };
+                new DiscoveryNode("node2", buildNewFakeTransportAddress(), Version.CURRENT) };
             Map<String, AliasFilter> indicesAndAliases = new HashMap<>();
-            indicesAndAliases.put("foo", new AliasFilter(new TermsQueryBuilder("foo", "bar"), "some_alias_for_foo",
-                "some_other_foo_alias"));
-            indicesAndAliases.put("bar", new AliasFilter(new MatchAllQueryBuilder(), Strings.EMPTY_ARRAY));
+            indicesAndAliases.put("foo", AliasFilter.of(new TermsQueryBuilder("foo", "bar"), "some_alias_for_foo", "some_other_foo_alias"));
+            indicesAndAliases.put("bar", AliasFilter.of(new MatchAllQueryBuilder(), Strings.EMPTY_ARRAY));
             ClusterSearchShardsGroup[] groups = new ClusterSearchShardsGroup[] {
-                new ClusterSearchShardsGroup(new ShardId("foo", "foo_id", 0),
-                    new ShardRouting[] {TestShardRouting.newShardRouting("foo", 0, "node1", true, ShardRoutingState.STARTED),
-                        TestShardRouting.newShardRouting("foo", 0, "node2", false, ShardRoutingState.STARTED)}),
-                new ClusterSearchShardsGroup(new ShardId("foo", "foo_id", 1),
-                    new ShardRouting[] {TestShardRouting.newShardRouting("foo", 0, "node1", true, ShardRoutingState.STARTED),
-                        TestShardRouting.newShardRouting("foo", 1, "node2", false, ShardRoutingState.STARTED)}),
-                new ClusterSearchShardsGroup(new ShardId("bar", "bar_id", 0),
-                    new ShardRouting[] {TestShardRouting.newShardRouting("bar", 0, "node2", true, ShardRoutingState.STARTED),
-                        TestShardRouting.newShardRouting("bar", 0, "node1", false, ShardRoutingState.STARTED)})
-            };
+                new ClusterSearchShardsGroup(
+                    new ShardId("foo", "foo_id", 0),
+                    new ShardRouting[] {
+                        TestShardRouting.newShardRouting("foo", 0, "node1", true, ShardRoutingState.STARTED),
+                        TestShardRouting.newShardRouting("foo", 0, "node2", false, ShardRoutingState.STARTED) }
+                ),
+                new ClusterSearchShardsGroup(
+                    new ShardId("foo", "foo_id", 1),
+                    new ShardRouting[] {
+                        TestShardRouting.newShardRouting("foo", 0, "node1", true, ShardRoutingState.STARTED),
+                        TestShardRouting.newShardRouting("foo", 1, "node2", false, ShardRoutingState.STARTED) }
+                ),
+                new ClusterSearchShardsGroup(
+                    new ShardId("bar", "bar_id", 0),
+                    new ShardRouting[] {
+                        TestShardRouting.newShardRouting("bar", 0, "node2", true, ShardRoutingState.STARTED),
+                        TestShardRouting.newShardRouting("bar", 0, "node1", false, ShardRoutingState.STARTED) }
+                ) };
             searchShardsResponseMap.put("test_cluster_1", new ClusterSearchShardsResponse(groups, nodes, indicesAndAliases));
-            DiscoveryNode[] nodes2 = new DiscoveryNode[] {
-                new DiscoveryNode("node3", buildNewFakeTransportAddress(), Version.CURRENT)
-            };
+            DiscoveryNode[] nodes2 = new DiscoveryNode[] { new DiscoveryNode("node3", buildNewFakeTransportAddress(), Version.CURRENT) };
             ClusterSearchShardsGroup[] groups2 = new ClusterSearchShardsGroup[] {
-                new ClusterSearchShardsGroup(new ShardId("xyz", "xyz_id", 0),
-                    new ShardRouting[] {TestShardRouting.newShardRouting("xyz", 0, "node3", true, ShardRoutingState.STARTED)})
-            };
+                new ClusterSearchShardsGroup(
+                    new ShardId("xyz", "xyz_id", 0),
+                    new ShardRouting[] { TestShardRouting.newShardRouting("xyz", 0, "node3", true, ShardRoutingState.STARTED) }
+                ) };
             Map<String, AliasFilter> filter = new HashMap<>();
-            filter.put("xyz", new AliasFilter(null, "some_alias_for_xyz"));
+            filter.put("xyz", AliasFilter.of(null, "some_alias_for_xyz"));
             searchShardsResponseMap.put("test_cluster_2", new ClusterSearchShardsResponse(groups2, nodes2, filter));
 
             Map<String, OriginalIndices> remoteIndicesByCluster = new HashMap<>();
-            remoteIndicesByCluster.put("test_cluster_1",
-                new OriginalIndices(new String[]{"fo*", "ba*"}, SearchRequest.DEFAULT_INDICES_OPTIONS));
-            remoteIndicesByCluster.put("test_cluster_2",
-                new OriginalIndices(new String[]{"x*"}, SearchRequest.DEFAULT_INDICES_OPTIONS));
+            remoteIndicesByCluster.put(
+                "test_cluster_1",
+                new OriginalIndices(new String[] { "fo*", "ba*" }, SearchRequest.DEFAULT_INDICES_OPTIONS)
+            );
+            remoteIndicesByCluster.put("test_cluster_2", new OriginalIndices(new String[] { "x*" }, SearchRequest.DEFAULT_INDICES_OPTIONS));
             Map<String, AliasFilter> remoteAliases = TransportSearchAction.getRemoteAliasFilters(searchShardsResponseMap);
-            List<SearchShardIterator> iteratorList =
-                TransportSearchAction.getRemoteShardsIterator(searchShardsResponseMap, remoteIndicesByCluster, remoteAliases);
+            List<SearchShardIterator> iteratorList = TransportSearchAction.getRemoteShardsIterator(
+                searchShardsResponseMap,
+                remoteIndicesByCluster,
+                remoteAliases
+            );
             assertEquals(4, iteratorList.size());
             for (SearchShardIterator iterator : iteratorList) {
                 if (iterator.shardId().getIndexName().endsWith("foo")) {
-                    assertArrayEquals(new String[]{"some_alias_for_foo", "some_other_foo_alias"},
-                        iterator.getOriginalIndices().indices());
+                    assertArrayEquals(
+                        new String[] { "some_alias_for_foo", "some_other_foo_alias" },
+                        iterator.getOriginalIndices().indices()
+                    );
                     assertTrue(iterator.shardId().getId() == 0 || iterator.shardId().getId() == 1);
                     assertEquals("test_cluster_1", iterator.getClusterAlias());
                     assertEquals("foo", iterator.shardId().getIndexName());
@@ -264,7 +313,7 @@ public class TransportSearchActionTests extends ESTestCase {
                     assertEquals(shard.getShardId().getIndexName(), "foo");
                     assertNull(iterator.nextOrNull());
                 } else if (iterator.shardId().getIndexName().endsWith("bar")) {
-                    assertArrayEquals(new String[]{"bar"}, iterator.getOriginalIndices().indices());
+                    assertArrayEquals(new String[] { "bar" }, iterator.getOriginalIndices().indices());
                     assertEquals(0, iterator.shardId().getId());
                     assertEquals("test_cluster_1", iterator.getClusterAlias());
                     assertEquals("bar", iterator.shardId().getIndexName());
@@ -276,7 +325,7 @@ public class TransportSearchActionTests extends ESTestCase {
                     assertEquals(shard.getShardId().getIndexName(), "bar");
                     assertNull(iterator.nextOrNull());
                 } else if (iterator.shardId().getIndexName().endsWith("xyz")) {
-                    assertArrayEquals(new String[]{"some_alias_for_xyz"}, iterator.getOriginalIndices().indices());
+                    assertArrayEquals(new String[] { "some_alias_for_xyz" }, iterator.getOriginalIndices().indices());
                     assertEquals(0, iterator.shardId().getId());
                     assertEquals("xyz", iterator.shardId().getIndexName());
                     assertEquals("test_cluster_2", iterator.getClusterAlias());
@@ -297,10 +346,16 @@ public class TransportSearchActionTests extends ESTestCase {
     }
 
     public void testBuildConnectionLookup() {
-        Function<String, DiscoveryNode> localNodes = (nodeId) -> new DiscoveryNode("local-" + nodeId,
-            new TransportAddress(TransportAddress.META_ADDRESS, 1024), Version.CURRENT);
-        BiFunction<String, String, DiscoveryNode> remoteNodes = (clusterAlias, nodeId) -> new DiscoveryNode("remote-" + nodeId,
-            new TransportAddress(TransportAddress.META_ADDRESS, 2048), Version.CURRENT);
+        Function<String, DiscoveryNode> localNodes = (nodeId) -> new DiscoveryNode(
+            "local-" + nodeId,
+            new TransportAddress(TransportAddress.META_ADDRESS, 1024),
+            Version.CURRENT
+        );
+        BiFunction<String, String, DiscoveryNode> remoteNodes = (clusterAlias, nodeId) -> new DiscoveryNode(
+            "remote-" + nodeId,
+            new TransportAddress(TransportAddress.META_ADDRESS, 2048),
+            Version.CURRENT
+        );
         BiFunction<String, DiscoveryNode, Transport.Connection> nodeToConnection = (clusterAlias, node) -> new Transport.Connection() {
             @Override
             public DiscoveryNode getNode() {
@@ -309,12 +364,13 @@ public class TransportSearchActionTests extends ESTestCase {
 
             @Override
             public void sendRequest(long requestId, String action, TransportRequest request, TransportRequestOptions options)
-                throws TransportException {
-            }
+                throws TransportException {}
 
             @Override
-            public void addCloseListener(ActionListener<Void> listener) {
-            }
+            public void addCloseListener(ActionListener<Void> listener) {}
+
+            @Override
+            public void addRemovedListener(ActionListener<Void> listener) {}
 
             @Override
             public boolean isClosed() {
@@ -322,50 +378,98 @@ public class TransportSearchActionTests extends ESTestCase {
             }
 
             @Override
-            public void close() {
+            public void close() {}
+
+            @Override
+            public void incRef() {}
+
+            @Override
+            public boolean tryIncRef() {
+                return true;
+            }
+
+            @Override
+            public boolean decRef() {
+                assert false : "shouldn't release a mock connection";
+                return false;
+            }
+
+            @Override
+            public boolean hasReferences() {
+                return true;
+            }
+
+            @Override
+            public void onRemoved() {
+                assert false : "shouldn't remove a mock connection";
             }
         };
 
         {
             BiFunction<String, String, Transport.Connection> connectionLookup = TransportSearchAction.buildConnectionLookup(
-                null, localNodes, remoteNodes, nodeToConnection);
+                null,
+                localNodes,
+                remoteNodes,
+                nodeToConnection
+            );
 
             Transport.Connection localConnection = connectionLookup.apply(null, randomAlphaOfLengthBetween(5, 10));
             assertThat(localConnection.getNode().getId(), startsWith("local-"));
-            Transport.Connection remoteConnection = connectionLookup.apply(randomAlphaOfLengthBetween(5, 10),
-                randomAlphaOfLengthBetween(5, 10));
+            Transport.Connection remoteConnection = connectionLookup.apply(
+                randomAlphaOfLengthBetween(5, 10),
+                randomAlphaOfLengthBetween(5, 10)
+            );
             assertThat(remoteConnection.getNode().getId(), startsWith("remote-"));
         }
         {
             String requestClusterAlias = randomAlphaOfLengthBetween(5, 10);
             BiFunction<String, String, Transport.Connection> connectionLookup = TransportSearchAction.buildConnectionLookup(
-                requestClusterAlias, localNodes, remoteNodes, nodeToConnection);
+                requestClusterAlias,
+                localNodes,
+                remoteNodes,
+                nodeToConnection
+            );
 
             Transport.Connection localConnection = connectionLookup.apply(requestClusterAlias, randomAlphaOfLengthBetween(5, 10));
             assertThat(localConnection.getNode().getId(), startsWith("local-"));
         }
     }
 
-    private MockTransportService[] startTransport(int numClusters, DiscoveryNode[] nodes, Map<String, OriginalIndices> remoteIndices,
-                                                  Settings.Builder settingsBuilder) {
+    private MockTransportService[] startTransport(
+        int numClusters,
+        DiscoveryNode[] nodes,
+        Map<String, OriginalIndices> remoteIndices,
+        Settings.Builder settingsBuilder
+    ) {
         MockTransportService[] mockTransportServices = new MockTransportService[numClusters];
         for (int i = 0; i < numClusters; i++) {
             List<DiscoveryNode> knownNodes = new CopyOnWriteArrayList<>();
-            MockTransportService remoteSeedTransport = RemoteClusterConnectionTests.startTransport("node_remote" + i, knownNodes,
-                Version.CURRENT, threadPool);
+            MockTransportService remoteSeedTransport = RemoteClusterConnectionTests.startTransport(
+                "node_remote" + i,
+                knownNodes,
+                Version.CURRENT,
+                threadPool
+            );
             mockTransportServices[i] = remoteSeedTransport;
             DiscoveryNode remoteSeedNode = remoteSeedTransport.getLocalDiscoNode();
             knownNodes.add(remoteSeedNode);
             nodes[i] = remoteSeedNode;
             settingsBuilder.put("cluster.remote.remote" + i + ".seeds", remoteSeedNode.getAddress().toString());
-            remoteIndices.put("remote" + i, new OriginalIndices(new String[]{"index"}, IndicesOptions.lenientExpandOpen()));
+            remoteIndices.put("remote" + i, new OriginalIndices(new String[] { "index" }, IndicesOptions.lenientExpandOpen()));
         }
         return mockTransportServices;
     }
 
     private static SearchResponse emptySearchResponse() {
-        InternalSearchResponse response = new InternalSearchResponse(new SearchHits(new SearchHit[0],
-            new TotalHits(0, TotalHits.Relation.EQUAL_TO), Float.NaN), InternalAggregations.EMPTY, null, null, false, null, 1);
+        InternalSearchResponse response = new InternalSearchResponse(
+            new SearchHits(new SearchHit[0], new TotalHits(0, TotalHits.Relation.EQUAL_TO), Float.NaN),
+            InternalAggregations.EMPTY,
+            null,
+            null,
+            false,
+            null,
+            1
+        );
         return new SearchResponse(response, null, 1, 1, 0, 100, ShardSearchFailure.EMPTY_ARRAY, SearchResponse.Clusters.EMPTY, null);
     }
 
@@ -377,9 +481,9 @@ public class TransportSearchActionTests extends ESTestCase {
         MockTransportService[] mockTransportServices = startTransport(numClusters, nodes, remoteIndicesByCluster, builder);
         Settings settings = builder.build();
         boolean local = randomBoolean();
-        OriginalIndices localIndices = local ? new OriginalIndices(new String[]{"index"}, SearchRequest.DEFAULT_INDICES_OPTIONS) : null;
+        OriginalIndices localIndices = local ? new OriginalIndices(new String[] { "index" }, SearchRequest.DEFAULT_INDICES_OPTIONS) : null;
         TransportSearchAction.SearchTimeProvider timeProvider = new TransportSearchAction.SearchTimeProvider(0, 0, () -> 0);
-        Function<Boolean, InternalAggregation.ReduceContext> reduceContext = finalReduce -> null;
+        Function<Boolean, AggregationReduceContext> reduceContext = finalReduce -> null;
         try (MockTransportService service = MockTransportService.createNewService(settings, Version.CURRENT, threadPool, null)) {
             service.start();
             service.acceptIncomingRequests();
@@ -390,9 +494,21 @@ public class TransportSearchActionTests extends ESTestCase {
             SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
             AtomicReference<Exception> failure = new AtomicReference<>();
             LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                ActionListener.wrap(r -> fail("no response expected"), failure::set), latch);
-            TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                    emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                ActionListener.wrap(r -> fail("no response expected"), failure::set),
+                latch
+            );
+            TransportSearchAction.ccsRemoteReduce(
+                new TaskId("n", 1),
+                searchRequest,
+                localIndices,
+                remoteIndicesByCluster,
+                timeProvider,
+                emptyReduceContextBuilder(),
+                remoteClusterService,
+                threadPool,
+                listener,
+                (r, l) -> setOnce.set(Tuple.tuple(r, l))
+            );
             if (localIndices == null) {
                 assertNull(setOnce.get());
             } else {
@@ -403,8 +519,8 @@ public class TransportSearchActionTests extends ESTestCase {
             }
             awaitLatch(latch, 5, TimeUnit.SECONDS);
             assertNotNull(failure.get());
-            //the intention here is not to test that we throw NPE, rather to trigger a situation that makes
-            //SearchResponseMerger#getMergedResponse fail unexpectedly and verify that the listener is properly notified with the NPE
+            // the intention here is not to test that we throw NPE, rather to trigger a situation that makes
+            // SearchResponseMerger#getMergedResponse fail unexpectedly and verify that the listener is properly notified with the NPE
             assertThat(failure.get(), instanceOf(NullPointerException.class));
             assertEquals(0, service.getConnectionManager().size());
         } finally {
@@ -422,7 +538,7 @@ public class TransportSearchActionTests extends ESTestCase {
         MockTransportService[] mockTransportServices = startTransport(numClusters, nodes, remoteIndicesByCluster, builder);
         Settings settings = builder.build();
         boolean local = randomBoolean();
-        OriginalIndices localIndices = local ? new OriginalIndices(new String[]{"index"}, SearchRequest.DEFAULT_INDICES_OPTIONS) : null;
+        OriginalIndices localIndices = local ? new OriginalIndices(new String[] { "index" }, SearchRequest.DEFAULT_INDICES_OPTIONS) : null;
         int totalClusters = numClusters + (local ? 1 : 0);
         TransportSearchAction.SearchTimeProvider timeProvider = new TransportSearchAction.SearchTimeProvider(0, 0, () -> 0);
         try (MockTransportService service = MockTransportService.createNewService(settings, Version.CURRENT, threadPool, null)) {
@@ -435,9 +551,21 @@ public class TransportSearchActionTests extends ESTestCase {
                 SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
                 AtomicReference<SearchResponse> response = new AtomicReference<>();
                 LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                    ActionListener.wrap(response::set, e -> fail("no failures expected")), latch);
-                TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                        emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                    ActionListener.wrap(response::set, e -> fail("no failures expected")),
+                    latch
+                );
+                TransportSearchAction.ccsRemoteReduce(
+                    new TaskId("n", 1),
+                    searchRequest,
+                    localIndices,
+                    remoteIndicesByCluster,
+                    timeProvider,
+                    emptyReduceContextBuilder(),
+                    remoteClusterService,
+                    threadPool,
+                    listener,
+                    (r, l) -> setOnce.set(Tuple.tuple(r, l))
+                );
                 if (localIndices == null) {
                     assertNull(setOnce.get());
                 } else {
@@ -461,9 +589,21 @@ public class TransportSearchActionTests extends ESTestCase {
                 SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
                 AtomicReference<Exception> failure = new AtomicReference<>();
                 LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                    ActionListener.wrap(r -> fail("no response expected"), failure::set), latch);
-                TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                        emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                    ActionListener.wrap(r -> fail("no response expected"), failure::set),
+                    latch
+                );
+                TransportSearchAction.ccsRemoteReduce(
+                    new TaskId("n", 1),
+                    searchRequest,
+                    localIndices,
+                    remoteIndicesByCluster,
+                    timeProvider,
+                    emptyReduceContextBuilder(),
+                    remoteClusterService,
+                    threadPool,
+                    listener,
+                    (r, l) -> setOnce.set(Tuple.tuple(r, l))
+                );
                 if (localIndices == null) {
                     assertNull(setOnce.get());
                 } else {
@@ -480,8 +620,8 @@ public class TransportSearchActionTests extends ESTestCase {
             }
 
             int numDisconnectedClusters = randomIntBetween(1, numClusters);
-            Set<DiscoveryNode> disconnectedNodes = new HashSet<>(numDisconnectedClusters);
-            Set<Integer> disconnectedNodesIndices = new HashSet<>(numDisconnectedClusters);
+            Set<DiscoveryNode> disconnectedNodes = Sets.newHashSetWithExpectedSize(numDisconnectedClusters);
+            Set<Integer> disconnectedNodesIndices = Sets.newHashSetWithExpectedSize(numDisconnectedClusters);
             while (disconnectedNodes.size() < numDisconnectedClusters) {
                 int i = randomIntBetween(0, numClusters - 1);
                 if (disconnectedNodes.add(nodes[i])) {
@@ -508,9 +648,21 @@ public class TransportSearchActionTests extends ESTestCase {
                 SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
                 AtomicReference<Exception> failure = new AtomicReference<>();
                 LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                    ActionListener.wrap(r -> fail("no response expected"), failure::set), latch);
-                TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                        emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                    ActionListener.wrap(r -> fail("no response expected"), failure::set),
+                    latch
+                );
+                TransportSearchAction.ccsRemoteReduce(
+                    new TaskId("n", 1),
+                    searchRequest,
+                    localIndices,
+                    remoteIndicesByCluster,
+                    timeProvider,
+                    emptyReduceContextBuilder(),
+                    remoteClusterService,
+                    threadPool,
+                    listener,
+                    (r, l) -> setOnce.set(Tuple.tuple(r, l))
+                );
                 if (localIndices == null) {
                     assertNull(setOnce.get());
                 } else {
@@ -526,7 +678,7 @@ public class TransportSearchActionTests extends ESTestCase {
                 assertThat(failure.get().getCause(), instanceOf(NodeDisconnectedException.class));
             }
 
-            //setting skip_unavailable to true for all the disconnected clusters will make the request succeed again
+            // setting skip_unavailable to true for all the disconnected clusters will make the request succeed again
             for (int i : disconnectedNodesIndices) {
                 RemoteClusterServiceTests.updateSkipUnavailable(remoteClusterService, "remote" + i, true);
             }
@@ -537,9 +689,21 @@ public class TransportSearchActionTests extends ESTestCase {
                 SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
                 AtomicReference<SearchResponse> response = new AtomicReference<>();
                 LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                    ActionListener.wrap(response::set, e -> fail("no failures expected")), latch);
-                TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                        emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                    ActionListener.wrap(response::set, e -> fail("no failures expected")),
+                    latch
+                );
+                TransportSearchAction.ccsRemoteReduce(
+                    new TaskId("n", 1),
+                    searchRequest,
+                    localIndices,
+                    remoteIndicesByCluster,
+                    timeProvider,
+                    emptyReduceContextBuilder(),
+                    remoteClusterService,
+                    threadPool,
+                    listener,
+                    (r, l) -> setOnce.set(Tuple.tuple(r, l))
+                );
                 if (localIndices == null) {
                     assertNull(setOnce.get());
                 } else {
@@ -558,8 +722,8 @@ public class TransportSearchActionTests extends ESTestCase {
                 assertEquals(successful == 0 ? 0 : successful + 1, searchResponse.getNumReducePhases());
             }
 
-            //give transport service enough time to realize that the node is down, and to notify the connection listeners
-            //so that RemoteClusterConnection is left with no connected nodes, hence it will retry connecting next
+            // give transport service enough time to realize that the node is down, and to notify the connection listeners
+            // so that RemoteClusterConnection is left with no connected nodes, hence it will retry connecting next
             assertTrue(disconnectedLatch.await(5, TimeUnit.SECONDS));
 
             service.clearAllRules();
@@ -571,15 +735,28 @@ public class TransportSearchActionTests extends ESTestCase {
 
                 }
             }
-            {
+            // put the following in assert busy as connections are lazily reestablished
+            assertBusy(() -> {
                 SearchRequest searchRequest = new SearchRequest();
                 final CountDownLatch latch = new CountDownLatch(1);
                 SetOnce<Tuple<SearchRequest, ActionListener<SearchResponse>>> setOnce = new SetOnce<>();
                 AtomicReference<SearchResponse> response = new AtomicReference<>();
                 LatchedActionListener<SearchResponse> listener = new LatchedActionListener<>(
-                    ActionListener.wrap(response::set, e -> fail("no failures expected")), latch);
-                TransportSearchAction.ccsRemoteReduce(new TaskId("n", 1), searchRequest, localIndices, remoteIndicesByCluster, timeProvider,
-                        emptyReduceContextBuilder(), remoteClusterService, threadPool, listener, (r, l) -> setOnce.set(Tuple.tuple(r, l)));
+                    ActionListener.wrap(response::set, e -> fail("no failures expected")),
+                    latch
+                );
+                TransportSearchAction.ccsRemoteReduce(
+                    new TaskId("n", 1),
+                    searchRequest,
+                    localIndices,
+                    remoteIndicesByCluster,
+                    timeProvider,
+                    emptyReduceContextBuilder(),
+                    remoteClusterService,
+                    threadPool,
+                    listener,
+                    (r, l) -> setOnce.set(Tuple.tuple(r, l))
+                );
                 if (localIndices == null) {
                     assertNull(setOnce.get());
                 } else {
@@ -595,7 +772,7 @@ public class TransportSearchActionTests extends ESTestCase {
                 assertEquals(totalClusters, searchResponse.getClusters().getTotal());
                 assertEquals(totalClusters, searchResponse.getClusters().getSuccessful());
                 assertEquals(totalClusters == 1 ? 1 : totalClusters + 1, searchResponse.getNumReducePhases());
-            }
+            });
             assertEquals(0, service.getConnectionManager().size());
         } finally {
             for (MockTransportService mockTransportService : mockTransportServices) {
@@ -619,9 +796,16 @@ public class TransportSearchActionTests extends ESTestCase {
                 final CountDownLatch latch = new CountDownLatch(1);
                 AtomicReference<Map<String, ClusterSearchShardsResponse>> response = new AtomicReference<>();
                 AtomicInteger skippedClusters = new AtomicInteger();
-                TransportSearchAction.collectSearchShards(IndicesOptions.lenientExpandOpen(), null, null, skippedClusters,
-                    remoteIndicesByCluster, remoteClusterService, threadPool,
-                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch));
+                TransportSearchAction.collectSearchShards(
+                    IndicesOptions.lenientExpandOpen(),
+                    null,
+                    null,
+                    skippedClusters,
+                    remoteIndicesByCluster,
+                    remoteClusterService,
+                    threadPool,
+                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch)
+                );
                 awaitLatch(latch, 5, TimeUnit.SECONDS);
                 assertEquals(0, skippedClusters.get());
                 assertNotNull(response.get());
@@ -638,9 +822,16 @@ public class TransportSearchActionTests extends ESTestCase {
                 final CountDownLatch latch = new CountDownLatch(1);
                 AtomicReference<Exception> failure = new AtomicReference<>();
                 AtomicInteger skippedClusters = new AtomicInteger(0);
-                TransportSearchAction.collectSearchShards(IndicesOptions.lenientExpandOpen(), "index_not_found", null, skippedClusters,
-                    remoteIndicesByCluster, remoteClusterService, threadPool,
-                    new LatchedActionListener<>(ActionListener.wrap(r -> fail("no response expected"), failure::set), latch));
+                TransportSearchAction.collectSearchShards(
+                    IndicesOptions.lenientExpandOpen(),
+                    "index_not_found",
+                    null,
+                    skippedClusters,
+                    remoteIndicesByCluster,
+                    remoteClusterService,
+                    threadPool,
+                    new LatchedActionListener<>(ActionListener.wrap(r -> fail("no response expected"), failure::set), latch)
+                );
                 awaitLatch(latch, 5, TimeUnit.SECONDS);
                 assertEquals(0, skippedClusters.get());
                 assertNotNull(failure.get());
@@ -650,8 +841,8 @@ public class TransportSearchActionTests extends ESTestCase {
             }
 
             int numDisconnectedClusters = randomIntBetween(1, numClusters);
-            Set<DiscoveryNode> disconnectedNodes = new HashSet<>(numDisconnectedClusters);
-            Set<Integer> disconnectedNodesIndices = new HashSet<>(numDisconnectedClusters);
+            Set<DiscoveryNode> disconnectedNodes = Sets.newHashSetWithExpectedSize(numDisconnectedClusters);
+            Set<Integer> disconnectedNodesIndices = Sets.newHashSetWithExpectedSize(numDisconnectedClusters);
             while (disconnectedNodes.size() < numDisconnectedClusters) {
                 int i = randomIntBetween(0, numClusters - 1);
                 if (disconnectedNodes.add(nodes[i])) {
@@ -676,9 +867,16 @@ public class TransportSearchActionTests extends ESTestCase {
                 final CountDownLatch latch = new CountDownLatch(1);
                 AtomicInteger skippedClusters = new AtomicInteger(0);
                 AtomicReference<Exception> failure = new AtomicReference<>();
-                TransportSearchAction.collectSearchShards(IndicesOptions.lenientExpandOpen(), null, null, skippedClusters,
-                    remoteIndicesByCluster, remoteClusterService, threadPool,
-                    new LatchedActionListener<>(ActionListener.wrap(r -> fail("no response expected"), failure::set), latch));
+                TransportSearchAction.collectSearchShards(
+                    IndicesOptions.lenientExpandOpen(),
+                    null,
+                    null,
+                    skippedClusters,
+                    remoteIndicesByCluster,
+                    remoteClusterService,
+                    threadPool,
+                    new LatchedActionListener<>(ActionListener.wrap(r -> fail("no response expected"), failure::set), latch)
+                );
                 awaitLatch(latch, 5, TimeUnit.SECONDS);
                 assertEquals(0, skippedClusters.get());
                 assertNotNull(failure.get());
@@ -687,7 +885,7 @@ public class TransportSearchActionTests extends ESTestCase {
                 assertThat(failure.get().getCause(), instanceOf(NodeDisconnectedException.class));
             }
 
-            //setting skip_unavailable to true for all the disconnected clusters will make the request succeed again
+            // setting skip_unavailable to true for all the disconnected clusters will make the request succeed again
             for (int i : disconnectedNodesIndices) {
                 RemoteClusterServiceTests.updateSkipUnavailable(remoteClusterService, "remote" + i, true);
             }
@@ -696,9 +894,16 @@ public class TransportSearchActionTests extends ESTestCase {
                 final CountDownLatch latch = new CountDownLatch(1);
                 AtomicInteger skippedClusters = new AtomicInteger(0);
                 AtomicReference<Map<String, ClusterSearchShardsResponse>> response = new AtomicReference<>();
-                TransportSearchAction.collectSearchShards(IndicesOptions.lenientExpandOpen(), null, null, skippedClusters,
-                    remoteIndicesByCluster, remoteClusterService, threadPool,
-                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch));
+                TransportSearchAction.collectSearchShards(
+                    IndicesOptions.lenientExpandOpen(),
+                    null,
+                    null,
+                    skippedClusters,
+                    remoteIndicesByCluster,
+                    remoteClusterService,
+                    threadPool,
+                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch)
+                );
                 awaitLatch(latch, 5, TimeUnit.SECONDS);
                 assertNotNull(response.get());
                 Map<String, ClusterSearchShardsResponse> map = response.get();
@@ -714,8 +919,8 @@ public class TransportSearchActionTests extends ESTestCase {
                 }
             }
 
-            //give transport service enough time to realize that the node is down, and to notify the connection listeners
-            //so that RemoteClusterConnection is left with no connected nodes, hence it will retry connecting next
+            // give transport service enough time to realize that the node is down, and to notify the connection listeners
+            // so that RemoteClusterConnection is left with no connected nodes, hence it will retry connecting next
             assertTrue(disconnectedLatch.await(5, TimeUnit.SECONDS));
 
             service.clearAllRules();
@@ -727,13 +932,21 @@ public class TransportSearchActionTests extends ESTestCase {
 
                 }
             }
-            {
+            // run the following under assertBusy as connections are lazily reestablished
+            assertBusy(() -> {
                 final CountDownLatch latch = new CountDownLatch(1);
                 AtomicInteger skippedClusters = new AtomicInteger(0);
                 AtomicReference<Map<String, ClusterSearchShardsResponse>> response = new AtomicReference<>();
-                TransportSearchAction.collectSearchShards(IndicesOptions.lenientExpandOpen(), null, null, skippedClusters,
-                    remoteIndicesByCluster, remoteClusterService, threadPool,
-                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch));
+                TransportSearchAction.collectSearchShards(
+                    IndicesOptions.lenientExpandOpen(),
+                    null,
+                    null,
+                    skippedClusters,
+                    remoteIndicesByCluster,
+                    remoteClusterService,
+                    threadPool,
+                    new LatchedActionListener<>(ActionListener.wrap(response::set, e -> fail("no failures expected")), latch)
+                );
                 awaitLatch(latch, 5, TimeUnit.SECONDS);
                 assertEquals(0, skippedClusters.get());
                 assertNotNull(response.get());
@@ -744,7 +957,7 @@ public class TransportSearchActionTests extends ESTestCase {
                     assertTrue(map.containsKey(clusterAlias));
                     assertNotNull(map.get(clusterAlias));
                 }
-            }
+            });
             assertEquals(0, service.getConnectionManager().size());
         } finally {
             for (MockTransportService mockTransportService : mockTransportServices) {
@@ -761,7 +974,10 @@ public class TransportSearchActionTests extends ESTestCase {
             assertEquals(-1, source.from());
             assertNull(source.trackTotalHitsUpTo());
             SearchResponseMerger merger = TransportSearchAction.createSearchResponseMerger(
-                    source, timeProvider, emptyReduceContextBuilder());
+                source,
+                timeProvider,
+                emptyReduceContextBuilder()
+            );
             assertEquals(0, merger.from);
             assertEquals(10, merger.size);
             assertEquals(SearchContext.DEFAULT_TRACK_TOTAL_HITS_UP_TO, merger.trackTotalHitsUpTo);
@@ -784,10 +1000,13 @@ public class TransportSearchActionTests extends ESTestCase {
             int trackTotalHitsUpTo = randomIntBetween(0, Integer.MAX_VALUE);
             source.trackTotalHitsUpTo(trackTotalHitsUpTo);
             SearchResponseMerger merger = TransportSearchAction.createSearchResponseMerger(
-                    source, timeProvider, emptyReduceContextBuilder());
+                source,
+                timeProvider,
+                emptyReduceContextBuilder()
+            );
             assertEquals(0, source.from());
             assertEquals(originalFrom + originalSize, source.size());
-            assertEquals(trackTotalHitsUpTo, (int)source.trackTotalHitsUpTo());
+            assertEquals(trackTotalHitsUpTo, (int) source.trackTotalHitsUpTo());
             assertEquals(originalFrom, merger.from);
             assertEquals(originalSize, merger.size);
             assertEquals(trackTotalHitsUpTo, merger.trackTotalHitsUpTo);
@@ -827,11 +1046,12 @@ public class TransportSearchActionTests extends ESTestCase {
             SearchRequestTests searchRequestTests = new SearchRequestTests();
             searchRequestTests.setUp();
             SearchRequest searchRequest = searchRequestTests.createSearchRequest();
-            searchRequest.scroll((Scroll)null);
+            searchRequest.scroll((Scroll) null);
             searchRequest.searchType(SearchType.QUERY_THEN_FETCH);
             SearchSourceBuilder source = searchRequest.source();
             if (source != null) {
                 source.pointInTimeBuilder(null);
+                source.knnSearch(null);
                 CollapseBuilder collapse = source.collapse();
                 if (collapse != null) {
                     collapse.setInnerHits(Collections.emptyList());
@@ -841,6 +1061,48 @@ public class TransportSearchActionTests extends ESTestCase {
             assertTrue(TransportSearchAction.shouldMinimizeRoundtrips(searchRequest));
             searchRequest.setCcsMinimizeRoundtrips(false);
             assertFalse(TransportSearchAction.shouldMinimizeRoundtrips(searchRequest));
+        }
+        {
+            SearchRequest searchRequest = new SearchRequest();
+            SearchSourceBuilder source = new SearchSourceBuilder();
+            source.knnSearch(new KnnSearchBuilder("field", new float[] { 1, 2, 3 }, 10, 50));
+            searchRequest.source(source);
+
+            searchRequest.setCcsMinimizeRoundtrips(true);
+            assertFalse(TransportSearchAction.shouldMinimizeRoundtrips(searchRequest));
+            searchRequest.setCcsMinimizeRoundtrips(false);
+            assertFalse(TransportSearchAction.shouldMinimizeRoundtrips(searchRequest));
+        }
+    }
+
+    public void testAdjustSearchType() {
+        {
+            // If the search includes kNN, we should always use DFS_QUERY_THEN_FETCH
+            SearchRequest searchRequest = new SearchRequest();
+            SearchSourceBuilder source = new SearchSourceBuilder();
+            source.knnSearch(new KnnSearchBuilder("field", new float[] { 1, 2, 3 }, 10, 50));
+            searchRequest.source(source);
+
+            TransportSearchAction.adjustSearchType(searchRequest, randomBoolean());
+            assertEquals(SearchType.DFS_QUERY_THEN_FETCH, searchRequest.searchType());
+        }
+        {
+            // Suggest-only searches should always use QUERY_THEN_FETCH
+            SearchRequest searchRequest = new SearchRequest().searchType(RandomPicks.randomFrom(random(), SearchType.values()));
+            SearchSourceBuilder source = new SearchSourceBuilder();
+            source.suggest(new SuggestBuilder().addSuggestion("field", new TermSuggestionBuilder("value")));
+            searchRequest.source(source);
+
+            TransportSearchAction.adjustSearchType(searchRequest, randomBoolean());
+            assertFalse(searchRequest.requestCache());
+            assertEquals(SearchType.QUERY_THEN_FETCH, searchRequest.searchType());
+        }
+        {
+            // Single-shard searches should always use QUERY_THEN_FETCH in absence of kNN search
+            SearchRequest searchRequest = new SearchRequest().searchType(RandomPicks.randomFrom(random(), SearchType.values()));
+
+            TransportSearchAction.adjustSearchType(searchRequest, true);
+            assertEquals(SearchType.QUERY_THEN_FETCH, searchRequest.searchType());
         }
     }
 
@@ -853,35 +1115,90 @@ public class TransportSearchActionTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT).build();
         {
             SearchRequest searchRequest = new SearchRequest();
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 128)));
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(129, 10000)));
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, 128),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(129, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp")));
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 128)));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(129, 10000)));
+            SearchRequest searchRequest = new SearchRequest().source(
+                new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp"))
+            );
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE + 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().sort(SortBuilders.fieldSort("timestamp")));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 127)));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(127, 10000)));
+            SearchRequest searchRequest = new SearchRequest().source(new SearchSourceBuilder().sort(SortBuilders.fieldSort("timestamp")));
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE - 1),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE - 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().sort(SortBuilders.fieldSort("timestamp")))
+            SearchRequest searchRequest = new SearchRequest().source(new SearchSourceBuilder().sort(SortBuilders.fieldSort("timestamp")))
                 .scroll("5m");
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 128)));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(129, 10000)));
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE + 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
     }
 
@@ -891,7 +1208,7 @@ public class TransportSearchActionTests extends ESTestCase {
         String[] indices = new String[numIndices];
         ClusterBlocks.Builder blocksBuilder = ClusterBlocks.builder();
         for (int i = 0; i < numIndices; i++) {
-            indices[i] = randomAlphaOfLengthBetween(5, 10);;
+            indices[i] = randomAlphaOfLengthBetween(5, 10);
             if (--numReadOnly >= 0) {
                 if (randomBoolean()) {
                     blocksBuilder.addIndexBlock(indices[i], IndexMetadata.INDEX_WRITE_BLOCK);
@@ -903,48 +1220,111 @@ public class TransportSearchActionTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(ClusterName.DEFAULT).blocks(blocksBuilder).build();
         {
             SearchRequest searchRequest = new SearchRequest();
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 127)));
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(127, 10000)));
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE - 1),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE - 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp")));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 127)));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(127, 10000)));
+            SearchRequest searchRequest = new SearchRequest().source(
+                new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp"))
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE - 1),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE - 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp")));
+            SearchRequest searchRequest = new SearchRequest().source(
+                new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp"))
+            );
             searchRequest.scroll("5s");
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 127)));
-            assertTrue(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(127, 10000)));
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE - 1),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertTrue(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE - 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
         {
-            SearchRequest searchRequest = new SearchRequest()
-                .source(new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp")));
+            SearchRequest searchRequest = new SearchRequest().source(
+                new SearchSourceBuilder().query(QueryBuilders.rangeQuery("timestamp"))
+            );
             searchRequest.searchType(SearchType.DFS_QUERY_THEN_FETCH);
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(2, 127)));
-            assertFalse(TransportSearchAction.shouldPreFilterSearchShards(clusterState, searchRequest,
-                indices, randomIntBetween(127, 10000)));
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(2, DEFAULT_PRE_FILTER_SHARD_SIZE - 1),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
+            assertFalse(
+                TransportSearchAction.shouldPreFilterSearchShards(
+                    clusterState,
+                    searchRequest,
+                    indices,
+                    randomIntBetween(DEFAULT_PRE_FILTER_SHARD_SIZE - 1, 10000),
+                    DEFAULT_PRE_FILTER_SHARD_SIZE
+                )
+            );
         }
     }
 
     public void testLocalShardIteratorFromPointInTime() {
         final int numberOfShards = randomIntBetween(1, 5);
         final int numberOfReplicas = randomIntBetween(0, 2);
-        final String[] indices = {"test-1", "test-2"};
-        final ClusterState clusterState =
-            ClusterStateCreationUtils.stateWithAssignedPrimariesAndReplicas(indices, numberOfShards, numberOfReplicas);
+        final String[] indices = { "test-1", "test-2" };
+        final ClusterState clusterState = ClusterStateCreationUtils.stateWithAssignedPrimariesAndReplicas(
+            indices,
+            numberOfShards,
+            numberOfReplicas
+        );
         final IndexMetadata indexMetadata = clusterState.metadata().index("test-1");
         Map<ShardId, SearchContextIdForNode> contexts = new HashMap<>();
         Set<ShardId> relocatedContexts = new HashSet<>();
+        Map<String, AliasFilter> aliasFilterMap = new HashMap<>();
         for (int shardId = 0; shardId < numberOfShards; shardId++) {
             final String targetNode;
             if (randomBoolean()) {
@@ -953,19 +1333,27 @@ public class TransportSearchActionTests extends ESTestCase {
             } else {
                 // relocated or no longer assigned
                 relocatedContexts.add(new ShardId(indexMetadata.getIndex(), shardId));
-                targetNode = UUIDs.randomBase64UUID();
+                targetNode = randomFrom(clusterState.nodes()).getId();
             }
-            contexts.put(new ShardId(indexMetadata.getIndex(), shardId),
-                new SearchContextIdForNode(null, targetNode,
-                    new ShardSearchContextId(UUIDs.randomBase64UUID(), randomNonNegativeLong(), null)));
+            contexts.put(
+                new ShardId(indexMetadata.getIndex(), shardId),
+                new SearchContextIdForNode(
+                    null,
+                    targetNode,
+                    new ShardSearchContextId(UUIDs.randomBase64UUID(), randomNonNegativeLong(), null)
+                )
+            );
+            aliasFilterMap.putIfAbsent(indexMetadata.getIndexUUID(), AliasFilter.EMPTY);
         }
         TimeValue keepAlive = randomBoolean() ? null : TimeValue.timeValueSeconds(between(30, 3600));
+
         final List<SearchShardIterator> shardIterators = TransportSearchAction.getLocalLocalShardsIteratorFromPointInTime(
             clusterState,
             OriginalIndices.NONE,
             null,
-            new SearchContextId(contexts, Map.of()),
-            keepAlive
+            new SearchContextId(contexts, aliasFilterMap),
+            keepAlive,
+            randomBoolean()
         );
         shardIterators.sort(Comparator.comparing(SearchShardIterator::shardId));
         assertThat(shardIterators, hasSize(numberOfShards));
@@ -976,8 +1364,13 @@ public class TransportSearchActionTests extends ESTestCase {
             if (context.getSearchContextId().getSearcherId() == null) {
                 assertThat(shardIterator.getTargetNodeIds(), hasSize(1));
             } else {
-                final List<String> targetNodes = clusterState.routingTable().index(indexMetadata.getIndex()).shard(id).assignedShards()
-                    .stream().map(ShardRouting::currentNodeId).collect(Collectors.toList());
+                final List<String> targetNodes = clusterState.routingTable()
+                    .index(indexMetadata.getIndex())
+                    .shard(id)
+                    .assignedShards()
+                    .stream()
+                    .map(ShardRouting::currentNodeId)
+                    .toList();
                 if (relocatedContexts.contains(shardId)) {
                     targetNodes.add(context.getNode());
                 }
@@ -986,6 +1379,107 @@ public class TransportSearchActionTests extends ESTestCase {
             assertThat(shardIterator.getTargetNodeIds().get(0), equalTo(context.getNode()));
             assertThat(shardIterator.getSearchContextId(), equalTo(context.getSearchContextId()));
             assertThat(shardIterator.getSearchContextKeepAlive(), equalTo(keepAlive));
+        }
+
+        // Fails when some indices don't exist and `allowPartialSearchResults` is false.
+        ShardId anotherShardId = new ShardId(new Index("another-index", IndexMetadata.INDEX_UUID_NA_VALUE), randomIntBetween(0, 10));
+        contexts.put(
+            anotherShardId,
+            new SearchContextIdForNode(
+                null,
+                randomFrom(clusterState.nodes()).getId(),
+                new ShardSearchContextId(UUIDs.randomBase64UUID(), randomNonNegativeLong(), null)
+            )
+        );
+        IndexNotFoundException error = expectThrows(IndexNotFoundException.class, () -> {
+            TransportSearchAction.getLocalLocalShardsIteratorFromPointInTime(
+                clusterState,
+                OriginalIndices.NONE,
+                null,
+                new SearchContextId(contexts, aliasFilterMap),
+                keepAlive,
+                false
+            );
+        });
+        assertThat(error.getIndex().getName(), equalTo("another-index"));
+        // Ok when some indices don't exist and `allowPartialSearchResults` is true.
+        Optional<SearchShardIterator> anotherShardIterator = TransportSearchAction.getLocalLocalShardsIteratorFromPointInTime(
+            clusterState,
+            OriginalIndices.NONE,
+            null,
+            new SearchContextId(contexts, aliasFilterMap),
+            keepAlive,
+            true
+        ).stream().filter(si -> si.shardId().equals(anotherShardId)).findFirst();
+        assertTrue(anotherShardIterator.isPresent());
+        assertThat(anotherShardIterator.get().getTargetNodeIds(), hasSize(1));
+    }
+
+    public void testCCSCompatibilityCheck() throws Exception {
+        Settings settings = Settings.builder()
+            .put("node.name", TransportSearchAction.class.getSimpleName())
+            .put(SearchService.CCS_VERSION_CHECK_SETTING.getKey(), "true")
+            .build();
+        ActionFilters actionFilters = mock(ActionFilters.class);
+        when(actionFilters.filters()).thenReturn(new ActionFilter[0]);
+        ThreadPool threadPool = new ThreadPool(settings);
+        try {
+            TransportService transportService = MockTransportService.createNewService(Settings.EMPTY, Version.CURRENT, threadPool);
+
+            SearchRequest searchRequest = new SearchRequest();
+            searchRequest.source(new SearchSourceBuilder().query(new DummyQueryBuilder() {
+                @Override
+                protected void doWriteTo(StreamOutput out) throws IOException {
+                    throw new IllegalArgumentException("This query isn't serializable to nodes before " + Version.CURRENT);
+                }
+            }));
+            NodeClient client = new NodeClient(settings, threadPool);
+
+            SearchService searchService = mock(SearchService.class);
+            when(searchService.getRewriteContext(any())).thenReturn(new QueryRewriteContext(null, null, null, null));
+            ClusterService clusterService = new ClusterService(
+                settings,
+                new ClusterSettings(settings, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS),
+                threadPool,
+                null
+            );
+            TransportSearchAction action = new TransportSearchAction(
+                threadPool,
+                new NoneCircuitBreakerService(),
+                transportService,
+                searchService,
+                new SearchTransportService(transportService, client, null),
+                null,
+                clusterService,
+                actionFilters,
+                null,
+                null,
+                null
+            );
+
+            CountDownLatch latch = new CountDownLatch(1);
+            action.doExecute(null, searchRequest, new ActionListener<>() {
+
+                @Override
+                public void onResponse(SearchResponse response) {
+                    latch.countDown();
+                    fail("should not be called");
+                }
+
+                @Override
+                public void onFailure(Exception ex) {
+                    assertThat(
+                        ex.getMessage(),
+                        containsString("[class org.elasticsearch.action.search.SearchRequest] is not compatible with version")
+                    );
+                    assertThat(ex.getMessage(), containsString("and the 'search.check_ccs_compatibility' setting is enabled."));
+                    assertEquals("This query isn't serializable to nodes before " + Version.CURRENT, ex.getCause().getMessage());
+                    latch.countDown();
+                }
+            });
+            latch.await();
+        } finally {
+            assertTrue(ESTestCase.terminate(threadPool));
         }
     }
 }
