@@ -7,7 +7,6 @@
  */
 package org.elasticsearch.cluster.coordination;
 
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.Build;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
@@ -29,9 +28,11 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.BaseFuture;
 import org.elasticsearch.common.util.concurrent.DeterministicTaskQueue;
 import org.elasticsearch.common.util.concurrent.FutureUtils;
+import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.monitor.NodeHealthService;
 import org.elasticsearch.monitor.StatusInfo;
 import org.elasticsearch.node.Node;
+import org.elasticsearch.tasks.TaskManager;
 import org.elasticsearch.test.ClusterServiceUtils;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.transport.CapturingTransport;
@@ -65,6 +66,7 @@ import java.util.stream.Stream;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.monitor.StatusInfo.Status.HEALTHY;
 import static org.elasticsearch.transport.TransportService.HANDSHAKE_ACTION_NAME;
 import static org.hamcrest.Matchers.containsString;
@@ -93,32 +95,43 @@ public class NodeJoinTests extends ESTestCase {
 
     @After
     public void tearDown() throws Exception {
-        super.tearDown();
+        masterService.stop();
+        coordinator.stop();
+        if (deterministicTaskQueue != null) {
+            deterministicTaskQueue.runAllRunnableTasks();
+        }
         masterService.close();
+        coordinator.close();
+        super.tearDown();
     }
 
-    private static ClusterState initialState(DiscoveryNode localNode, long term, long version,
-                                             VotingConfiguration config) {
+    private static ClusterState initialState(DiscoveryNode localNode, long term, long version, VotingConfiguration config) {
         return ClusterState.builder(new ClusterName(ClusterServiceUtils.class.getSimpleName()))
-            .nodes(DiscoveryNodes.builder()
-                .add(localNode)
-                .localNodeId(localNode.getId()))
-            .metadata(Metadata.builder()
+            .nodes(DiscoveryNodes.builder().add(localNode).localNodeId(localNode.getId()))
+            .metadata(
+                Metadata.builder()
                     .coordinationMetadata(
                         CoordinationMetadata.builder()
-                        .term(term)
-                        .lastAcceptedConfiguration(config)
-                        .lastCommittedConfiguration(config)
-                    .build()))
+                            .term(term)
+                            .lastAcceptedConfiguration(config)
+                            .lastCommittedConfiguration(config)
+                            .build()
+                    )
+            )
             .version(version)
-            .blocks(ClusterBlocks.EMPTY_CLUSTER_BLOCK).build();
+            .blocks(ClusterBlocks.EMPTY_CLUSTER_BLOCK)
+            .build();
     }
 
     private void setupFakeMasterServiceAndCoordinator(long term, ClusterState initialState, NodeHealthService nodeHealthService) {
         deterministicTaskQueue = new DeterministicTaskQueue();
         final ThreadPool fakeThreadPool = deterministicTaskQueue.getThreadPool();
-        FakeThreadPoolMasterService fakeMasterService = new FakeThreadPoolMasterService("test_node","test",
-            fakeThreadPool, deterministicTaskQueue::scheduleNow);
+        FakeThreadPoolMasterService fakeMasterService = new FakeThreadPoolMasterService(
+            "test_node",
+            "test",
+            fakeThreadPool,
+            deterministicTaskQueue::scheduleNow
+        );
         setupMasterServiceAndCoordinator(term, initialState, fakeMasterService, fakeThreadPool, Randomness.get(), nodeHealthService);
         fakeMasterService.setClusterStatePublisher((clusterStatePublicationEvent, publishListener, ackListener) -> {
             ClusterServiceUtils.setAllElapsedMillis(clusterStatePublicationEvent);
@@ -129,22 +142,39 @@ public class NodeJoinTests extends ESTestCase {
     }
 
     private void setupRealMasterServiceAndCoordinator(long term, ClusterState initialState) {
-        MasterService masterService = new MasterService(Settings.builder().put(Node.NODE_NAME_SETTING.getKey(), "test_node").build(),
-            new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS), threadPool);
+        final Settings settings = Settings.builder().put(Node.NODE_NAME_SETTING.getKey(), "test_node").build();
+        MasterService masterService = new MasterService(
+            settings,
+            new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS),
+            threadPool,
+            new TaskManager(settings, threadPool, Set.of())
+        );
         AtomicReference<ClusterState> clusterStateRef = new AtomicReference<>(initialState);
         masterService.setClusterStatePublisher((clusterStatePublicationEvent, publishListener, ackListener) -> {
             ClusterServiceUtils.setAllElapsedMillis(clusterStatePublicationEvent);
             clusterStateRef.set(clusterStatePublicationEvent.getNewState());
             publishListener.onResponse(null);
         });
-        setupMasterServiceAndCoordinator(term, initialState, masterService, threadPool, new Random(Randomness.get().nextLong()),
-            () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupMasterServiceAndCoordinator(
+            term,
+            initialState,
+            masterService,
+            threadPool,
+            new Random(Randomness.get().nextLong()),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         masterService.setClusterStateSupplier(clusterStateRef::get);
         masterService.start();
     }
 
-    private void setupMasterServiceAndCoordinator(long term, ClusterState initialState, MasterService masterService,
-                                                  ThreadPool threadPool, Random random, NodeHealthService nodeHealthService) {
+    private void setupMasterServiceAndCoordinator(
+        long term,
+        ClusterState initialState,
+        MasterService masterService,
+        ThreadPool threadPool,
+        Random random,
+        NodeHealthService nodeHealthService
+    ) {
         if (this.masterService != null || coordinator != null) {
             throw new IllegalStateException("method setupMasterServiceAndCoordinator can only be called once");
         }
@@ -153,32 +183,51 @@ public class NodeJoinTests extends ESTestCase {
             @Override
             protected void onSendRequest(long requestId, String action, TransportRequest request, DiscoveryNode destination) {
                 if (action.equals(HANDSHAKE_ACTION_NAME)) {
-                    handleResponse(requestId, new TransportService.HandshakeResponse(
+                    handleResponse(
+                        requestId,
+                        new TransportService.HandshakeResponse(
                             destination.getVersion(),
                             Build.CURRENT.hash(),
                             destination,
                             initialState.getClusterName()
-                    ));
-                } else if (action.equals(JoinHelper.VALIDATE_JOIN_ACTION_NAME)) {
-                    handleResponse(requestId, new TransportResponse.Empty());
-                } else {
-                    super.onSendRequest(requestId, action, request, destination);
-                }
+                        )
+                    );
+                } else if (action.equals(JoinValidationService.JOIN_VALIDATE_ACTION_NAME)
+                    || action.equals(JoinHelper.JOIN_PING_ACTION_NAME)) {
+                        handleResponse(requestId, new TransportResponse.Empty());
+                    } else {
+                        super.onSendRequest(requestId, action, request, destination);
+                    }
             }
         };
         final ClusterSettings clusterSettings = new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
-        TransportService transportService = capturingTransport.createTransportService(Settings.EMPTY, threadPool,
+        TransportService transportService = capturingTransport.createTransportService(
+            Settings.EMPTY,
+            threadPool,
             TransportService.NOOP_TRANSPORT_INTERCEPTOR,
             x -> initialState.nodes().getLocalNode(),
-            clusterSettings, Collections.emptySet());
-        coordinator = new Coordinator("test_node", Settings.EMPTY, clusterSettings,
-            transportService, writableRegistry(),
+            clusterSettings,
+            Collections.emptySet()
+        );
+        coordinator = new Coordinator(
+            "test_node",
+            Settings.EMPTY,
+            clusterSettings,
+            transportService,
+            null,
+            writableRegistry(),
             ESAllocationTestCase.createAllocationService(Settings.EMPTY),
             masterService,
-            () -> new InMemoryPersistedState(term, initialState), r -> emptyList(),
+            () -> new InMemoryPersistedState(term, initialState),
+            r -> emptyList(),
             new NoOpClusterApplier(),
             Collections.emptyList(),
-            random, (s, p, r) -> {}, ElectionStrategy.DEFAULT_INSTANCE, nodeHealthService);
+            random,
+            (s, p, r) -> {},
+            ElectionStrategy.DEFAULT_INSTANCE,
+            nodeHealthService,
+            new NoneCircuitBreakerService()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
         transport = capturingTransport;
@@ -228,8 +277,7 @@ public class NodeJoinTests extends ESTestCase {
         // clone the node before submitting to simulate an incoming join, which is guaranteed to have a new
         // disco node object serialized off the network
         try {
-            final RequestHandlerRegistry<JoinRequest> joinHandler = transport.getRequestHandlers()
-                .getHandler(JoinHelper.JOIN_ACTION_NAME);
+            final RequestHandlerRegistry<JoinRequest> joinHandler = transport.getRequestHandlers().getHandler(JoinHelper.JOIN_ACTION_NAME);
             final ActionListener<TransportResponse> listener = new ActionListener<>() {
 
                 @Override
@@ -240,14 +288,14 @@ public class NodeJoinTests extends ESTestCase {
 
                 @Override
                 public void onFailure(Exception e) {
-                    logger.error(() -> new ParameterizedMessage("unexpected error for {}", future), e);
+                    logger.error(() -> format("unexpected error for %s", future), e);
                     future.markAsFailed(e);
                 }
             };
 
             joinHandler.processMessageReceived(joinRequest, new TestTransportChannel(listener));
         } catch (Exception e) {
-            logger.error(() -> new ParameterizedMessage("unexpected error for {}", future), e);
+            logger.error(() -> format("unexpected error for %s", future), e);
             future.markAsFailed(e);
         }
         return future;
@@ -269,14 +317,17 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(randomFrom(node0, node1))),
-            () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(randomFrom(node0, node1))),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         assertFalse(isLocalNodeElectedMaster());
         assertNull(coordinator.getStateForMasterService().nodes().getMasterNodeId());
         long newTerm = initialTerm + randomLongBetween(1, 10);
-        SimpleFuture fut = joinNodeAsync(new JoinRequest(node1, newTerm,
-            Optional.of(new Join(node1, node0, newTerm, initialTerm, initialVersion))));
+        SimpleFuture fut = joinNodeAsync(
+            new JoinRequest(node1, newTerm, Optional.of(new Join(node1, node0, newTerm, initialTerm, initialVersion)))
+        );
         assertEquals(Coordinator.Mode.LEADER, coordinator.getMode());
         assertNull(coordinator.getStateForMasterService().nodes().getMasterNodeId());
         deterministicTaskQueue.runAllRunnableTasks();
@@ -290,14 +341,18 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node1)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node1)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         assertFalse(isLocalNodeElectedMaster());
         long newTerm = initialTerm + randomLongBetween(1, 10);
         long higherVersion = initialVersion + randomLongBetween(1, 10);
-        expectThrows(CoordinationStateRejectedException.class,
-            () -> joinNodeAndRun(new JoinRequest(node1, newTerm,
-                Optional.of(new Join(node1, node0, newTerm, initialTerm, higherVersion)))));
+        expectThrows(
+            CoordinationStateRejectedException.class,
+            () -> joinNodeAndRun(new JoinRequest(node1, newTerm, Optional.of(new Join(node1, node0, newTerm, initialTerm, higherVersion))))
+        );
         assertFalse(isLocalNodeElectedMaster());
     }
 
@@ -306,8 +361,11 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node0)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node0)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         assertFalse(isLocalNodeElectedMaster());
         long newTerm = initialTerm + randomLongBetween(1, 10);
         long higherVersion = initialVersion + randomLongBetween(1, 10);
@@ -320,8 +378,11 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node0)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node0)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         assertFalse(isLocalNodeElectedMaster());
         long newTerm = initialTerm + randomLongBetween(1, 10);
         joinNodeAndRun(new JoinRequest(node0, newTerm, Optional.of(new Join(node0, node0, newTerm, initialTerm, initialVersion))));
@@ -337,8 +398,11 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node0)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node0)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         long newTerm = initialTerm + randomLongBetween(1, 10);
 
         joinNodeAndRun(new JoinRequest(node0, newTerm, Optional.of(new Join(node0, node0, newTerm, initialTerm, initialVersion))));
@@ -356,17 +420,22 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node2 = newNode(2, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node2)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node2)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         assertFalse(isLocalNodeElectedMaster());
         long newTerm = initialTerm + randomLongBetween(1, 10);
-        SimpleFuture futNode0 = joinNodeAsync(new JoinRequest(node0, newTerm, Optional.of(
-            new Join(node0, node0, newTerm, initialTerm, initialVersion))));
+        SimpleFuture futNode0 = joinNodeAsync(
+            new JoinRequest(node0, newTerm, Optional.of(new Join(node0, node0, newTerm, initialTerm, initialVersion)))
+        );
         deterministicTaskQueue.runAllRunnableTasks();
         assertFalse(futNode0.isDone());
         assertFalse(isLocalNodeElectedMaster());
-        SimpleFuture futNode1 = joinNodeAsync(new JoinRequest(node1, newTerm, Optional.of(
-            new Join(node1, node0, newTerm, initialTerm, initialVersion))));
+        SimpleFuture futNode1 = joinNodeAsync(
+            new JoinRequest(node1, newTerm, Optional.of(new Join(node1, node0, newTerm, initialTerm, initialVersion)))
+        );
         deterministicTaskQueue.runAllRunnableTasks();
         assertFalse(futNode1.isDone());
         assertFalse(isLocalNodeElectedMaster());
@@ -383,14 +452,16 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node0)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node0)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         long newTerm = initialTerm + randomLongBetween(1, 10);
         handleStartJoinFrom(node1, newTerm);
         handleFollowerCheckFrom(node1, newTerm);
         long newerTerm = newTerm + randomLongBetween(1, 10);
-        joinNodeAndRun(new JoinRequest(node1, newerTerm,
-            Optional.of(new Join(node1, node0, newerTerm, initialTerm, initialVersion))));
+        joinNodeAndRun(new JoinRequest(node1, newerTerm, Optional.of(new Join(node1, node0, newerTerm, initialTerm, initialVersion))));
         assertTrue(isLocalNodeElectedMaster());
     }
 
@@ -400,36 +471,62 @@ public class NodeJoinTests extends ESTestCase {
         long initialVersion = randomLongBetween(1, 10);
 
         CoordinationMetadata.VotingConfigExclusion votingConfigExclusion = new CoordinationMetadata.VotingConfigExclusion(
-                                                        CoordinationMetadata.VotingConfigExclusion.MISSING_VALUE_MARKER, "knownNodeName");
+            CoordinationMetadata.VotingConfigExclusion.MISSING_VALUE_MARKER,
+            "knownNodeName"
+        );
 
-        setupFakeMasterServiceAndCoordinator(initialTerm, buildStateWithVotingConfigExclusion(initialNode, initialTerm,
-            initialVersion, votingConfigExclusion),
-            () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            buildStateWithVotingConfigExclusion(initialNode, initialTerm, initialVersion, votingConfigExclusion),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
 
-        DiscoveryNode knownJoiningNode = new DiscoveryNode("knownNodeName", "newNodeId", buildNewFakeTransportAddress(),
-                                                            emptyMap(), Set.of(DiscoveryNodeRole.MASTER_ROLE), Version.CURRENT);
+        DiscoveryNode knownJoiningNode = new DiscoveryNode(
+            "knownNodeName",
+            "newNodeId",
+            buildNewFakeTransportAddress(),
+            emptyMap(),
+            Set.of(DiscoveryNodeRole.MASTER_ROLE),
+            Version.CURRENT
+        );
         long newTerm = initialTerm + randomLongBetween(1, 10);
         long newerTerm = newTerm + randomLongBetween(1, 10);
 
-        joinNodeAndRun(new JoinRequest(knownJoiningNode, initialTerm,
-            Optional.of(new Join(knownJoiningNode, initialNode, newerTerm, initialTerm, initialVersion))));
+        joinNodeAndRun(
+            new JoinRequest(
+                knownJoiningNode,
+                initialTerm,
+                Optional.of(new Join(knownJoiningNode, initialNode, newerTerm, initialTerm, initialVersion))
+            )
+        );
 
-        assertTrue(MasterServiceTests.discoveryState(masterService).getVotingConfigExclusions().stream().anyMatch(exclusion -> {
-            return "knownNodeName".equals(exclusion.getNodeName()) && "newNodeId".equals(exclusion.getNodeId());
-        }));
+        assertTrue(
+            MasterServiceTests.discoveryState(masterService)
+                .getVotingConfigExclusions()
+                .stream()
+                .anyMatch(
+                    exclusion -> { return "knownNodeName".equals(exclusion.getNodeName()) && "newNodeId".equals(exclusion.getNodeId()); }
+                )
+        );
     }
 
-    private ClusterState buildStateWithVotingConfigExclusion(DiscoveryNode initialNode,
-                                                             long initialTerm,
-                                                             long initialVersion,
-                                                             CoordinationMetadata.VotingConfigExclusion votingConfigExclusion) {
-        ClusterState initialState = initialState(initialNode, initialTerm, initialVersion,
-                                                    new VotingConfiguration(Collections.singleton(initialNode.getId())));
+    private ClusterState buildStateWithVotingConfigExclusion(
+        DiscoveryNode initialNode,
+        long initialTerm,
+        long initialVersion,
+        CoordinationMetadata.VotingConfigExclusion votingConfigExclusion
+    ) {
+        ClusterState initialState = initialState(
+            initialNode,
+            initialTerm,
+            initialVersion,
+            new VotingConfiguration(Collections.singleton(initialNode.getId()))
+        );
         Metadata newMetadata = Metadata.builder(initialState.metadata())
-                                        .coordinationMetadata(CoordinationMetadata.builder(initialState.coordinationMetadata())
-                                                                                    .addVotingConfigExclusion(votingConfigExclusion)
-                                                                                    .build())
-                                        .build();
+            .coordinationMetadata(
+                CoordinationMetadata.builder(initialState.coordinationMetadata()).addVotingConfigExclusion(votingConfigExclusion).build()
+            )
+            .build();
 
         return ClusterState.builder(initialState).metadata(newMetadata).build();
     }
@@ -479,14 +576,19 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node0)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node0)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         long newTerm = initialTerm + randomLongBetween(1, 10);
         handleStartJoinFrom(node1, newTerm);
         handleFollowerCheckFrom(node1, newTerm);
-        assertThat(expectThrows(CoordinationStateRejectedException.class,
-            () -> joinNodeAndRun(new JoinRequest(node1, newTerm, Optional.empty()))).getMessage(),
-            containsString("join target is a follower"));
+        assertThat(
+            expectThrows(CoordinationStateRejectedException.class, () -> joinNodeAndRun(new JoinRequest(node1, newTerm, Optional.empty())))
+                .getMessage(),
+            containsString("join target is a follower")
+        );
         assertFalse(isLocalNodeElectedMaster());
     }
 
@@ -495,33 +597,43 @@ public class NodeJoinTests extends ESTestCase {
         DiscoveryNode node1 = newNode(1, true);
         long initialTerm = randomLongBetween(1, 10);
         long initialVersion = randomLongBetween(1, 10);
-        setupFakeMasterServiceAndCoordinator(initialTerm, initialState(node0, initialTerm, initialVersion,
-            VotingConfiguration.of(node1)), () -> new StatusInfo(HEALTHY, "healthy-info"));
+        setupFakeMasterServiceAndCoordinator(
+            initialTerm,
+            initialState(node0, initialTerm, initialVersion, VotingConfiguration.of(node1)),
+            () -> new StatusInfo(HEALTHY, "healthy-info")
+        );
         long newTerm = initialTerm + randomLongBetween(1, 10);
-        SimpleFuture fut = joinNodeAsync(new JoinRequest(node0, newTerm,
-            Optional.of(new Join(node0, node0, newTerm, initialTerm, initialVersion))));
+        SimpleFuture fut = joinNodeAsync(
+            new JoinRequest(node0, newTerm, Optional.of(new Join(node0, node0, newTerm, initialTerm, initialVersion)))
+        );
         deterministicTaskQueue.runAllRunnableTasks();
         assertFalse(fut.isDone());
         assertFalse(isLocalNodeElectedMaster());
         handleFollowerCheckFrom(node1, newTerm);
         assertFalse(isLocalNodeElectedMaster());
-        assertThat(expectThrows(CoordinationStateRejectedException.class,
-            () -> FutureUtils.get(fut)).getMessage(),
-            containsString("became follower"));
+        assertThat(
+            expectThrows(CoordinationStateRejectedException.class, () -> FutureUtils.get(fut)).getMessage(),
+            containsString("became follower")
+        );
         assertFalse(isLocalNodeElectedMaster());
     }
 
     public void testConcurrentJoining() {
         List<DiscoveryNode> masterNodes = IntStream.rangeClosed(1, randomIntBetween(2, 5))
-            .mapToObj(nodeId -> newNode(nodeId, true)).collect(Collectors.toList());
+            .mapToObj(nodeId -> newNode(nodeId, true))
+            .toList();
         List<DiscoveryNode> otherNodes = IntStream.rangeClosed(masterNodes.size() + 1, masterNodes.size() + 1 + randomIntBetween(0, 5))
-            .mapToObj(nodeId -> newNode(nodeId, false)).collect(Collectors.toList());
-        List<DiscoveryNode> allNodes = Stream.concat(masterNodes.stream(), otherNodes.stream()).collect(Collectors.toList());
+            .mapToObj(nodeId -> newNode(nodeId, false))
+            .toList();
+        List<DiscoveryNode> allNodes = Stream.concat(masterNodes.stream(), otherNodes.stream()).toList();
 
         DiscoveryNode localNode = masterNodes.get(0);
-        VotingConfiguration votingConfiguration = new VotingConfiguration(randomValueOtherThan(singletonList(localNode),
-            () -> randomSubsetOf(randomIntBetween(1, masterNodes.size()), masterNodes)).stream()
-            .map(DiscoveryNode::getId).collect(Collectors.toSet()));
+        VotingConfiguration votingConfiguration = new VotingConfiguration(
+            randomValueOtherThan(singletonList(localNode), () -> randomSubsetOf(randomIntBetween(1, masterNodes.size()), masterNodes))
+                .stream()
+                .map(DiscoveryNode::getId)
+                .collect(Collectors.toSet())
+        );
 
         logger.info("Voting configuration: {}", votingConfiguration);
 
@@ -534,14 +646,13 @@ public class NodeJoinTests extends ESTestCase {
         List<DiscoveryNode> successfulNodes;
         do {
             successfulNodes = randomSubsetOf(allNodes);
-        } while (votingConfiguration.hasQuorum(successfulNodes.stream().map(DiscoveryNode::getId).collect(Collectors.toList()))
-            == false);
+        } while (votingConfiguration.hasQuorum(successfulNodes.stream().map(DiscoveryNode::getId).toList()) == false);
 
         logger.info("Successful voting nodes: {}", successfulNodes);
 
-        List<JoinRequest> correctJoinRequests = successfulNodes.stream().map(
-            node -> new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode, newTerm, initialTerm, initialVersion))))
-            .collect(Collectors.toList());
+        List<JoinRequest> correctJoinRequests = successfulNodes.stream()
+            .map(node -> new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode, newTerm, initialTerm, initialVersion))))
+            .toList();
 
         List<DiscoveryNode> possiblyUnsuccessfulNodes = new ArrayList<>(allNodes);
         possiblyUnsuccessfulNodes.removeAll(successfulNodes);
@@ -551,18 +662,23 @@ public class NodeJoinTests extends ESTestCase {
         List<JoinRequest> possiblyFailingJoinRequests = possiblyUnsuccessfulNodes.stream().map(node -> {
             if (randomBoolean()) {
                 // a correct request
-                return new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode,
-                    newTerm, initialTerm, initialVersion)));
+                return new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode, newTerm, initialTerm, initialVersion)));
             } else if (randomBoolean()) {
                 // term too low
-                return new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode,
-                    randomLongBetween(0, initialTerm), initialTerm, initialVersion)));
+                return new JoinRequest(
+                    node,
+                    newTerm,
+                    Optional.of(new Join(node, localNode, randomLongBetween(0, initialTerm), initialTerm, initialVersion))
+                );
             } else {
                 // better state
-                return new JoinRequest(node, newTerm, Optional.of(new Join(node, localNode,
-                    newTerm, initialTerm, initialVersion + randomLongBetween(1, 10))));
+                return new JoinRequest(
+                    node,
+                    newTerm,
+                    Optional.of(new Join(node, localNode, newTerm, initialTerm, initialVersion + randomLongBetween(1, 10)))
+                );
             }
-        }).collect(Collectors.toList());
+        }).collect(Collectors.toCollection(ArrayList::new));
 
         // duplicate some requests, which will be unsuccessful
         possiblyFailingJoinRequests.addAll(randomSubsetOf(possiblyFailingJoinRequests));
@@ -584,19 +700,17 @@ public class NodeJoinTests extends ESTestCase {
             }
         }, "assert invariants");
 
-        final List<Thread> joinThreads = Stream.concat(correctJoinRequests.stream().map(joinRequest ->
-            new Thread(() -> {
-                awaitBarrier.run();
+        final List<Thread> joinThreads = Stream.concat(correctJoinRequests.stream().map(joinRequest -> new Thread(() -> {
+            awaitBarrier.run();
+            joinNode(joinRequest);
+        }, "process " + joinRequest)), possiblyFailingJoinRequests.stream().map(joinRequest -> new Thread(() -> {
+            awaitBarrier.run();
+            try {
                 joinNode(joinRequest);
-            }, "process " + joinRequest)), possiblyFailingJoinRequests.stream().map(joinRequest ->
-            new Thread(() -> {
-                awaitBarrier.run();
-                try {
-                    joinNode(joinRequest);
-                } catch (CoordinationStateRejectedException e) {
-                    // ignore - these requests are expected to fail
-                }
-            }, "process " + joinRequest))).collect(Collectors.toList());
+            } catch (CoordinationStateRejectedException e) {
+                // ignore - these requests are expected to fail
+            }
+        }, "process " + joinRequest))).toList();
 
         assertionThread.start();
         joinThreads.forEach(Thread::start);
