@@ -8,15 +8,14 @@
 package org.elasticsearch.cluster.health;
 
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.test.AbstractSerializingTestCase;
+import org.elasticsearch.test.AbstractXContentSerializingTestCase;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
-public class ClusterShardHealthTests extends AbstractSerializingTestCase<ClusterShardHealth> {
+public class ClusterShardHealthTests extends AbstractXContentSerializingTestCase<ClusterShardHealth> {
 
     @Override
     protected ClusterShardHealth doParseInstance(XContentParser parser) throws IOException {
@@ -29,8 +28,15 @@ public class ClusterShardHealthTests extends AbstractSerializingTestCase<Cluster
     }
 
     static ClusterShardHealth randomShardHealth(int id) {
-        return new ClusterShardHealth(id, randomFrom(ClusterHealthStatus.values()),  randomInt(1000), randomInt(1000),
-            randomInt(1000), randomInt(1000), randomBoolean());
+        return new ClusterShardHealth(
+            id,
+            randomFrom(ClusterHealthStatus.values()),
+            randomInt(1000),
+            randomInt(1000),
+            randomInt(1000),
+            randomInt(1000),
+            randomBoolean()
+        );
     }
 
     @Override
@@ -45,54 +51,95 @@ public class ClusterShardHealthTests extends AbstractSerializingTestCase<Cluster
 
     @Override
     protected Predicate<String> getRandomFieldsExcludeFilter() {
-        //don't inject random fields at the root, which contains arbitrary shard ids
+        // don't inject random fields at the root, which contains arbitrary shard ids
         return ""::equals;
     }
 
     @Override
     protected ClusterShardHealth mutateInstance(final ClusterShardHealth instance) {
-        String mutate = randomFrom("shardId", "status", "activeShards", "relocatingShards", "initializingShards",
-                "unassignedShards", "primaryActive");
+        String mutate = randomFrom(
+            "shardId",
+            "status",
+            "activeShards",
+            "relocatingShards",
+            "initializingShards",
+            "unassignedShards",
+            "primaryActive"
+        );
         switch (mutate) {
             case "shardId":
-                return new ClusterShardHealth(instance.getShardId() + between(1, 10), instance.getStatus(),
-                        instance.getActiveShards(), instance.getRelocatingShards(),
-                        instance.getInitializingShards(), instance.getUnassignedShards(),
-                        instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId() + between(1, 10),
+                    instance.getStatus(),
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive()
+                );
             case "status":
                 ClusterHealthStatus status = randomFrom(
-                    Arrays.stream(ClusterHealthStatus.values()).filter(
-                        value -> value.equals(instance.getStatus()) == false
-                    ).collect(Collectors.toList())
+                    Arrays.stream(ClusterHealthStatus.values()).filter(value -> value.equals(instance.getStatus()) == false).toList()
                 );
-                return new ClusterShardHealth(instance.getShardId(), status,
-                        instance.getActiveShards(), instance.getRelocatingShards(),
-                        instance.getInitializingShards(), instance.getUnassignedShards(),
-                        instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    status,
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive()
+                );
             case "activeShards":
-                return new ClusterShardHealth(instance.getShardId(), instance.getStatus(),
-                        instance.getActiveShards() + between(1, 10), instance.getRelocatingShards(),
-                        instance.getInitializingShards(), instance.getUnassignedShards(),
-                        instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    instance.getStatus(),
+                    instance.getActiveShards() + between(1, 10),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive()
+                );
             case "relocatingShards":
-                return new ClusterShardHealth(instance.getShardId(), instance.getStatus(),
-                        instance.getActiveShards(), instance.getRelocatingShards() + between(1, 10),
-                        instance.getInitializingShards(), instance.getUnassignedShards(), instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    instance.getStatus(),
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards() + between(1, 10),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive()
+                );
             case "initializingShards":
-                return new ClusterShardHealth(instance.getShardId(), instance.getStatus(),
-                        instance.getActiveShards(), instance.getRelocatingShards(),
-                        instance.getInitializingShards() + between(1, 10), instance.getUnassignedShards(),
-                        instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    instance.getStatus(),
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards() + between(1, 10),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive()
+                );
             case "unassignedShards":
-                return new ClusterShardHealth(instance.getShardId(), instance.getStatus(),
-                        instance.getActiveShards(), instance.getRelocatingShards(),
-                        instance.getInitializingShards(), instance.getUnassignedShards() + between(1, 10),
-                        instance.isPrimaryActive());
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    instance.getStatus(),
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards() + between(1, 10),
+                    instance.isPrimaryActive()
+                );
             case "primaryActive":
-                return new ClusterShardHealth(instance.getShardId(), instance.getStatus(),
-                        instance.getActiveShards(), instance.getRelocatingShards(),
-                        instance.getInitializingShards(), instance.getUnassignedShards(),
-                        instance.isPrimaryActive() == false);
+                return new ClusterShardHealth(
+                    instance.getShardId(),
+                    instance.getStatus(),
+                    instance.getActiveShards(),
+                    instance.getRelocatingShards(),
+                    instance.getInitializingShards(),
+                    instance.getUnassignedShards(),
+                    instance.isPrimaryActive() == false
+                );
             default:
                 throw new UnsupportedOperationException();
         }
