@@ -17,13 +17,14 @@ import org.elasticsearch.action.admin.indices.stats.IndexShardStats;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
-import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.IndexGraveyard;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
+import org.elasticsearch.common.io.FileSystemUtils;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.TimeValue;
@@ -31,7 +32,8 @@ import org.elasticsearch.env.NodeEnvironment;
 import org.elasticsearch.env.ShardLockObtainFailedException;
 import org.elasticsearch.gateway.GatewayMetaState;
 import org.elasticsearch.gateway.LocalAllocateDangledIndices;
-import org.elasticsearch.gateway.MetaStateService;
+import org.elasticsearch.gateway.MetaStateWriterUtils;
+import org.elasticsearch.health.node.selection.HealthNodeTaskExecutor;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexModule;
 import org.elasticsearch.index.IndexService;
@@ -62,7 +64,6 @@ import org.elasticsearch.test.IndexSettingsModule;
 import org.elasticsearch.test.hamcrest.RegexMatcher;
 
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -72,12 +73,10 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createBackingIndex;
-import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createTimestampField;
 import static org.elasticsearch.cluster.metadata.IndexNameExpressionResolverTests.indexBuilder;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertHitCount;
@@ -106,10 +105,8 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
     @Override
     protected Collection<Class<? extends Plugin>> getPlugins() {
-        return Stream.concat(
-                super.getPlugins().stream(),
-                Stream.of(TestPlugin.class, FooEnginePlugin.class, BarEnginePlugin.class))
-                .collect(Collectors.toList());
+        return Stream.concat(super.getPlugins().stream(), Stream.of(TestPlugin.class, FooEnginePlugin.class, BarEnginePlugin.class))
+            .toList();
     }
 
     public static class FooEnginePlugin extends Plugin implements EnginePlugin {
@@ -123,8 +120,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
         }
 
-        private static final Setting<Boolean> FOO_INDEX_SETTING =
-                Setting.boolSetting("index.foo_index", false, Setting.Property.IndexScope);
+        private static final Setting<Boolean> FOO_INDEX_SETTING = Setting.boolSetting(
+            "index.foo_index",
+            false,
+            Setting.Property.IndexScope
+        );
 
         @Override
         public List<Setting<?>> getSettings() {
@@ -153,8 +153,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
         }
 
-        private static final Setting<Boolean> BAR_INDEX_SETTING =
-                Setting.boolSetting("index.bar_index", false, Setting.Property.IndexScope);
+        private static final Setting<Boolean> BAR_INDEX_SETTING = Setting.boolSetting(
+            "index.bar_index",
+            false,
+            Setting.Property.IndexScope
+        );
 
         @Override
         public List<Setting<?>> getSettings() {
@@ -184,8 +187,7 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         @Override
         public void onIndexModule(IndexModule indexModule) {
             super.onIndexModule(indexModule);
-            indexModule.addSimilarity("fake-similarity",
-                    (settings, indexCreatedVersion, scriptService) -> new BM25Similarity());
+            indexModule.addSimilarity("fake-similarity", (settings, indexCreatedVersion, scriptService) -> new BM25Similarity());
         }
     }
 
@@ -194,25 +196,46 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         return true;
     }
 
+    @Override
+    protected Settings nodeSettings() {
+        // Disable the health node selection so the task assignment does not interfere with the cluster state during the test
+        return Settings.builder().put(HealthNodeTaskExecutor.ENABLED_SETTING.getKey(), false).build();
+    }
+
     public void testCanDeleteShardContent() {
         IndicesService indicesService = getIndicesService();
-        IndexMetadata meta = IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(1).numberOfReplicas(
-                1).build();
+        IndexMetadata meta = IndexMetadata.builder("test")
+            .settings(settings(Version.CURRENT))
+            .numberOfShards(1)
+            .numberOfReplicas(1)
+            .build();
         IndexSettings indexSettings = IndexSettingsModule.newIndexSettings("test", meta.getSettings());
         ShardId shardId = new ShardId(meta.getIndex(), 0);
-        assertEquals("no shard location", indicesService.canDeleteShardContent(shardId, indexSettings),
-            ShardDeletionCheckResult.NO_FOLDER_FOUND);
+        assertEquals(
+            "no shard location",
+            indicesService.canDeleteShardContent(shardId, indexSettings),
+            ShardDeletionCheckResult.NO_FOLDER_FOUND
+        );
         IndexService test = createIndex("test");
         shardId = new ShardId(test.index(), 0);
         assertTrue(test.hasShard(0));
-        assertEquals("shard is allocated", indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
-            ShardDeletionCheckResult.STILL_ALLOCATED);
+        assertEquals(
+            "shard is allocated",
+            indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
+            ShardDeletionCheckResult.STILL_ALLOCATED
+        );
         test.removeShard(0, "boom");
-        assertEquals("shard is removed", indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
-            ShardDeletionCheckResult.FOLDER_FOUND_CAN_DELETE);
+        assertEquals(
+            "shard is removed",
+            indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
+            ShardDeletionCheckResult.FOLDER_FOUND_CAN_DELETE
+        );
         ShardId notAllocated = new ShardId(test.index(), 100);
-        assertEquals("shard that was never on this node should NOT be deletable",
-            indicesService.canDeleteShardContent(notAllocated, test.getIndexSettings()), ShardDeletionCheckResult.NO_FOLDER_FOUND);
+        assertEquals(
+            "shard that was never on this node should NOT be deletable",
+            indicesService.canDeleteShardContent(notAllocated, test.getIndexSettings()),
+            ShardDeletionCheckResult.NO_FOLDER_FOUND
+        );
     }
 
     public void testDeleteIndexStore() throws Exception {
@@ -221,8 +244,12 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         ClusterService clusterService = getInstanceFromNode(ClusterService.class);
         IndexMetadata firstMetadata = clusterService.state().metadata().index("test");
         assertTrue(test.hasShard(0));
-        ShardPath firstPath = ShardPath.loadShardPath(logger, getNodeEnvironment(), new ShardId(test.index(), 0),
-            test.getIndexSettings().customDataPath());
+        ShardPath firstPath = ShardPath.loadShardPath(
+            logger,
+            getNodeEnvironment(),
+            new ShardId(test.index(), 0),
+            test.getIndexSettings().customDataPath()
+        );
 
         expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", firstMetadata));
         assertTrue(firstPath.exists());
@@ -245,8 +272,12 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         assertHitCount(client().prepareSearch("test").get(), 1);
         IndexMetadata secondMetadata = clusterService.state().metadata().index("test");
         assertAcked(client().admin().indices().prepareClose("test"));
-        ShardPath secondPath = ShardPath.loadShardPath(logger, getNodeEnvironment(), new ShardId(test.index(), 0),
-            test.getIndexSettings().customDataPath());
+        ShardPath secondPath = ShardPath.loadShardPath(
+            logger,
+            getNodeEnvironment(),
+            new ShardId(test.index(), 0),
+            test.getIndexSettings().customDataPath()
+        );
         assertTrue(secondPath.exists());
 
         expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", secondMetadata));
@@ -266,12 +297,16 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         assertTrue(indexShard.routingEntry().started());
 
         final ShardPath shardPath = indexShard.shardPath();
-        assertEquals(ShardPath.loadShardPath(logger, getNodeEnvironment(), indexShard.shardId(), indexSettings.customDataPath()),
-            shardPath);
+        assertEquals(
+            ShardPath.loadShardPath(logger, getNodeEnvironment(), indexShard.shardId(), indexSettings.customDataPath()),
+            shardPath
+        );
 
         final IndicesService indicesService = getIndicesService();
-        expectThrows(ShardLockObtainFailedException.class, () ->
-            indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0)));
+        expectThrows(
+            ShardLockObtainFailedException.class,
+            () -> indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0))
+        );
         assertTrue(shardPath.exists());
 
         int numPending = 1;
@@ -292,8 +327,10 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         assertEquals(indicesService.numPendingDeletes(index), numPending);
         assertTrue(indicesService.hasUncompletedPendingDeletes());
 
-        expectThrows(ShardLockObtainFailedException.class, () ->
-            indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0)));
+        expectThrows(
+            ShardLockObtainFailedException.class,
+            () -> indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0))
+        );
 
         assertEquals(indicesService.numPendingDeletes(index), numPending);
         assertTrue(indicesService.hasUncompletedPendingDeletes());
@@ -326,18 +363,18 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final Index index = new Index("test", UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
         final NodeEnvironment nodeEnv = getNodeEnvironment();
-        final MetaStateService metaStateService = getInstanceFromNode(MetaStateService.class);
 
         final ClusterService clusterService = getInstanceFromNode(ClusterService.class);
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                                        .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                                                        .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                                                             .settings(idxSettings)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
-        metaStateService.writeIndex("test index being created", indexMetadata);
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
+
+        MetaStateWriterUtils.writeIndex(nodeEnv, "test index being created", indexMetadata);
         final Metadata metadata = Metadata.builder(clusterService.state().metadata()).put(indexMetadata, true).build();
         final ClusterState csWithIndex = new ClusterState.Builder(clusterService.state()).metadata(metadata).build();
         try {
@@ -347,11 +384,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             assertThat(e.getMessage(), containsString("Cannot delete index"));
         }
 
-        final ClusterState withoutIndex = new ClusterState.Builder(csWithIndex)
-                                                          .metadata(Metadata.builder(csWithIndex.metadata()).remove(index.getName()))
-                                                          .build();
+        final ClusterState withoutIndex = new ClusterState.Builder(csWithIndex).metadata(
+            Metadata.builder(csWithIndex.metadata()).remove(index.getName())
+        ).build();
         indicesService.verifyIndexIsDeleted(index, withoutIndex);
-        assertFalse("index files should be deleted", Files.exists(nodeEnv.indexPath(index)));
+        assertFalse("index files should be deleted", FileSystemUtils.exists(nodeEnv.indexPaths(index)));
     }
 
     public void testDanglingIndicesWithAliasConflict() throws Exception {
@@ -366,14 +403,14 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
         // try to import a dangling index with the same name as the alias, it should fail
         final LocalAllocateDangledIndices dangling = getInstanceFromNode(LocalAllocateDangledIndices.class);
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                                       .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                                                       .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(alias)
-                                                             .settings(idxSettings)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+            .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(alias).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         CountDownLatch latch = new CountDownLatch(1);
         dangling.allocateDangled(Arrays.asList(indexMetadata), ActionListener.wrap(latch::countDown));
         latch.await();
@@ -395,17 +432,16 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final ClusterService clusterService = getInstanceFromNode(ClusterService.class);
         final ClusterState originalState = clusterService.state();
 
-        //import an index with minor version incremented by one over cluster master version, it should be ignored
+        // import an index with minor version incremented by one over cluster master version, it should be ignored
         final LocalAllocateDangledIndices dangling = getInstanceFromNode(LocalAllocateDangledIndices.class);
-        final Settings idxSettingsLater = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED,
-                                                                Version.fromId(Version.CURRENT.id + 10000))
-                                                            .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                                                            .build();
-        final IndexMetadata indexMetadataLater = new IndexMetadata.Builder(indexNameLater)
-                                                             .settings(idxSettingsLater)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
+        final Settings idxSettingsLater = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.fromId(Version.CURRENT.id + 10000))
+            .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+            .build();
+        final IndexMetadata indexMetadataLater = new IndexMetadata.Builder(indexNameLater).settings(idxSettingsLater)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         CountDownLatch latch = new CountDownLatch(1);
         dangling.allocateDangled(Arrays.asList(indexMetadataLater), ActionListener.wrap(latch::countDown));
         latch.await();
@@ -426,14 +462,14 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final String indexName = "test";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                         .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                                         .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                                                .settings(idxSettings)
-                                                .numberOfShards(1)
-                                                .numberOfReplicas(0)
-                                                .build();
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         final Index tombstonedIndex = new Index(indexName, UUIDs.randomBase64UUID());
         final IndexGraveyard graveyard = IndexGraveyard.builder().addTombstone(tombstonedIndex).build();
         final Metadata metadata = Metadata.builder().put(indexMetadata, true).indexGraveyard(graveyard).build();
@@ -443,23 +479,23 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
     }
 
     /**
-     * Tests that teh {@link MapperService} created by {@link IndicesService#createIndexMapperService(IndexMetadata)} contains
+     * Tests that teh {@link MapperService} created by {@link IndicesService#createIndexMapperServiceForValidation(IndexMetadata)} contains
      * custom types and similarities registered by plugins
      */
     public void testStandAloneMapperServiceWithPlugins() throws IOException {
         final String indexName = "test";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
             .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
             .put(IndexModule.SIMILARITY_SETTINGS_PREFIX + ".test.type", "fake-similarity")
             .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-            .settings(idxSettings)
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .build();
-        MapperService mapperService = indicesService.createIndexMapperService(indexMetadata);
+        MapperService mapperService = indicesService.createIndexMapperServiceForValidation(indexMetadata);
         assertNotNull(mapperService.parserContext().typeParser("fake-mapper"));
         Similarity sim = mapperService.parserContext().getSimilarity("test").get();
         assertThat(sim, instanceOf(NonNegativeScoresSimilarity.class));
@@ -481,8 +517,10 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final IndexShardState state = randomFrom(IndexShardState.values());
         final String message = "TEST - expected";
 
-        final RuntimeException expectedException =
-                randomFrom(new IllegalIndexShardStateException(shardId, state, message), new AlreadyClosedException(message));
+        final RuntimeException expectedException = randomFrom(
+            new IllegalIndexShardStateException(shardId, state, message),
+            new AlreadyClosedException(message)
+        );
 
         // this allows us to control the indices that exist
         final IndicesService mockIndicesService = mock(IndicesService.class);
@@ -512,7 +550,7 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         // real one, which has a logger defined
         final IndicesService indicesService = getIndicesService();
 
-        final Map<Index, List<IndexShardStats>> indexStats = indicesService.statsByShard(mockIndicesService, CommonStatsFlags.ALL);
+        final Map<Index, List<IndexShardStats>> indexStats = IndicesService.statsByShard(mockIndicesService, CommonStatsFlags.ALL);
 
         assertThat(indexStats.isEmpty(), equalTo(false));
         assertThat("index not defined", indexStats.containsKey(index), equalTo(true));
@@ -527,17 +565,16 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             final String indexName = "foo-" + value;
             final Index index = new Index(indexName, UUIDs.randomBase64UUID());
             final Settings.Builder builder = Settings.builder()
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                    .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
+                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+                .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
             if (value != null) {
                 builder.put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), value);
             }
 
-            final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                    .settings(builder.build())
-                    .numberOfShards(1)
-                    .numberOfReplicas(0)
-                    .build();
+            final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(builder.build())
+                .numberOfShards(1)
+                .numberOfReplicas(0)
+                .build();
             final IndexService indexService = indicesService.createIndex(indexMetadata, Collections.emptyList(), false);
             if (value != null && value) {
                 assertThat(indexService.getEngineFactory(), instanceOf(FooEnginePlugin.FooEngineFactory.class));
@@ -551,22 +588,23 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final String indexName = "foobar";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final Settings settings = Settings.builder()
-                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                .put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), true)
-                .put(BarEnginePlugin.BAR_INDEX_SETTING.getKey(), true)
-                .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                .settings(settings)
-                .numberOfShards(1)
-                .numberOfReplicas(0)
-                .build();
+            .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
+            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
+            .put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), true)
+            .put(BarEnginePlugin.BAR_INDEX_SETTING.getKey(), true)
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(settings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
 
         final IndicesService indicesService = getIndicesService();
-        final IllegalStateException e =
-                expectThrows(IllegalStateException.class, () -> indicesService.createIndex(indexMetadata, Collections.emptyList(), false));
+        final IllegalStateException e = expectThrows(
+            IllegalStateException.class,
+            () -> indicesService.createIndex(indexMetadata, Collections.emptyList(), false)
+        );
         final String pattern =
-                ".*multiple engine factories provided for \\[foobar/.*\\]: \\[.*FooEngineFactory\\],\\[.*BarEngineFactory\\].*";
+            ".*multiple engine factories provided for \\[foobar/.*\\]: \\[.*FooEngineFactory\\],\\[.*BarEngineFactory\\].*";
         assertThat(e, hasToString(new RegexMatcher(pattern)));
     }
 
@@ -574,10 +612,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         var indicesService = getIndicesService();
 
         Metadata.Builder mdBuilder = Metadata.builder()
-            .put(indexBuilder("test-0").state(IndexMetadata.State.OPEN)
-                .putAlias(AliasMetadata.builder("test-alias-0").filter(Strings.toString(QueryBuilders.termQuery("foo", "bar"))))
-                .putAlias(AliasMetadata.builder("test-alias-1").filter(Strings.toString(QueryBuilders.termQuery("foo", "baz"))))
-                .putAlias(AliasMetadata.builder("test-alias-non-filtering"))
+            .put(
+                indexBuilder("test-0").state(IndexMetadata.State.OPEN)
+                    .putAlias(AliasMetadata.builder("test-alias-0").filter(Strings.toString(QueryBuilders.termQuery("foo", "bar"))))
+                    .putAlias(AliasMetadata.builder("test-alias-1").filter(Strings.toString(QueryBuilders.termQuery("foo", "baz"))))
+                    .putAlias(AliasMetadata.builder("test-alias-non-filtering"))
             );
         ClusterState state = ClusterState.builder(new ClusterName("_name")).metadata(mdBuilder).build();
         {
@@ -600,8 +639,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "baz"), QueryBuilders.termQuery("foo", "bar")));
         }
         {
-            AliasFilter result =
-                indicesService.buildAliasFilter(state, "test-0", Set.of("test-alias-0", "test-alias-1", "test-alias-non-filtering"));
+            AliasFilter result = indicesService.buildAliasFilter(
+                state,
+                "test-0",
+                Set.of("test-alias-0", "test-alias-1", "test-alias-non-filtering")
+            );
             assertThat(result.getAliases(), emptyArray());
             assertThat(result.getQueryBuilder(), nullValue());
         }
@@ -614,7 +656,7 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         IndexMetadata backingIndex1 = createBackingIndex(dataStreamName1, 1).build();
         Metadata.Builder mdBuilder = Metadata.builder()
             .put(backingIndex1, false)
-            .put(new DataStream(dataStreamName1, createTimestampField("@timestamp"), List.of(backingIndex1.getIndex())));
+            .put(DataStreamTestHelper.newInstance(dataStreamName1, List.of(backingIndex1.getIndex())));
         mdBuilder.put("logs_foo", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "bar")));
         mdBuilder.put("logs", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "baz")));
         mdBuilder.put("logs_bar", dataStreamName1, null, null);
