@@ -9,6 +9,7 @@
 package org.elasticsearch.monitor.os;
 
 import org.apache.lucene.util.Constants;
+import org.elasticsearch.common.unit.Processors;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
@@ -17,7 +18,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.anyOf;
@@ -56,7 +56,7 @@ public class OsProbeTests extends ESTestCase {
             }
 
         };
-        final OsInfo info = osProbe.osInfo(refreshInterval, allocatedProcessors);
+        final OsInfo info = osProbe.osInfo(refreshInterval, Processors.of((double) allocatedProcessors));
         assertNotNull(info);
         assertThat(info.getRefreshInterval(), equalTo(refreshInterval));
         assertThat(info.getName(), equalTo(Constants.OS_NAME));
@@ -123,7 +123,7 @@ public class OsProbeTests extends ESTestCase {
         long total = stats.getSwap().getTotal().getBytes();
         if (total > 0) {
             assertThat(stats.getSwap().getTotal().getBytes(), greaterThan(0L));
-            assertThat(stats.getSwap().getFree().getBytes(), greaterThan(0L));
+            assertThat(stats.getSwap().getFree().getBytes(), greaterThanOrEqualTo(0L));
             assertThat(stats.getSwap().getUsed().getBytes(), greaterThanOrEqualTo(0L));
         } else {
             // On platforms with no swap
@@ -208,7 +208,7 @@ public class OsProbeTests extends ESTestCase {
         // This cgroup data is missing a line about cpuacct
         List<String> procSelfCgroupLines = getProcSelfGroupLines(1, hierarchy).stream()
             .map(line -> line.replaceFirst(",cpuacct", ""))
-            .collect(Collectors.toList());
+            .toList();
 
         final OsProbe probe = buildStubOsProbe(1, hierarchy, procSelfCgroupLines);
 
@@ -223,7 +223,7 @@ public class OsProbeTests extends ESTestCase {
         // This cgroup data is missing a line about cpu
         List<String> procSelfCgroupLines = getProcSelfGroupLines(1, hierarchy).stream()
             .map(line -> line.replaceFirst(":cpu,", ":"))
-            .collect(Collectors.toList());
+            .toList();
 
         final OsProbe probe = buildStubOsProbe(1, hierarchy, procSelfCgroupLines);
 
@@ -238,7 +238,7 @@ public class OsProbeTests extends ESTestCase {
         // This cgroup data is missing a line about memory
         List<String> procSelfCgroupLines = getProcSelfGroupLines(1, hierarchy).stream()
             .filter(line -> line.contains(":memory:") == false)
-            .collect(Collectors.toList());
+            .toList();
 
         final OsProbe probe = buildStubOsProbe(1, hierarchy, procSelfCgroupLines);
 
@@ -305,6 +305,19 @@ public class OsProbeTests extends ESTestCase {
         );
         probe = buildStubOsProbe(cgroupsVersion, "", List.of(), meminfoLines);
         assertThat(probe.getTotalMemFromProcMeminfo(), equalTo(memTotalInKb * 1024L));
+    }
+
+    public void testTotalMemoryOverride() {
+        assertThat(OsProbe.getTotalMemoryOverride("123456789"), is(123456789L));
+        assertThat(OsProbe.getTotalMemoryOverride("123456789123456789"), is(123456789123456789L));
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> OsProbe.getTotalMemoryOverride("-1"));
+        assertThat(e.getMessage(), is("Negative memory size specified in [es.total_memory_bytes]: [-1]"));
+        e = expectThrows(IllegalArgumentException.class, () -> OsProbe.getTotalMemoryOverride("abc"));
+        assertThat(e.getMessage(), is("Invalid value for [es.total_memory_bytes]: [abc]"));
+        // Although numeric, this value overflows long. This won't be a problem in practice for sensible
+        // overrides, as it will be a very long time before machines have more than 8 exabytes of RAM.
+        e = expectThrows(IllegalArgumentException.class, () -> OsProbe.getTotalMemoryOverride("123456789123456789123456789"));
+        assertThat(e.getMessage(), is("Invalid value for [es.total_memory_bytes]: [123456789123456789123456789]"));
     }
 
     public void testGetTotalMemoryOnDebian8() throws Exception {
