@@ -11,17 +11,12 @@ package org.elasticsearch.search;
 import org.apache.lucene.search.Explanation;
 import org.apache.lucene.search.TotalHits;
 import org.elasticsearch.Version;
-import org.elasticsearch.action.OriginalIndices;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.document.DocumentField;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.get.GetResultTests;
 import org.elasticsearch.index.shard.ShardId;
@@ -31,6 +26,11 @@ import org.elasticsearch.search.fetch.subphase.highlight.HighlightFieldTests;
 import org.elasticsearch.test.AbstractWireSerializingTestCase;
 import org.elasticsearch.test.RandomObjects;
 import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -71,8 +71,8 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
                 documentFields = GetResultTests.randomDocumentFields(xContentType, false).v2();
             }
         }
-
-        SearchHit hit = new SearchHit(internalId, uid, nestedIdentity, documentFields, metaFields);
+        SearchHit hit = new SearchHit(internalId, uid, nestedIdentity);
+        hit.addDocumentFields(documentFields, metaFields);
         if (frequently()) {
             if (rarely()) {
                 hit.score(Float.NaN);
@@ -96,7 +96,7 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         }
         if (randomBoolean()) {
             int size = randomIntBetween(0, 5);
-            Map<String, HighlightField> highlightFields = new HashMap<>(size);
+            Map<String, HighlightField> highlightFields = Maps.newMapWithExpectedSize(size);
             for (int i = 0; i < size; i++) {
                 HighlightField testItem = HighlightFieldTests.createTestItem();
                 highlightFields.put(testItem.getName(), testItem);
@@ -117,10 +117,9 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         if (withOptionalInnerHits) {
             int innerHitsSize = randomIntBetween(0, 3);
             if (innerHitsSize > 0) {
-                Map<String, SearchHits> innerHits = new HashMap<>(innerHitsSize);
+                Map<String, SearchHits> innerHits = Maps.newMapWithExpectedSize(innerHitsSize);
                 for (int i = 0; i < innerHitsSize; i++) {
-                    innerHits.put(randomAlphaOfLength(5),
-                        SearchHitsTests.createTestItem(xContentType, false, transportSerialization));
+                    innerHits.put(randomAlphaOfLength(5), SearchHitsTests.createTestItem(xContentType, false, transportSerialization));
                 }
                 hit.setInnerHits(innerHits);
             }
@@ -128,8 +127,13 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         if (transportSerialization && randomBoolean()) {
             String index = randomAlphaOfLengthBetween(5, 10);
             String clusterAlias = randomBoolean() ? null : randomAlphaOfLengthBetween(5, 10);
-            hit.shard(new SearchShardTarget(randomAlphaOfLengthBetween(5, 10),
-                new ShardId(new Index(index, randomAlphaOfLengthBetween(5, 10)), randomInt()), clusterAlias, OriginalIndices.NONE));
+            hit.shard(
+                new SearchShardTarget(
+                    randomAlphaOfLengthBetween(5, 10),
+                    new ShardId(new Index(index, randomAlphaOfLengthBetween(5, 10)), randomInt()),
+                    clusterAlias
+                )
+            );
         }
         return hit;
     }
@@ -173,8 +177,11 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         XContentType xContentType = randomFrom(XContentType.values());
         SearchHit searchHit = createTestItem(xContentType, true, true);
         BytesReference originalBytes = toXContent(searchHit, xContentType, true);
-        Predicate<String> pathsToExclude = path -> path.endsWith("highlight") || path.contains("fields") || path.contains("_source")
-                || path.contains("inner_hits") || path.isEmpty();
+        Predicate<String> pathsToExclude = path -> path.endsWith("highlight")
+            || path.contains("fields")
+            || path.contains("_source")
+            || path.contains("inner_hits")
+            || path.isEmpty();
         BytesReference withRandomFields = insertRandomFields(xContentType, originalBytes, pathsToExclude, random());
 
         SearchHit parsed;
@@ -205,41 +212,41 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
     }
 
     public void testToXContent() throws IOException {
-        SearchHit searchHit = new SearchHit(1, "id1", Collections.emptyMap(), Collections.emptyMap());
+        SearchHit searchHit = new SearchHit(1, "id1");
         searchHit.score(1.5f);
         XContentBuilder builder = JsonXContent.contentBuilder();
         searchHit.toXContent(builder, ToXContent.EMPTY_PARAMS);
-        assertEquals("{\"_id\":\"id1\",\"_score\":1.5}", Strings.toString(builder));
+        assertEquals("""
+            {"_id":"id1","_score":1.5}""", Strings.toString(builder));
     }
 
     public void testSerializeShardTarget() throws Exception {
         String clusterAlias = randomBoolean() ? null : "cluster_alias";
-        SearchShardTarget target = new SearchShardTarget("_node_id", new ShardId(new Index("_index", "_na_"), 0),
-            clusterAlias, OriginalIndices.NONE);
+        SearchShardTarget target = new SearchShardTarget("_node_id", new ShardId(new Index("_index", "_na_"), 0), clusterAlias);
 
         Map<String, SearchHits> innerHits = new HashMap<>();
-        SearchHit innerHit1 = new SearchHit(0, "_id", null, null);
+        SearchHit innerHit1 = new SearchHit(0, "_id");
         innerHit1.shard(target);
-        SearchHit innerInnerHit2 = new SearchHit(0, "_id", null, null);
+        SearchHit innerInnerHit2 = new SearchHit(0, "_id");
         innerInnerHit2.shard(target);
-        innerHits.put("1", new SearchHits(new SearchHit[]{innerInnerHit2}, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
+        innerHits.put("1", new SearchHits(new SearchHit[] { innerInnerHit2 }, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
         innerHit1.setInnerHits(innerHits);
-        SearchHit innerHit2 = new SearchHit(0, "_id", null, null);
+        SearchHit innerHit2 = new SearchHit(0, "_id");
         innerHit2.shard(target);
-        SearchHit innerHit3 = new SearchHit(0, "_id", null, null);
+        SearchHit innerHit3 = new SearchHit(0, "_id");
         innerHit3.shard(target);
 
         innerHits = new HashMap<>();
-        SearchHit hit1 = new SearchHit(0, "_id", null, null);
-        innerHits.put("1", new SearchHits(new SearchHit[]{innerHit1, innerHit2}, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
-        innerHits.put("2", new SearchHits(new SearchHit[]{innerHit3}, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
+        SearchHit hit1 = new SearchHit(0, "_id");
+        innerHits.put("1", new SearchHits(new SearchHit[] { innerHit1, innerHit2 }, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
+        innerHits.put("2", new SearchHits(new SearchHit[] { innerHit3 }, new TotalHits(1, TotalHits.Relation.EQUAL_TO), 1f));
         hit1.shard(target);
         hit1.setInnerHits(innerHits);
 
-        SearchHit hit2 = new SearchHit(0, "_id", null, null);
+        SearchHit hit2 = new SearchHit(0, "_id");
         hit2.shard(target);
 
-        SearchHits hits = new SearchHits(new SearchHit[]{hit1, hit2}, new TotalHits(2, TotalHits.Relation.EQUAL_TO), 1f);
+        SearchHits hits = new SearchHits(new SearchHit[] { hit1, hit2 }, new TotalHits(2, TotalHits.Relation.EQUAL_TO), 1f);
 
         Version version = VersionUtils.randomVersion(random());
         SearchHits results = copyWriteable(hits, getNamedWriteableRegistry(), SearchHits::new, version);
@@ -263,7 +270,7 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
     }
 
     public void testNullSource() {
-        SearchHit searchHit = new SearchHit(0, "_id", null, null);
+        SearchHit searchHit = new SearchHit(0, "_id");
 
         assertThat(searchHit.getSourceAsMap(), nullValue());
         assertThat(searchHit.getSourceRef(), nullValue());
@@ -283,14 +290,15 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
 
     public void testWeirdScriptFields() throws Exception {
         {
-            XContentParser parser = createParser(XContentType.JSON.xContent(), "{\n" +
-                    "  \"_index\": \"twitter\",\n" +
-                    "  \"_id\": \"1\",\n" +
-                    "  \"_score\": 1.0,\n" +
-                    "  \"fields\": {\n" +
-                    "    \"result\": [null]\n" +
-                    "  }\n" +
-                    "}");
+            XContentParser parser = createParser(XContentType.JSON.xContent(), """
+                {
+                  "_index": "twitter",
+                  "_id": "1",
+                  "_score": 1.0,
+                  "fields": {
+                    "result": [null]
+                  }
+                }""");
             SearchHit searchHit = SearchHit.fromXContent(parser);
             Map<String, DocumentField> fields = searchHit.getFields();
             assertEquals(1, fields.size());
@@ -300,14 +308,15 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
             assertNull(result.getValues().get(0));
         }
         {
-            XContentParser parser = createParser(XContentType.JSON.xContent(), "{\n" +
-                    "  \"_index\": \"twitter\",\n" +
-                    "  \"_id\": \"1\",\n" +
-                    "  \"_score\": 1.0,\n" +
-                    "  \"fields\": {\n" +
-                    "    \"result\": [{}]\n" +
-                    "  }\n" +
-                    "}");
+            XContentParser parser = createParser(XContentType.JSON.xContent(), """
+                {
+                  "_index": "twitter",
+                  "_id": "1",
+                  "_score": 1.0,
+                  "fields": {
+                    "result": [{}]
+                  }
+                }""");
 
             SearchHit searchHit = SearchHit.fromXContent(parser);
             Map<String, DocumentField> fields = searchHit.getFields();
@@ -321,16 +330,17 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
             assertEquals(0, map.size());
         }
         {
-            XContentParser parser = createParser(JsonXContent.jsonXContent, "{\n" +
-                    "  \"_index\": \"twitter\",\n" +
-                    "  \"_id\": \"1\",\n" +
-                    "  \"_score\": 1.0,\n" +
-                    "  \"fields\": {\n" +
-                    "    \"result\": [\n" +
-                    "      []\n" +
-                    "    ]\n" +
-                    "  }\n" +
-                    "}");
+            XContentParser parser = createParser(JsonXContent.jsonXContent, """
+                {
+                  "_index": "twitter",
+                  "_id": "1",
+                  "_score": 1.0,
+                  "fields": {
+                    "result": [
+                      []
+                    ]
+                  }
+                }""");
 
             SearchHit searchHit = SearchHit.fromXContent(parser);
             Map<String, DocumentField> fields = searchHit.getFields();
@@ -349,7 +359,8 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         Map<String, DocumentField> fields = new HashMap<>();
         fields.put("foo", new DocumentField("foo", Collections.emptyList()));
         fields.put("bar", new DocumentField("bar", Collections.emptyList()));
-        SearchHit hit = new SearchHit(0, "_id", fields, Collections.emptyMap());
+        SearchHit hit = new SearchHit(0, "_id");
+        hit.addDocumentFields(fields, Map.of());
         {
             BytesReference originalBytes = toShuffledXContent(hit, XContentType.JSON, ToXContent.EMPTY_PARAMS, randomBoolean());
             // checks that the fields section is completely omitted in the rendering.
@@ -367,7 +378,8 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
         fields = new HashMap<>();
         fields.put("foo", new DocumentField("foo", Collections.emptyList()));
         fields.put("bar", new DocumentField("bar", Collections.singletonList("value")));
-        hit = new SearchHit(0, "_id", fields, Collections.emptyMap());
+        hit = new SearchHit(0, "_id");
+        hit.addDocumentFields(fields, Collections.emptyMap());
         {
             BytesReference originalBytes = toShuffledXContent(hit, XContentType.JSON, ToXContent.EMPTY_PARAMS, randomBoolean());
             final SearchHit parsed;
@@ -378,12 +390,13 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
                 assertNull(parser.nextToken());
             }
             assertThat(parsed.getFields().size(), equalTo(1));
-            assertThat(parsed.getFields().get("bar").getValues(), equalTo( Collections.singletonList("value")));
+            assertThat(parsed.getFields().get("bar").getValues(), equalTo(Collections.singletonList("value")));
         }
 
         Map<String, DocumentField> metadata = new HashMap<>();
         metadata.put("_routing", new DocumentField("_routing", Collections.emptyList()));
-        hit = new SearchHit(0, "_id", fields, Collections.emptyMap());
+        hit = new SearchHit(0, "_id");
+        hit.addDocumentFields(fields, Collections.emptyMap());
         {
             BytesReference originalBytes = toShuffledXContent(hit, XContentType.JSON, ToXContent.EMPTY_PARAMS, randomBoolean());
             final SearchHit parsed;
@@ -394,7 +407,7 @@ public class SearchHitTests extends AbstractWireSerializingTestCase<SearchHit> {
                 assertNull(parser.nextToken());
             }
             assertThat(parsed.getFields().size(), equalTo(1));
-            assertThat(parsed.getFields().get("bar").getValues(), equalTo( Collections.singletonList("value")));
+            assertThat(parsed.getFields().get("bar").getValues(), equalTo(Collections.singletonList("value")));
             assertNull(parsed.getFields().get("_routing"));
         }
 
