@@ -7,10 +7,8 @@
 
 package org.elasticsearch.xpack.ccr.repository;
 
-import com.carrotsearch.hppc.cursors.IntObjectCursor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.ElasticsearchSecurityException;
 import org.elasticsearch.ExceptionsHelper;
@@ -18,14 +16,15 @@ import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.ActionRunnable;
-import org.elasticsearch.action.admin.cluster.state.ClusterStateRequest;
+import org.elasticsearch.action.SingleResultDeduplicator;
 import org.elasticsearch.action.admin.cluster.state.ClusterStateResponse;
 import org.elasticsearch.action.admin.indices.mapping.put.PutMappingRequest;
 import org.elasticsearch.action.admin.indices.stats.IndicesStatsResponse;
 import org.elasticsearch.action.admin.indices.stats.ShardStats;
 import org.elasticsearch.action.support.ListenerTimeouts;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.action.support.ThreadedActionListener;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateUpdateTask;
@@ -37,15 +36,15 @@ import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.component.AbstractLifecycleComponent;
-import org.elasticsearch.core.Releasable;
 import org.elasticsearch.common.metrics.CounterMetric;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeValue;
-import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
-import org.elasticsearch.core.internal.io.IOUtils;
+import org.elasticsearch.core.IOUtils;
+import org.elasticsearch.core.Releasable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.engine.EngineException;
 import org.elasticsearch.index.seqno.RetentionLeaseAlreadyExistsException;
@@ -75,6 +74,7 @@ import org.elasticsearch.repositories.ShardSnapshotResult;
 import org.elasticsearch.repositories.SnapshotShardContext;
 import org.elasticsearch.repositories.blobstore.FileRestoreContext;
 import org.elasticsearch.snapshots.Snapshot;
+import org.elasticsearch.snapshots.SnapshotDeleteListener;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
 import org.elasticsearch.snapshots.SnapshotState;
@@ -102,13 +102,13 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.LongConsumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.index.seqno.RetentionLeaseActions.RETAIN_ALL;
 import static org.elasticsearch.repositories.RepositoryData.MISSING_UUID;
 import static org.elasticsearch.xpack.ccr.CcrRetentionLeases.retentionLeaseId;
@@ -134,21 +134,31 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     private final String localClusterName;
     private final String remoteClusterAlias;
     private final Client client;
-    private final CcrLicenseChecker ccrLicenseChecker;
     private final ThreadPool threadPool;
 
     private final CounterMetric throttledTime = new CounterMetric();
 
-    public CcrRepository(RepositoryMetadata metadata, Client client, CcrLicenseChecker ccrLicenseChecker, Settings settings,
-                         CcrSettings ccrSettings, ThreadPool threadPool) {
+    private final SingleResultDeduplicator<ClusterState> csDeduplicator;
+
+    public CcrRepository(RepositoryMetadata metadata, Client client, Settings settings, CcrSettings ccrSettings, ThreadPool threadPool) {
         this.metadata = metadata;
         this.ccrSettings = ccrSettings;
         this.localClusterName = ClusterName.CLUSTER_NAME_SETTING.get(settings).value();
         assert metadata.name().startsWith(NAME_PREFIX) : "CcrRepository metadata.name() must start with: " + NAME_PREFIX;
         this.remoteClusterAlias = Strings.split(metadata.name(), NAME_PREFIX)[1];
-        this.ccrLicenseChecker = ccrLicenseChecker;
         this.client = client;
         this.threadPool = threadPool;
+        csDeduplicator = new SingleResultDeduplicator<>(
+            threadPool.getThreadContext(),
+            l -> getRemoteClusterClient().admin()
+                .cluster()
+                .prepareState()
+                .clear()
+                .setMetadata(true)
+                .setNodes(true)
+                .setMasterNodeTimeout(TimeValue.MAX_VALUE)
+                .execute(l.map(ClusterStateResponse::getState))
+        );
     }
 
     @Override
@@ -179,26 +189,26 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     public void getSnapshotInfo(GetSnapshotInfoContext context) {
         final List<SnapshotId> snapshotIds = context.snapshotIds();
         assert snapshotIds.size() == 1 && SNAPSHOT_ID.equals(snapshotIds.iterator().next())
-                : "RemoteClusterRepository only supports " + SNAPSHOT_ID + " as the SnapshotId but saw " + snapshotIds;
-        Client remoteClient = getRemoteClusterClient();
-        ClusterStateResponse response = remoteClient.admin().cluster().prepareState().clear().setMetadata(true).setNodes(true)
-            .get(ccrSettings.getRecoveryActionTimeout());
-        Metadata metadata = response.getState().metadata();
-        ImmutableOpenMap<String, IndexMetadata> indicesMap = metadata.indices();
-        ArrayList<String> indices = new ArrayList<>(indicesMap.size());
-        indicesMap.keysIt().forEachRemaining(indices::add);
-
-        // fork to the snapshot meta pool because the context expects to run on it and asserts that it does
-        threadPool.executor(ThreadPool.Names.SNAPSHOT_META).execute(() -> context.onResponse(
-            new SnapshotInfo(
-                new Snapshot(this.metadata.name(), SNAPSHOT_ID),
-                indices,
-                new ArrayList<>(metadata.dataStreams().keySet()),
-                Collections.emptyList(),
-                response.getState().getNodes().getMaxNodeVersion(),
-                SnapshotState.SUCCESS
-            )
-        ));
+            : "RemoteClusterRepository only supports " + SNAPSHOT_ID + " as the SnapshotId but saw " + snapshotIds;
+        try {
+            csDeduplicator.execute(
+                new ThreadedActionListener<>(logger, threadPool, ThreadPool.Names.SNAPSHOT_META, context.map(response -> {
+                    Metadata responseMetadata = response.metadata();
+                    Map<String, IndexMetadata> indicesMap = responseMetadata.indices();
+                    return new SnapshotInfo(
+                        new Snapshot(this.metadata.name(), SNAPSHOT_ID),
+                        List.copyOf(indicesMap.keySet()),
+                        List.copyOf(responseMetadata.dataStreams().keySet()),
+                        List.of(),
+                        response.getNodes().getMaxNodeVersion(),
+                        SnapshotState.SUCCESS
+                    );
+                }), false)
+            );
+        } catch (Exception e) {
+            assert false : e;
+            context.onFailure(e);
+        }
     }
 
     @Override
@@ -206,8 +216,9 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         assert SNAPSHOT_ID.equals(snapshotId) : "RemoteClusterRepository only supports " + SNAPSHOT_ID + " as the SnapshotId";
         Client remoteClient = getRemoteClusterClient();
         // We set a single dummy index name to avoid fetching all the index data
-        ClusterStateRequest clusterStateRequest = CcrRequests.metadataRequest("dummy_index_name");
-        ClusterStateResponse clusterState = remoteClient.admin().cluster().state(clusterStateRequest)
+        ClusterStateResponse clusterState = remoteClient.admin()
+            .cluster()
+            .state(CcrRequests.metadataRequest("dummy_index_name"))
             .actionGet(ccrSettings.getRecoveryActionTimeout());
         return clusterState.getState().metadata();
     }
@@ -218,24 +229,25 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         String leaderIndex = index.getName();
         Client remoteClient = getRemoteClusterClient();
 
-        ClusterStateRequest clusterStateRequest = CcrRequests.metadataRequest(leaderIndex);
-        ClusterStateResponse clusterState = remoteClient.admin().cluster().state(clusterStateRequest)
+        ClusterStateResponse clusterState = remoteClient.admin()
+            .cluster()
+            .state(CcrRequests.metadataRequest(leaderIndex))
             .actionGet(ccrSettings.getRecoveryActionTimeout());
 
         // Validates whether the leader cluster has been configured properly:
         PlainActionFuture<String[]> future = PlainActionFuture.newFuture();
         IndexMetadata leaderIndexMetadata = clusterState.getState().metadata().index(leaderIndex);
-        ccrLicenseChecker.fetchLeaderHistoryUUIDs(remoteClient, leaderIndexMetadata, future::onFailure, future::onResponse);
+        CcrLicenseChecker.fetchLeaderHistoryUUIDs(remoteClient, leaderIndexMetadata, future::onFailure, future::onResponse);
         String[] leaderHistoryUUIDs = future.actionGet(ccrSettings.getRecoveryActionTimeout());
 
         IndexMetadata.Builder imdBuilder = IndexMetadata.builder(leaderIndex);
         // Adding the leader index uuid for each shard as custom metadata:
-        Map<String, String> metadata = new HashMap<>();
-        metadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_SHARD_HISTORY_UUIDS, String.join(",", leaderHistoryUUIDs));
-        metadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_UUID_KEY, leaderIndexMetadata.getIndexUUID());
-        metadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_NAME_KEY, leaderIndexMetadata.getIndex().getName());
-        metadata.put(Ccr.CCR_CUSTOM_METADATA_REMOTE_CLUSTER_NAME_KEY, remoteClusterAlias);
-        imdBuilder.putCustom(Ccr.CCR_CUSTOM_METADATA_KEY, metadata);
+        Map<String, String> customMetadata = new HashMap<>();
+        customMetadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_SHARD_HISTORY_UUIDS, String.join(",", leaderHistoryUUIDs));
+        customMetadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_UUID_KEY, leaderIndexMetadata.getIndexUUID());
+        customMetadata.put(Ccr.CCR_CUSTOM_METADATA_LEADER_INDEX_NAME_KEY, leaderIndexMetadata.getIndex().getName());
+        customMetadata.put(Ccr.CCR_CUSTOM_METADATA_REMOTE_CLUSTER_NAME_KEY, remoteClusterAlias);
+        imdBuilder.putCustom(Ccr.CCR_CUSTOM_METADATA_KEY, customMetadata);
 
         imdBuilder.settings(leaderIndexMetadata.getSettings());
 
@@ -243,8 +255,8 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         imdBuilder.putMapping(leaderIndexMetadata.mapping());
         imdBuilder.setRoutingNumShards(leaderIndexMetadata.getRoutingNumShards());
         // We assert that insync allocation ids are not empty in `PrimaryShardAllocator`
-        for (IntObjectCursor<Set<String>> entry : leaderIndexMetadata.getInSyncAllocationIds()) {
-            imdBuilder.putInSyncAllocationIds(entry.key, Collections.singleton(IN_SYNC_ALLOCATION_ID));
+        for (var key : leaderIndexMetadata.getInSyncAllocationIds().keySet()) {
+            imdBuilder.putInSyncAllocationIds(key, Collections.singleton(IN_SYNC_ALLOCATION_ID));
         }
 
         return imdBuilder.build();
@@ -252,31 +264,26 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
 
     @Override
     public void getRepositoryData(ActionListener<RepositoryData> listener) {
-        ActionListener.completeWith(listener, () -> {
-            Client remoteClient = getRemoteClusterClient();
-            ClusterStateResponse response = remoteClient.admin().cluster().prepareState().clear().setMetadata(true)
-                .get(ccrSettings.getRecoveryActionTimeout());
-            Metadata remoteMetadata = response.getState().getMetadata();
-
-            Map<String, SnapshotId> copiedSnapshotIds = new HashMap<>();
-            Map<String, RepositoryData.SnapshotDetails> snapshotsDetails = new HashMap<>(copiedSnapshotIds.size());
-            Map<IndexId, List<SnapshotId>> indexSnapshots = new HashMap<>(copiedSnapshotIds.size());
-
-            ImmutableOpenMap<String, IndexMetadata> remoteIndices = remoteMetadata.getIndices();
-            for (String indexName : remoteMetadata.getConcreteAllIndices()) {
-                // Both the Snapshot name and UUID are set to _latest_
-                SnapshotId snapshotId = new SnapshotId(LATEST, LATEST);
-                copiedSnapshotIds.put(indexName, snapshotId);
-                final long nowMillis = threadPool.absoluteTimeInMillis();
-                snapshotsDetails.put(indexName, new RepositoryData.SnapshotDetails(
-                        SnapshotState.SUCCESS,
-                        Version.CURRENT,
-                        nowMillis,
-                        nowMillis));
-                Index index = remoteIndices.get(indexName).getIndex();
-                indexSnapshots.put(new IndexId(indexName, index.getUUID()), Collections.singletonList(snapshotId));
-            }
-            return new RepositoryData(
+        try {
+            csDeduplicator.execute(listener.map(response -> {
+                final Metadata remoteMetadata = response.getMetadata();
+                final String[] concreteAllIndices = remoteMetadata.getConcreteAllIndices();
+                final Map<String, SnapshotId> copiedSnapshotIds = Maps.newMapWithExpectedSize(concreteAllIndices.length);
+                final Map<String, RepositoryData.SnapshotDetails> snapshotsDetails = Maps.newMapWithExpectedSize(concreteAllIndices.length);
+                final Map<IndexId, List<SnapshotId>> indexSnapshots = Maps.newMapWithExpectedSize(concreteAllIndices.length);
+                final Map<String, IndexMetadata> remoteIndices = remoteMetadata.getIndices();
+                for (String indexName : concreteAllIndices) {
+                    // Both the Snapshot name and UUID are set to _latest_
+                    final SnapshotId snapshotId = new SnapshotId(LATEST, LATEST);
+                    copiedSnapshotIds.put(indexName, snapshotId);
+                    final long nowMillis = threadPool.absoluteTimeInMillis();
+                    snapshotsDetails.put(
+                        indexName,
+                        new RepositoryData.SnapshotDetails(SnapshotState.SUCCESS, Version.CURRENT, nowMillis, nowMillis, "")
+                    );
+                    indexSnapshots.put(new IndexId(indexName, remoteIndices.get(indexName).getIndex().getUUID()), List.of(snapshotId));
+                }
+                return new RepositoryData(
                     MISSING_UUID,
                     1,
                     copiedSnapshotIds,
@@ -284,8 +291,13 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
                     indexSnapshots,
                     ShardGenerations.EMPTY,
                     IndexMetaDataGenerations.EMPTY,
-                    MISSING_UUID);
-        });
+                    MISSING_UUID
+                );
+            }));
+        } catch (Exception e) {
+            assert false;
+            listener.onFailure(e);
+        }
     }
 
     @Override
@@ -294,9 +306,13 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     }
 
     @Override
-    public void deleteSnapshots(Collection<SnapshotId> snapshotIds, long repositoryStateId, Version repositoryMetaVersion,
-                                ActionListener<RepositoryData> listener) {
-        throw new UnsupportedOperationException("Unsupported for repository of type: " + TYPE);
+    public void deleteSnapshots(
+        Collection<SnapshotId> snapshotIds,
+        long repositoryStateId,
+        Version repositoryMetaVersion,
+        SnapshotDeleteListener listener
+    ) {
+        listener.onFailure(new UnsupportedOperationException("Unsupported for repository of type: " + TYPE));
     }
 
     @Override
@@ -320,8 +336,7 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     }
 
     @Override
-    public void verify(String verificationToken, DiscoveryNode localNode) {
-    }
+    public void verify(String verificationToken, DiscoveryNode localNode) {}
 
     @Override
     public boolean isReadOnly() {
@@ -334,13 +349,22 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     }
 
     @Override
-    public void restoreShard(Store store, SnapshotId snapshotId, IndexId indexId, ShardId snapshotShardId, RecoveryState recoveryState,
-                             ActionListener<Void> listener) {
+    public void restoreShard(
+        Store store,
+        SnapshotId snapshotId,
+        IndexId indexId,
+        ShardId snapshotShardId,
+        RecoveryState recoveryState,
+        ActionListener<Void> listener
+    ) {
         final ShardId shardId = store.shardId();
         final LinkedList<Closeable> toClose = new LinkedList<>();
-        final ActionListener<Void> restoreListener = ActionListener.runBefore(listener.delegateResponse(
-            (l, e) -> l.onFailure(new IndexShardRestoreFailedException(shardId, "failed to restore snapshot [" + snapshotId + "]", e))),
-            () -> IOUtils.close(toClose));
+        final ActionListener<Void> restoreListener = ActionListener.runBefore(
+            listener.delegateResponse(
+                (l, e) -> l.onFailure(new IndexShardRestoreFailedException(shardId, "failed to restore snapshot [" + snapshotId + "]", e))
+            ),
+            () -> IOUtils.close(toClose)
+        );
         try {
             // TODO: Add timeouts to network calls / the restore process.
             createEmptyStore(store);
@@ -353,46 +377,48 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
 
             final Client remoteClient = getRemoteClusterClient();
 
-            final String retentionLeaseId =
-                retentionLeaseId(localClusterName, shardId.getIndex(), remoteClusterAlias, leaderIndex);
+            final String retentionLeaseId = retentionLeaseId(localClusterName, shardId.getIndex(), remoteClusterAlias, leaderIndex);
 
             acquireRetentionLeaseOnLeader(shardId, retentionLeaseId, leaderShardId, remoteClient);
 
             // schedule renewals to run during the restore
-            final Scheduler.Cancellable renewable = threadPool.scheduleWithFixedDelay(
-                () -> {
-                    logger.trace("{} background renewal of retention lease [{}] during restore", shardId, retentionLeaseId);
-                    final ThreadContext threadContext = threadPool.getThreadContext();
-                    try (ThreadContext.StoredContext ignore = threadContext.stashContext()) {
-                        // we have to execute under the system context so that if security is enabled the renewal is authorized
-                        threadContext.markAsSystemContext();
-                        CcrRetentionLeases.asyncRenewRetentionLease(
-                            leaderShardId,
-                            retentionLeaseId,
-                            RETAIN_ALL,
-                            remoteClient,
-                            ActionListener.wrap(
-                                r -> {},
-                                e -> {
-                                    final Throwable cause = ExceptionsHelper.unwrapCause(e);
-                                    assert cause instanceof ElasticsearchSecurityException == false : cause;
-                                    if (cause instanceof RetentionLeaseInvalidRetainingSeqNoException == false) {
-                                        logger.warn(new ParameterizedMessage(
-                                            "{} background renewal of retention lease [{}] failed during restore", shardId,
-                                            retentionLeaseId), cause);
-                                    }
-                                }));
-                    }
-                },
+            final Scheduler.Cancellable renewable = threadPool.scheduleWithFixedDelay(() -> {
+                logger.trace("{} background renewal of retention lease [{}] during restore", shardId, retentionLeaseId);
+                final ThreadContext threadContext = threadPool.getThreadContext();
+                try (ThreadContext.StoredContext ignore = threadContext.stashContext()) {
+                    // we have to execute under the system context so that if security is enabled the renewal is authorized
+                    threadContext.markAsSystemContext();
+                    CcrRetentionLeases.asyncRenewRetentionLease(
+                        leaderShardId,
+                        retentionLeaseId,
+                        RETAIN_ALL,
+                        remoteClient,
+                        ActionListener.wrap(r -> {}, e -> {
+                            final Throwable cause = ExceptionsHelper.unwrapCause(e);
+                            assert cause instanceof ElasticsearchSecurityException == false : cause;
+                            if (cause instanceof RetentionLeaseInvalidRetainingSeqNoException == false) {
+                                logger.warn(
+                                    () -> format(
+                                        "%s background renewal of retention lease [%s] failed during restore",
+                                        shardId,
+                                        retentionLeaseId
+                                    ),
+                                    cause
+                                );
+                            }
+                        })
+                    );
+                }
+            },
                 CcrRetentionLeases.RETENTION_LEASE_RENEW_INTERVAL_SETTING.get(store.indexSettings().getNodeSettings()),
-                Ccr.CCR_THREAD_POOL_NAME);
+                Ccr.CCR_THREAD_POOL_NAME
+            );
             toClose.add(() -> {
-                logger.trace(
-                    "{} canceling background renewal of retention lease [{}] at the end of restore", shardId, retentionLeaseId);
+                logger.trace("{} canceling background renewal of retention lease [{}] at the end of restore", shardId, retentionLeaseId);
                 renewable.cancel();
             });
             // TODO: There should be some local timeout. And if the remote cluster returns an unknown session
-            //  response, we should be able to retry by creating a new session.
+            // response, we should be able to retry by creating a new session.
             final RestoreSession restoreSession = openSession(metadata.name(), remoteClient, leaderShardId, shardId, recoveryState);
             toClose.addFirst(restoreSession); // Some tests depend on closing session before cancelling retention lease renewal
             restoreSession.restoreFiles(store, ActionListener.wrap(v -> {
@@ -405,7 +431,7 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         }
     }
 
-    private void createEmptyStore(Store store) {
+    private static void createEmptyStore(Store store) {
         store.incRef();
         try {
             store.createEmpty();
@@ -417,31 +443,48 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     }
 
     void acquireRetentionLeaseOnLeader(
-            final ShardId shardId,
-            final String retentionLeaseId,
-            final ShardId leaderShardId,
-            final Client remoteClient) {
-        logger.trace(
-                () -> new ParameterizedMessage("{} requesting leader to add retention lease [{}]", shardId, retentionLeaseId));
+        final ShardId shardId,
+        final String retentionLeaseId,
+        final ShardId leaderShardId,
+        final Client remoteClient
+    ) {
+        logger.trace(() -> format("%s requesting leader to add retention lease [%s]", shardId, retentionLeaseId));
         final TimeValue timeout = ccrSettings.getRecoveryActionTimeout();
-        final Optional<RetentionLeaseAlreadyExistsException> maybeAddAlready =
-                syncAddRetentionLease(leaderShardId, retentionLeaseId, RETAIN_ALL, remoteClient, timeout);
+        final Optional<RetentionLeaseAlreadyExistsException> maybeAddAlready = syncAddRetentionLease(
+            leaderShardId,
+            retentionLeaseId,
+            RETAIN_ALL,
+            remoteClient,
+            timeout
+        );
         maybeAddAlready.ifPresent(addAlready -> {
-            logger.trace(() -> new ParameterizedMessage(
-                            "{} retention lease [{}] already exists, requesting a renewal",
-                            shardId,
-                            retentionLeaseId),
-                    addAlready);
-            final Optional<RetentionLeaseNotFoundException> maybeRenewNotFound =
-                    syncRenewRetentionLease(leaderShardId, retentionLeaseId, RETAIN_ALL, remoteClient, timeout);
+            logger.trace(
+                () -> format("%s retention lease [%s] already exists, requesting a renewal", shardId, retentionLeaseId),
+                addAlready
+            );
+            final Optional<RetentionLeaseNotFoundException> maybeRenewNotFound = syncRenewRetentionLease(
+                leaderShardId,
+                retentionLeaseId,
+                RETAIN_ALL,
+                remoteClient,
+                timeout
+            );
             maybeRenewNotFound.ifPresent(renewNotFound -> {
-                logger.trace(() -> new ParameterizedMessage(
-                                "{} retention lease [{}] not found while attempting to renew, requesting a final add",
-                                shardId,
-                                retentionLeaseId),
-                        renewNotFound);
-                final Optional<RetentionLeaseAlreadyExistsException> maybeFallbackAddAlready =
-                        syncAddRetentionLease(leaderShardId, retentionLeaseId, RETAIN_ALL, remoteClient, timeout);
+                logger.trace(
+                    () -> format(
+                        "%s retention lease [%s] not found while attempting to renew, requesting a final add",
+                        shardId,
+                        retentionLeaseId
+                    ),
+                    renewNotFound
+                );
+                final Optional<RetentionLeaseAlreadyExistsException> maybeFallbackAddAlready = syncAddRetentionLease(
+                    leaderShardId,
+                    retentionLeaseId,
+                    RETAIN_ALL,
+                    remoteClient,
+                    timeout
+                );
                 maybeFallbackAddAlready.ifPresent(fallbackAddAlready -> {
                     /*
                      * At this point we tried to add the lease and the retention lease already existed. By the time we tried to renew the
@@ -460,14 +503,15 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     public IndexShardSnapshotStatus getShardSnapshotStatus(SnapshotId snapshotId, IndexId index, ShardId shardId) {
         assert SNAPSHOT_ID.equals(snapshotId) : "RemoteClusterRepository only supports " + SNAPSHOT_ID + " as the SnapshotId";
         final String leaderIndex = index.getName();
-        final IndicesStatsResponse response = getRemoteClusterClient().admin().indices().prepareStats(leaderIndex)
-            .clear().setStore(true)
+        final IndicesStatsResponse response = getRemoteClusterClient().admin()
+            .indices()
+            .prepareStats(leaderIndex)
+            .clear()
+            .setStore(true)
             .get(ccrSettings.getRecoveryActionTimeout());
         for (ShardStats shardStats : response.getIndex(leaderIndex).getShards()) {
             final ShardRouting shardRouting = shardStats.getShardRouting();
-            if (shardRouting.shardId().id() == shardId.getId()
-                && shardRouting.primary()
-                && shardRouting.active()) {
+            if (shardRouting.shardId().id() == shardId.getId() && shardRouting.primary() && shardRouting.active()) {
                 // we only care about the shard size here for shard allocation, populate the rest with dummy values
                 final long totalSize = shardStats.getStats().getStore().getSizeInBytes();
                 return IndexShardSnapshotStatus.newDone(0L, 0L, 1, 1, totalSize, totalSize, DUMMY_GENERATION);
@@ -477,27 +521,38 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
     }
 
     @Override
-    public void updateState(ClusterState state) {
-    }
+    public void updateState(ClusterState state) {}
 
     @Override
-    public void executeConsistentStateUpdate(Function<RepositoryData, ClusterStateUpdateTask> createUpdateTask, String source,
-                                             Consumer<Exception> onFailure) {
+    public void executeConsistentStateUpdate(
+        Function<RepositoryData, ClusterStateUpdateTask> createUpdateTask,
+        String source,
+        Consumer<Exception> onFailure
+    ) {
         throw new UnsupportedOperationException("Unsupported for repository of type: " + TYPE);
     }
 
     @Override
-    public void cloneShardSnapshot(SnapshotId source, SnapshotId target, RepositoryShardId shardId, ShardGeneration shardGeneration,
-                                   ActionListener<ShardSnapshotResult> listener) {
+    public void cloneShardSnapshot(
+        SnapshotId source,
+        SnapshotId target,
+        RepositoryShardId shardId,
+        ShardGeneration shardGeneration,
+        ActionListener<ShardSnapshotResult> listener
+    ) {
         throw new UnsupportedOperationException("Unsupported for repository of type: " + TYPE);
     }
 
     @Override
-    public void awaitIdle() {
-    }
+    public void awaitIdle() {}
 
-    private void updateMappings(Client leaderClient, Index leaderIndex, long leaderMappingVersion,
-                                Client followerClient, Index followerIndex) {
+    private void updateMappings(
+        Client leaderClient,
+        Index leaderIndex,
+        long leaderMappingVersion,
+        Client followerClient,
+        Index followerIndex
+    ) {
         final PlainActionFuture<IndexMetadata> indexMetadataFuture = new PlainActionFuture<>();
         final long startTimeInNanos = System.nanoTime();
         final Supplier<TimeValue> timeout = () -> {
@@ -513,13 +568,31 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         }
     }
 
-    RestoreSession openSession(String repositoryName, Client remoteClient, ShardId leaderShardId, ShardId indexShardId,
-                                       RecoveryState recoveryState) {
+    RestoreSession openSession(
+        String repositoryName,
+        Client remoteClient,
+        ShardId leaderShardId,
+        ShardId indexShardId,
+        RecoveryState recoveryState
+    ) {
         String sessionUUID = UUIDs.randomBase64UUID();
-        PutCcrRestoreSessionAction.PutCcrRestoreSessionResponse response = remoteClient.execute(PutCcrRestoreSessionAction.INSTANCE,
-            new PutCcrRestoreSessionRequest(sessionUUID, leaderShardId)).actionGet(ccrSettings.getRecoveryActionTimeout());
-        return new RestoreSession(repositoryName, remoteClient, sessionUUID, response.getNode(), indexShardId, recoveryState,
-            response.getStoreFileMetadata(), response.getMappingVersion(), threadPool, ccrSettings, throttledTime::inc);
+        PutCcrRestoreSessionAction.PutCcrRestoreSessionResponse response = remoteClient.execute(
+            PutCcrRestoreSessionAction.INSTANCE,
+            new PutCcrRestoreSessionRequest(sessionUUID, leaderShardId)
+        ).actionGet(ccrSettings.getRecoveryActionTimeout());
+        return new RestoreSession(
+            repositoryName,
+            remoteClient,
+            sessionUUID,
+            response.getNode(),
+            indexShardId,
+            recoveryState,
+            response.getStoreFileMetadata(),
+            response.getMappingVersion(),
+            threadPool,
+            ccrSettings,
+            throttledTime::inc
+        );
     }
 
     private static class RestoreSession extends FileRestoreContext implements Closeable {
@@ -533,9 +606,19 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         private final LongConsumer throttleListener;
         private final ThreadPool threadPool;
 
-        RestoreSession(String repositoryName, Client remoteClient, String sessionUUID, DiscoveryNode node, ShardId shardId,
-                       RecoveryState recoveryState, Store.MetadataSnapshot sourceMetadata, long mappingVersion,
-                       ThreadPool threadPool, CcrSettings ccrSettings, LongConsumer throttleListener) {
+        RestoreSession(
+            String repositoryName,
+            Client remoteClient,
+            String sessionUUID,
+            DiscoveryNode node,
+            ShardId shardId,
+            RecoveryState recoveryState,
+            Store.MetadataSnapshot sourceMetadata,
+            long mappingVersion,
+            ThreadPool threadPool,
+            CcrSettings ccrSettings,
+            LongConsumer throttleListener
+        ) {
             super(repositoryName, shardId, SNAPSHOT_ID, recoveryState);
             this.remoteClient = remoteClient;
             this.sessionUUID = sessionUUID;
@@ -550,7 +633,7 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         void restoreFiles(Store store, ActionListener<Void> listener) {
             ArrayList<FileInfo> fileInfos = new ArrayList<>();
             for (StoreFileMetadata fileMetadata : sourceMetadata) {
-                ByteSizeValue fileSize = new ByteSizeValue(fileMetadata.length());
+                ByteSizeValue fileSize = ByteSizeValue.ofBytes(fileMetadata.length());
                 fileInfos.add(new FileInfo(fileMetadata.name(), fileMetadata, fileSize));
             }
             SnapshotFiles snapshotFiles = new SnapshotFiles(LATEST, fileInfos, null);
@@ -562,10 +645,14 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
             logger.trace("[{}] starting CCR restore of {} files", shardId, filesToRecover);
             final List<StoreFileMetadata> mds = filesToRecover.stream().map(FileInfo::metadata).collect(Collectors.toList());
             final MultiChunkTransfer<StoreFileMetadata, FileChunk> multiFileTransfer = new MultiChunkTransfer<>(
-                logger, threadPool.getThreadContext(), allFilesListener, ccrSettings.getMaxConcurrentFileChunks(), mds) {
+                logger,
+                threadPool.getThreadContext(),
+                allFilesListener,
+                ccrSettings.getMaxConcurrentFileChunks(),
+                mds
+            ) {
 
-                final MultiFileWriter multiFileWriter = new MultiFileWriter(store, recoveryState.getIndex(), "", logger, () -> {
-                });
+                final MultiFileWriter multiFileWriter = new MultiFileWriter(store, recoveryState.getIndex(), "", logger, () -> {});
                 long offset = 0;
 
                 @Override
@@ -582,47 +669,55 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
 
                 @Override
                 protected void executeChunkRequest(FileChunk request, ActionListener<Void> listener) {
-                    remoteClient.execute(GetCcrRestoreFileChunkAction.INSTANCE,
+                    remoteClient.execute(
+                        GetCcrRestoreFileChunkAction.INSTANCE,
                         new GetCcrRestoreFileChunkRequest(node, sessionUUID, request.md.name(), request.bytesRequested),
-                            ListenerTimeouts.wrapWithTimeout(threadPool, new ActionListener<>() {
-                                @Override
-                                public void onResponse(
-                                        GetCcrRestoreFileChunkAction.GetCcrRestoreFileChunkResponse getCcrRestoreFileChunkResponse) {
-                                    getCcrRestoreFileChunkResponse.incRef();
-                                    threadPool.generic().execute(new ActionRunnable<>(listener) {
-                                        @Override
-                                        protected void doRun() throws Exception {
-                                            writeFileChunk(request.md, getCcrRestoreFileChunkResponse);
-                                            listener.onResponse(null);
-                                        }
+                        ListenerTimeouts.wrapWithTimeout(threadPool, new ActionListener<>() {
+                            @Override
+                            public void onResponse(
+                                GetCcrRestoreFileChunkAction.GetCcrRestoreFileChunkResponse getCcrRestoreFileChunkResponse
+                            ) {
+                                getCcrRestoreFileChunkResponse.incRef();
+                                threadPool.generic().execute(new ActionRunnable<>(listener) {
+                                    @Override
+                                    protected void doRun() throws Exception {
+                                        writeFileChunk(request.md, getCcrRestoreFileChunkResponse);
+                                        listener.onResponse(null);
+                                    }
 
-                                        @Override
-                                        public void onAfter() {
-                                            getCcrRestoreFileChunkResponse.decRef();
-                                        }
-                                    });
-                                }
+                                    @Override
+                                    public void onAfter() {
+                                        getCcrRestoreFileChunkResponse.decRef();
+                                    }
+                                });
+                            }
 
-                                @Override
-                                public void onFailure(Exception e) {
-                                    threadPool.generic().execute(() -> {
-                                        try {
-                                            listener.onFailure(e);
-                                        } catch (Exception ex) {
-                                            e.addSuppressed(ex);
-                                            logger.warn(() ->
-                                                    new ParameterizedMessage("failed to execute failure callback for chunk request"), e);
-                                        }
-                                    });
-                                }
-                            }, ccrSettings.getRecoveryActionTimeout(), ThreadPool.Names.GENERIC, GetCcrRestoreFileChunkAction.NAME));
+                            @Override
+                            public void onFailure(Exception e) {
+                                threadPool.generic().execute(() -> {
+                                    try {
+                                        listener.onFailure(e);
+                                    } catch (Exception ex) {
+                                        e.addSuppressed(ex);
+                                        logger.warn("failed to execute failure callback for chunk request", e);
+                                    }
+                                });
+                            }
+                        }, ccrSettings.getRecoveryActionTimeout(), ThreadPool.Names.GENERIC, GetCcrRestoreFileChunkAction.NAME)
+                    );
                 }
 
-                private void writeFileChunk(StoreFileMetadata md,
-                    GetCcrRestoreFileChunkAction.GetCcrRestoreFileChunkResponse r) throws Exception {
+                private void writeFileChunk(StoreFileMetadata md, GetCcrRestoreFileChunkAction.GetCcrRestoreFileChunkResponse r)
+                    throws Exception {
                     final int actualChunkSize = r.getChunk().length();
-                    logger.trace("[{}] [{}] got response for file [{}], offset: {}, length: {}",
-                        shardId, snapshotId, md.name(), r.getOffset(), actualChunkSize);
+                    logger.trace(
+                        "[{}] [{}] got response for file [{}], offset: {}, length: {}",
+                        shardId,
+                        snapshotId,
+                        md.name(),
+                        r.getOffset(),
+                        actualChunkSize
+                    );
                     final long nanosPaused = ccrSettings.getRateLimiter().maybePause(actualChunkSize);
                     throttleListener.accept(nanosPaused);
                     multiFileWriter.incRef();
@@ -660,25 +755,10 @@ public class CcrRepository extends AbstractLifecycleComponent implements Reposit
         @Override
         public void close() {
             ClearCcrRestoreSessionRequest clearRequest = new ClearCcrRestoreSessionRequest(sessionUUID, node);
-            ActionResponse.Empty response =
-                remoteClient.execute(ClearCcrRestoreSessionAction.INSTANCE, clearRequest).actionGet(ccrSettings.getRecoveryActionTimeout());
+            ActionResponse.Empty response = remoteClient.execute(ClearCcrRestoreSessionAction.INSTANCE, clearRequest)
+                .actionGet(ccrSettings.getRecoveryActionTimeout());
         }
 
-        private static class FileChunk implements MultiChunkTransfer.ChunkRequest {
-            final StoreFileMetadata md;
-            final int bytesRequested;
-            final boolean lastChunk;
-
-            FileChunk(StoreFileMetadata md, int bytesRequested, boolean lastChunk) {
-                this.md = md;
-                this.bytesRequested = bytesRequested;
-                this.lastChunk = lastChunk;
-            }
-
-            @Override
-            public boolean lastChunk() {
-                return lastChunk;
-            }
-        }
+        private record FileChunk(StoreFileMetadata md, int bytesRequested, boolean lastChunk) implements MultiChunkTransfer.ChunkRequest {}
     }
 }
