@@ -8,15 +8,13 @@ package org.elasticsearch.xpack.ml.job;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.core.Tuple;
 import org.elasticsearch.common.unit.ByteSizeValue;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.xpack.ml.MachineLearning;
-import org.elasticsearch.xpack.ml.autoscaling.MlAutoscalingDeciderService;
 import org.elasticsearch.xpack.ml.autoscaling.NativeMemoryCapacity;
 import org.elasticsearch.xpack.ml.process.MlMemoryTracker;
 import org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator;
@@ -24,13 +22,13 @@ import org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.OptionalLong;
 import java.util.TreeMap;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.xpack.ml.MachineLearning.MAX_OPEN_JOBS_PER_NODE;
 
 /**
@@ -52,19 +50,18 @@ import static org.elasticsearch.xpack.ml.MachineLearning.MAX_OPEN_JOBS_PER_NODE;
  */
 public class JobNodeSelector {
 
-    public static final PersistentTasksCustomMetadata.Assignment AWAITING_LAZY_ASSIGNMENT =
-        new PersistentTasksCustomMetadata.Assignment(null, "persistent task is awaiting node assignment.");
+    public static final PersistentTasksCustomMetadata.Assignment AWAITING_LAZY_ASSIGNMENT = new PersistentTasksCustomMetadata.Assignment(
+        null,
+        "persistent task is awaiting node assignment."
+    );
 
     private static final Logger logger = LogManager.getLogger(JobNodeSelector.class);
 
     private static String createReason(String job, String node, String msg, Object... params) {
-        String preamble =  String.format(
-            Locale.ROOT,
-            "Not opening job [%s] on node [%s]. Reason: ",
-            job,
-            node);
-        return preamble + ParameterizedMessage.format(msg, params);
+        String preamble = format("Not opening job [%s] on node [%s]. Reason: ", job, node);
+        return preamble + format(msg, params);
     }
+
     private final String jobId;
     private final String taskName;
     private final ClusterState clusterState;
@@ -79,13 +76,15 @@ public class JobNodeSelector {
      *                   reasons why a job cannot be assigned to a particular node.  May
      *                   be <code>null</code> if no such function is needed.
      */
-    public JobNodeSelector(ClusterState clusterState,
-                           Collection<DiscoveryNode> candidateNodes,
-                           String jobId,
-                           String taskName,
-                           MlMemoryTracker memoryTracker,
-                           int maxLazyNodes,
-                           Function<DiscoveryNode, String> nodeFilter) {
+    public JobNodeSelector(
+        ClusterState clusterState,
+        Collection<DiscoveryNode> candidateNodes,
+        String jobId,
+        String taskName,
+        MlMemoryTracker memoryTracker,
+        int maxLazyNodes,
+        Function<DiscoveryNode, String> nodeFilter
+    ) {
         this.jobId = Objects.requireNonNull(jobId);
         this.taskName = Objects.requireNonNull(taskName);
         this.clusterState = Objects.requireNonNull(clusterState);
@@ -101,26 +100,19 @@ public class JobNodeSelector {
         };
     }
 
-    public Tuple<NativeMemoryCapacity, Long> perceivedCapacityAndMaxFreeMemory(int maxMachineMemoryPercent,
-                                                                               boolean useAutoMemoryPercentage,
-                                                                               int maxOpenJobs) {
-        List<DiscoveryNode> capableNodes = candidateNodes.stream()
-            .filter(n -> this.nodeFilter.apply(n) == null)
-            .collect(Collectors.toList());
-        NativeMemoryCapacity currentCapacityForMl = MlAutoscalingDeciderService.currentScale(
+    public Tuple<NativeMemoryCapacity, Long> currentCapacityAndMaxFreeMemory(
+        int maxMachineMemoryPercent,
+        boolean useAutoMemoryPercentage,
+        int maxOpenJobs
+    ) {
+        List<DiscoveryNode> capableNodes = candidateNodes.stream().filter(n -> this.nodeFilter.apply(n) == null).toList();
+        NativeMemoryCapacity currentCapacityForMl = NativeMemoryCapacity.currentScale(
             capableNodes,
             maxMachineMemoryPercent,
             useAutoMemoryPercentage
         );
         long mostAvailableMemory = capableNodes.stream()
-            .map(n -> nodeLoadDetector.detectNodeLoad(
-                clusterState,
-                true,
-                n,
-                maxOpenJobs,
-                maxMachineMemoryPercent,
-                useAutoMemoryPercentage)
-            )
+            .map(n -> nodeLoadDetector.detectNodeLoad(clusterState, n, maxOpenJobs, maxMachineMemoryPercent, useAutoMemoryPercentage))
             .filter(nl -> nl.remainingJobs() > 0)
             .mapToLong(NodeLoad::getFreeMemory)
             .max()
@@ -128,11 +120,13 @@ public class JobNodeSelector {
         return Tuple.tuple(currentCapacityForMl, mostAvailableMemory);
     }
 
-    public PersistentTasksCustomMetadata.Assignment selectNode(int dynamicMaxOpenJobs,
-                                                               int maxConcurrentJobAllocations,
-                                                               int maxMachineMemoryPercent,
-                                                               long maxNodeSize,
-                                                               boolean useAutoMemoryPercentage) {
+    public PersistentTasksCustomMetadata.Assignment selectNode(
+        int dynamicMaxOpenJobs,
+        int maxConcurrentJobAllocations,
+        int maxMachineMemoryPercent,
+        long maxNodeSize,
+        boolean useAutoMemoryPercentage
+    ) {
         final Long estimatedMemoryFootprint = memoryTracker.getJobMemoryRequirement(taskName, jobId);
         return selectNode(
             estimatedMemoryFootprint,
@@ -144,12 +138,14 @@ public class JobNodeSelector {
         );
     }
 
-    public PersistentTasksCustomMetadata.Assignment selectNode(Long estimatedMemoryFootprint,
-                                                               int dynamicMaxOpenJobs,
-                                                               int maxConcurrentJobAllocations,
-                                                               int maxMachineMemoryPercent,
-                                                               long maxNodeSize,
-                                                               boolean useAutoMemoryPercentage) {
+    public PersistentTasksCustomMetadata.Assignment selectNode(
+        Long estimatedMemoryFootprint,
+        int dynamicMaxOpenJobs,
+        int maxConcurrentJobAllocations,
+        int maxMachineMemoryPercent,
+        long maxNodeSize,
+        boolean useAutoMemoryPercentage
+    ) {
         if (estimatedMemoryFootprint == null) {
             memoryTracker.asyncRefresh();
             String reason = "Not opening job [" + jobId + "] because job memory requirements are stale - refresh requested";
@@ -171,7 +167,6 @@ public class JobNodeSelector {
             }
             NodeLoad currentLoad = nodeLoadDetector.detectNodeLoad(
                 clusterState,
-                true, // Remove in 8.0.0
                 node,
                 dynamicMaxOpenJobs,
                 maxMachineMemoryPercent,
@@ -188,66 +183,76 @@ public class JobNodeSelector {
             int maxNumberOfOpenJobs = currentLoad.getMaxJobs();
 
             if (currentLoad.getNumAllocatingJobs() >= maxConcurrentJobAllocations) {
-                reason = createReason(jobId,
+                reason = createReason(
+                    jobId,
                     nodeNameAndMlAttributes(node),
-                    "Node exceeds [{}] the maximum number of jobs [{}] in opening state.",
+                    "Node exceeds [%s] the maximum number of jobs [%s] in opening state.",
                     currentLoad.getNumAllocatingJobs(),
-                    maxConcurrentJobAllocations);
+                    maxConcurrentJobAllocations
+                );
                 logger.trace(reason);
                 reasons.put(node.getName(), reason);
                 continue;
             }
 
             if (currentLoad.remainingJobs() == 0) {
-                reason = createReason(jobId,
+                reason = createReason(
+                    jobId,
                     nodeNameAndMlAttributes(node),
-                    "This node is full. Number of opened jobs [{}], {} [{}].",
-                    currentLoad.getNumAssignedJobs(),
+                    "This node is full. Number of opened jobs and allocated native inference processes [%s], %s [%s].",
+                    currentLoad.getNumAssignedJobsAndModels(),
                     MAX_OPEN_JOBS_PER_NODE.getKey(),
-                    maxNumberOfOpenJobs);
+                    maxNumberOfOpenJobs
+                );
                 logger.trace(reason);
                 reasons.put(node.getName(), reason);
                 continue;
             }
 
             if (canAllocateByMemory == false) {
-                reason = createReason(jobId,
+                reason = createReason(
+                    jobId,
                     nodeNameAndMlAttributes(node),
-                    "This node is not providing accurate information to determine is load by memory.");
+                    "This node is not providing accurate information to determine its load by memory."
+                );
                 logger.trace(reason);
-                reasons.put(node.getName(),reason);
+                reasons.put(node.getName(), reason);
                 continue;
             }
 
             if (currentLoad.getMaxMlMemory() <= 0) {
-                reason = createReason(jobId,
+                reason = createReason(
+                    jobId,
                     nodeNameAndMlAttributes(node),
-                    "This node is indicating that it has no native memory for machine learning.");
+                    "This node is indicating that it has no native memory for machine learning."
+                );
                 logger.trace(reason);
-                reasons.put(node.getName(),reason);
+                reasons.put(node.getName(), reason);
                 continue;
             }
 
             // If this will be the first job assigned to the node then it will need to
             // load the native code shared libraries, so add the overhead for this
-            if (currentLoad.getNumAssignedJobs() == 0) {
+            if (currentLoad.getNumAssignedJobsAndModels() == 0) {
                 requiredMemoryForJob += MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes();
             }
             long availableMemory = currentLoad.getMaxMlMemory() - currentLoad.getAssignedJobMemory();
             if (requiredMemoryForJob > availableMemory) {
-                reason = createReason(jobId,
+                reason = createReason(
+                    jobId,
                     nodeNameAndMlAttributes(node),
-                    "This node has insufficient available memory. Available memory for ML [{} ({})], "
-                        + "memory required by existing jobs [{} ({})], "
-                        + "estimated memory required for this job [{} ({})].",
+                    "This node has insufficient available memory. Available memory for ML [%s (%s)], "
+                        + "memory required by existing jobs [%s (%s)], "
+                        + "estimated memory required for this job [%s (%s)].",
                     currentLoad.getMaxMlMemory(),
                     ByteSizeValue.ofBytes(currentLoad.getMaxMlMemory()).toString(),
                     currentLoad.getAssignedJobMemory(),
                     ByteSizeValue.ofBytes(currentLoad.getAssignedJobMemory()).toString(),
                     requiredMemoryForJob,
-                    ByteSizeValue.ofBytes(requiredMemoryForJob).toString());
+                    ByteSizeValue.ofBytes(requiredMemoryForJob).toString()
+                );
                 logger.trace(reason);
-                reasons.put(node.getName(),reason);
+                reasons.put(node.getName(), reason);
                 continue;
             }
 
@@ -261,39 +266,47 @@ public class JobNodeSelector {
             estimatedMemoryFootprint,
             minLoadedNodeByMemory,
             reasons.values(),
-            maxNodeSize > 0L ?
-                NativeMemoryCalculator.allowedBytesForMl(maxNodeSize, maxMachineMemoryPercent, useAutoMemoryPercentage) :
-                Long.MAX_VALUE);
+            maxNodeSize > 0L
+                ? NativeMemoryCalculator.allowedBytesForMl(maxNodeSize, maxMachineMemoryPercent, useAutoMemoryPercentage)
+                : Long.MAX_VALUE,
+            maxNodeSize
+        );
     }
 
-    PersistentTasksCustomMetadata.Assignment createAssignment(long estimatedMemoryUsage,
-                                                              DiscoveryNode minLoadedNode,
-                                                              Collection<String> reasons,
-                                                              long biggestPossibleJob) {
+    PersistentTasksCustomMetadata.Assignment createAssignment(
+        long estimatedMemoryUsage,
+        DiscoveryNode minLoadedNode,
+        Collection<String> reasons,
+        long mostAvailableMemoryForML,
+        long maxNodeSize
+    ) {
         if (minLoadedNode == null) {
             String explanation = String.join("|", reasons);
-            PersistentTasksCustomMetadata.Assignment currentAssignment =
-                new PersistentTasksCustomMetadata.Assignment(null, explanation);
+            PersistentTasksCustomMetadata.Assignment currentAssignment = new PersistentTasksCustomMetadata.Assignment(null, explanation);
             logger.debug("no node selected for job [{}], reasons [{}]", jobId, explanation);
-            if ((MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes() + estimatedMemoryUsage) > biggestPossibleJob) {
-                ParameterizedMessage message = new ParameterizedMessage(
-                    "[{}] not waiting for node assignment as estimated job size [{}] is greater than largest possible job size [{}]",
+            if ((MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes() + estimatedMemoryUsage) > mostAvailableMemoryForML) {
+                String message = format(
+                    "[%s] not waiting for node assignment as estimated job size [%s] is greater than largest possible job size [%s]",
                     jobId,
                     MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes() + estimatedMemoryUsage,
-                    biggestPossibleJob);
+                    mostAvailableMemoryForML
+                );
                 logger.info(message);
                 List<String> newReasons = new ArrayList<>(reasons);
-                newReasons.add(message.getFormattedMessage());
+                newReasons.add(message);
                 explanation = String.join("|", newReasons);
                 return new PersistentTasksCustomMetadata.Assignment(null, explanation);
             }
-            return considerLazyAssignment(currentAssignment);
+            return considerLazyAssignment(currentAssignment, maxNodeSize);
         }
         logger.debug("selected node [{}] for job [{}]", minLoadedNode, jobId);
         return new PersistentTasksCustomMetadata.Assignment(minLoadedNode.getId(), "");
     }
 
-    PersistentTasksCustomMetadata.Assignment considerLazyAssignment(PersistentTasksCustomMetadata.Assignment currentAssignment) {
+    PersistentTasksCustomMetadata.Assignment considerLazyAssignment(
+        PersistentTasksCustomMetadata.Assignment currentAssignment,
+        long maxNodeSize
+    ) {
 
         assert currentAssignment.getExecutorNode() == null;
 
@@ -304,10 +317,21 @@ public class JobNodeSelector {
             }
         }
 
+        // Can we scale horizontally?
         if (numMlNodes < maxLazyNodes) { // Means we have lazy nodes left to allocate
             return AWAITING_LAZY_ASSIGNMENT;
         }
-
+        // Can we scale vertically and is scaling possible?
+        if (maxNodeSize > 0L && maxLazyNodes > 0) {
+            OptionalLong smallestMLNode = candidateNodes.stream()
+                .filter(MachineLearning::isMlNode)
+                .map(NodeLoadDetector::getNodeSize)
+                .flatMapToLong(OptionalLong::stream)
+                .min();
+            if (smallestMLNode.isPresent() && smallestMLNode.getAsLong() < maxNodeSize) {
+                return AWAITING_LAZY_ASSIGNMENT;
+            }
+        }
         return currentAssignment;
     }
 
