@@ -8,7 +8,6 @@ package org.elasticsearch.xpack.ml.process;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.LocalNodeMasterListener;
@@ -26,12 +25,13 @@ import org.elasticsearch.xpack.core.ml.action.OpenJobAction;
 import org.elasticsearch.xpack.core.ml.action.StartDataFrameAnalyticsAction;
 import org.elasticsearch.xpack.core.ml.action.StartTrainedModelDeploymentAction;
 import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsConfig;
-import org.elasticsearch.xpack.core.ml.inference.allocation.TrainedModelAllocation;
+import org.elasticsearch.xpack.core.ml.inference.assignment.TrainedModelAssignment;
 import org.elasticsearch.xpack.core.ml.job.config.AnalysisLimits;
 import org.elasticsearch.xpack.core.ml.job.config.Job;
+import org.elasticsearch.xpack.core.ml.job.snapshot.upgrade.SnapshotUpgradeTaskParams;
 import org.elasticsearch.xpack.ml.MachineLearning;
 import org.elasticsearch.xpack.ml.dataframe.persistence.DataFrameAnalyticsConfigProvider;
-import org.elasticsearch.xpack.ml.inference.allocation.TrainedModelAllocationMetadata;
+import org.elasticsearch.xpack.ml.inference.assignment.TrainedModelAssignmentMetadata;
 import org.elasticsearch.xpack.ml.job.JobManager;
 import org.elasticsearch.xpack.ml.job.persistence.JobResultsProvider;
 
@@ -42,6 +42,7 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
@@ -49,22 +50,26 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Phaser;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * This class keeps track of the memory requirement of ML jobs.
  * It only functions on the master node - for this reason it should only be used by master node actions.
  * The memory requirement for ML jobs can be updated in 4 ways:
- * 1. For all open ML data frame analytics jobs and anomaly detector jobs (via {@link #asyncRefresh})
- * 2. For all open/started ML jobs, plus one named ML anomaly detector job that is not open
+ * 1. For all open ML data frame analytics jobs, anomaly detector jobs and model snapshot upgrades (via {@link #asyncRefresh})
+ * 2. For all open/started ML jobs and model snapshot upgrades, plus one named ML anomaly detector job that may not be open
  *    (via {@link #refreshAnomalyDetectorJobMemoryAndAllOthers})
- * 3. For all open/started ML jobs, plus one named ML data frame analytics job that is not started
+ * 3. For all open/started ML jobs and model snapshot upgrades, plus one named ML data frame analytics job that is not started
  *    (via {@link #addDataFrameAnalyticsJobMemoryAndRefreshAllOthers})
- * 4. For one named ML anomaly detector job (via {@link #refreshAnomalyDetectorJobMemory})
+ * 4. For one named ML anomaly detector job or model snapshot upgrade (via {@link #refreshAnomalyDetectorJobMemory})
  * In cases 2, 3 and 4 a listener informs the caller when the requested updates are complete.
  */
 public class MlMemoryTracker implements LocalNodeMasterListener {
 
     private static final Duration RECENT_UPDATE_THRESHOLD = Duration.ofMinutes(1);
+    private static final Duration DEFAULT_AUTOSCALING_CHECK_INTERVAL = Duration.ofMinutes(5);
 
     private final Logger logger = LogManager.getLogger(MlMemoryTracker.class);
     private final Map<String, Long> memoryRequirementByAnomalyDetectorJob = new ConcurrentHashMap<>();
@@ -78,13 +83,21 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
     private final JobResultsProvider jobResultsProvider;
     private final DataFrameAnalyticsConfigProvider configProvider;
     private final Phaser stopPhaser;
-    private volatile AtomicInteger phase = new AtomicInteger(0);
+    private final AtomicInteger phase = new AtomicInteger(0);
     private volatile boolean isMaster;
+    private volatile boolean stopped;
     private volatile Instant lastUpdateTime;
     private volatile Duration reassignmentRecheckInterval;
+    private volatile Duration autoscalingCheckInterval = DEFAULT_AUTOSCALING_CHECK_INTERVAL;
 
-    public MlMemoryTracker(Settings settings, ClusterService clusterService, ThreadPool threadPool, JobManager jobManager,
-                           JobResultsProvider jobResultsProvider, DataFrameAnalyticsConfigProvider configProvider) {
+    public MlMemoryTracker(
+        Settings settings,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        JobManager jobManager,
+        JobResultsProvider jobResultsProvider,
+        DataFrameAnalyticsConfigProvider configProvider
+    ) {
         this.threadPool = threadPool;
         this.clusterService = clusterService;
         this.jobManager = jobManager;
@@ -95,16 +108,25 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
         Map<String, Map<String, Long>> memoryRequirementByTaskName = new TreeMap<>();
         memoryRequirementByTaskName.put(MlTasks.JOB_TASK_NAME, memoryRequirementByAnomalyDetectorJob);
         memoryRequirementByTaskName.put(MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME, memoryRequirementByDataFrameAnalyticsJob);
+        // We don't add snapshot upgrade tasks here - instead, we assume they
+        // have the same memory requirement as the job they correspond to.
         this.memoryRequirementByTaskName = Collections.unmodifiableMap(memoryRequirementByTaskName);
 
         setReassignmentRecheckInterval(PersistentTasksClusterService.CLUSTER_TASKS_ALLOCATION_RECHECK_INTERVAL_SETTING.get(settings));
         clusterService.addLocalNodeMasterListener(this);
-        clusterService.getClusterSettings().addSettingsUpdateConsumer(
-            PersistentTasksClusterService.CLUSTER_TASKS_ALLOCATION_RECHECK_INTERVAL_SETTING, this::setReassignmentRecheckInterval);
+        clusterService.getClusterSettings()
+            .addSettingsUpdateConsumer(
+                PersistentTasksClusterService.CLUSTER_TASKS_ALLOCATION_RECHECK_INTERVAL_SETTING,
+                this::setReassignmentRecheckInterval
+            );
     }
 
     private void setReassignmentRecheckInterval(TimeValue recheckInterval) {
         reassignmentRecheckInterval = Duration.ofNanos(recheckInterval.getNanos());
+    }
+
+    public void setAutoscalingCheckInterval(Duration autoscalingCheckInterval) {
+        this.autoscalingCheckInterval = Objects.requireNonNull(autoscalingCheckInterval);
     }
 
     @Override
@@ -133,23 +155,21 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
         // in the register/arrive/unregister logic in another method that uses the phaser
         assert stopPhaser.getRegisteredParties() > 0;
         assert stopPhaser.getUnarrivedParties() > 0;
-        threadPool.executor(MachineLearning.UTILITY_THREAD_POOL_NAME).execute(
-            () -> {
-                try {
-                    // We await all current refreshes to complete, this increments the "current phase" and prevents
-                    // further interaction while we clear contents
-                    int newPhase = stopPhaser.arriveAndAwaitAdvance();
-                    assert newPhase > 0;
-                    clear();
-                    phase.incrementAndGet();
-                    logger.trace("completed awaiting and clearing memory tracker");
-                    listener.onResponse(null);
-                } catch (Exception e) {
-                    logger.warn("failed to wait for all refresh requests to complete", e);
-                    listener.onFailure(e);
-                }
+        threadPool.executor(MachineLearning.UTILITY_THREAD_POOL_NAME).execute(() -> {
+            try {
+                // We await all current refreshes to complete, this increments the "current phase" and prevents
+                // further interaction while we clear contents
+                int newPhase = stopPhaser.arriveAndAwaitAdvance();
+                assert newPhase > 0;
+                clear();
+                phase.incrementAndGet();
+                logger.trace("completed awaiting and clearing memory tracker");
+                listener.onResponse(null);
+            } catch (Exception e) {
+                logger.warn("failed to wait for all refresh requests to complete", e);
+                listener.onFailure(e);
             }
-        );
+        });
 
     }
 
@@ -166,6 +186,7 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
      * After returning, no new searches can be started.
      */
     public void stop() {
+        stopped = true;
         logger.trace("ML memory tracker stop called");
         // We never terminate the phaser
         assert stopPhaser.isTerminated() == false;
@@ -183,17 +204,31 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
      * for valid task assignment decisions to be made using it?
      */
     public boolean isRecentlyRefreshed() {
-        return isRecentlyRefreshed(reassignmentRecheckInterval);
+        Instant localLastUpdateTime = lastUpdateTime;
+        return isMaster && localLastUpdateTime != null && localLastUpdateTime.plus(getStalenessDuration()).isAfter(Instant.now());
     }
 
     /**
-     * Is the information in this object sufficiently up to date
-     * for valid task assignment decisions to be made using it?
+     * @return The definition of "staleness" used by {@link #isRecentlyRefreshed()}. This method is intended only as
+     *         a debugging aid, as calling it separately to {@link #isRecentlyRefreshed()} could return a different
+     *         number if settings were modified in between the two calls.
      */
-    public boolean isRecentlyRefreshed(Duration customDuration) {
-        Instant localLastUpdateTime = lastUpdateTime;
-        return isMaster && localLastUpdateTime != null &&
-            localLastUpdateTime.plus(RECENT_UPDATE_THRESHOLD).plus(customDuration).isAfter(Instant.now());
+    public Duration getStalenessDuration() {
+        return max(reassignmentRecheckInterval, autoscalingCheckInterval).plus(RECENT_UPDATE_THRESHOLD);
+    }
+
+    static Duration max(Duration first, Duration second) {
+        return first.compareTo(second) > 0 ? first : second;
+    }
+
+    /**
+     * Has the information in this object ever been refreshed?
+     * This method is intended for use when it's not essential to
+     * have the most up-to-date information, but having <em>some</em>
+     * information is necessary, for example in telemetry.
+     */
+    public boolean isEverRefreshed() {
+        return isMaster && lastUpdateTime != null;
     }
 
     /**
@@ -225,13 +260,14 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
      * @return The memory requirement of the trained model task specified by {@code modelId},
      *         or <code>null</code> if it cannot be found.
      */
-    public Long getTrainedModelAllocationMemoryRequirement(String modelId) {
+    public Long getTrainedModelAssignmentMemoryRequirement(String modelId) {
         if (isMaster == false) {
+            logger.warn("Request to get trained model assignment memory not on master node; modelId was [{}]", modelId);
             return null;
         }
 
-        return Optional.ofNullable(TrainedModelAllocationMetadata.fromState(clusterService.state()).modelAllocations().get(modelId))
-            .map(TrainedModelAllocation::getTaskParams)
+        return Optional.ofNullable(TrainedModelAssignmentMetadata.fromState(clusterService.state()).modelAssignments().get(modelId))
+            .map(TrainedModelAssignment::getTaskParams)
             .map(StartTrainedModelDeploymentAction.TaskParams::estimateMemoryUsageBytes)
             .orElse(null);
     }
@@ -247,12 +283,18 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
     public Long getJobMemoryRequirement(String taskName, String id) {
 
         if (isMaster == false) {
+            logger.warn("Request to get job memory not on master node; taskName [{}], id [{}]", taskName, id);
             return null;
+        }
+
+        // Assume snapshot upgrade tasks have the same memory requirement as the job they correspond to.
+        if (MlTasks.JOB_SNAPSHOT_UPGRADE_TASK_NAME.equals(taskName)) {
+            taskName = MlTasks.JOB_TASK_NAME;
         }
 
         Map<String, Long> memoryRequirementByJob = memoryRequirementByTaskName.get(taskName);
         if (memoryRequirementByJob == null) {
-            assert false: "Unknown taskName type [" + taskName +"]";
+            assert false : "Unknown taskName type [" + taskName + "]";
             return null;
         }
         return memoryRequirementByJob.get(id);
@@ -288,10 +330,10 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
             try {
                 ActionListener<Void> listener = ActionListener.wrap(
                     aVoid -> logger.trace("Job memory requirement refresh request completed successfully"),
-                    e -> logger.warn("Failed to refresh job memory requirements", e)
+                    e -> logIfNecessary(() -> logger.warn("Failed to refresh job memory requirements", e))
                 );
-                threadPool.executor(MachineLearning.UTILITY_THREAD_POOL_NAME).execute(
-                    () -> refresh(clusterService.state().getMetadata().custom(PersistentTasksCustomMetadata.TYPE), listener));
+                threadPool.executor(MachineLearning.UTILITY_THREAD_POOL_NAME)
+                    .execute(() -> refresh(clusterService.state().getMetadata().custom(PersistentTasksCustomMetadata.TYPE), listener));
                 return true;
             } catch (EsRejectedExecutionException e) {
                 logger.warn("Couldn't schedule ML memory update - node might be shutting down", e);
@@ -313,13 +355,19 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
     public void refreshAnomalyDetectorJobMemoryAndAllOthers(String jobId, ActionListener<Long> listener) {
 
         if (isMaster == false) {
-            listener.onFailure(new NotMasterException("Request to refresh anomaly detector memory requirements on non-master node"));
+            String msg = "Request to refresh anomaly detector memory requirements on non-master node";
+            logger.warn(msg);
+            listener.onFailure(new NotMasterException(msg));
             return;
         }
 
-        PersistentTasksCustomMetadata persistentTasks = clusterService.state().getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
-        refresh(persistentTasks,
-            ActionListener.wrap(aVoid -> refreshAnomalyDetectorJobMemory(jobId, listener), listener::onFailure));
+        // Skip the provided job ID in the main refresh, as we unconditionally do it at the end.
+        // Otherwise it might get refreshed twice, because it could have both a job task and a snapshot upgrade task.
+        refresh(
+            clusterService.state().getMetadata().custom(PersistentTasksCustomMetadata.TYPE),
+            Collections.singleton(jobId),
+            ActionListener.wrap(aVoid -> refreshAnomalyDetectorJobMemory(jobId, listener), listener::onFailure)
+        );
     }
 
     /**
@@ -333,7 +381,9 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
     public void addDataFrameAnalyticsJobMemoryAndRefreshAllOthers(String id, long mem, ActionListener<Void> listener) {
 
         if (isMaster == false) {
-            listener.onFailure(new NotMasterException("Request to put data frame analytics memory requirement on non-master node"));
+            String msg = "Request to put data frame analytics memory requirement on non-master node";
+            logger.warn(msg);
+            listener.onFailure(new NotMasterException(msg));
             return;
         }
 
@@ -350,6 +400,10 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
      * jobs are deleted.)
      */
     public void refresh(PersistentTasksCustomMetadata persistentTasks, ActionListener<Void> onCompletion) {
+        refresh(persistentTasks, Collections.emptySet(), onCompletion);
+    }
+
+    void refresh(PersistentTasksCustomMetadata persistentTasks, Set<String> jobIdsToSkip, ActionListener<Void> onCompletion) {
 
         synchronized (fullRefreshCompletionListeners) {
             fullRefreshCompletionListeners.add(onCompletion);
@@ -367,23 +421,23 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
                     for (ActionListener<Void> listener : fullRefreshCompletionListeners) {
                         listener.onResponse(null);
                     }
-                    logger.trace("ML memory tracker last update time now [{}] and listeners called", lastUpdateTime);
+                    logger.debug("ML memory tracker last update time now [{}] and listeners called", lastUpdateTime);
                 } else {
                     Exception e = new NotMasterException("Node ceased to be master during ML memory tracker refresh");
                     for (ActionListener<Void> listener : fullRefreshCompletionListeners) {
                         listener.onFailure(e);
                     }
+                    logger.debug(e.getMessage());
                 }
                 fullRefreshCompletionListeners.clear();
             }
-        },
-        e -> {
+        }, e -> {
             synchronized (fullRefreshCompletionListeners) {
                 assert fullRefreshCompletionListeners.isEmpty() == false;
                 for (ActionListener<Void> listener : fullRefreshCompletionListeners) {
                     listener.onFailure(e);
                 }
-                logger.warn("ML memory tracker last update failed and listeners called", e);
+                logIfNecessary(() -> logger.warn("ML memory tracker last update failed and listeners called", e));
                 // It's critical that we empty out the current listener list on
                 // error otherwise subsequent retries to refresh will be ignored
                 fullRefreshCompletionListeners.clear();
@@ -394,56 +448,70 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
         if (persistentTasks == null) {
             refreshComplete.onResponse(null);
         } else {
-            List<PersistentTasksCustomMetadata.PersistentTask<?>> mlDataFrameAnalyticsJobTasks = persistentTasks.tasks().stream()
-                .filter(task -> MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME.equals(task.getTaskName())).collect(Collectors.toList());
-            ActionListener<Void> refreshDataFrameAnalyticsJobs =
-                ActionListener.wrap(aVoid -> refreshAllDataFrameAnalyticsJobTasks(mlDataFrameAnalyticsJobTasks, refreshComplete),
-                    refreshComplete::onFailure);
+            List<PersistentTasksCustomMetadata.PersistentTask<?>> mlDataFrameAnalyticsJobTasks = persistentTasks.tasks()
+                .stream()
+                .filter(task -> MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME.equals(task.getTaskName()))
+                .toList();
+            ActionListener<Void> refreshDataFrameAnalyticsJobs = ActionListener.wrap(
+                aVoid -> refreshAllDataFrameAnalyticsJobTasks(mlDataFrameAnalyticsJobTasks, refreshComplete),
+                refreshComplete::onFailure
+            );
 
-            List<PersistentTasksCustomMetadata.PersistentTask<?>> mlAnomalyDetectorJobTasks = persistentTasks.tasks().stream()
-                .filter(task -> MlTasks.JOB_TASK_NAME.equals(task.getTaskName())).collect(Collectors.toList());
-            iterateAnomalyDetectorJobTasks(mlAnomalyDetectorJobTasks.iterator(), refreshDataFrameAnalyticsJobs);
+            Set<String> mlAnomalyDetectorJobTasks = Stream.concat(
+                persistentTasks.tasks()
+                    .stream()
+                    .filter(task -> MlTasks.JOB_TASK_NAME.equals(task.getTaskName()))
+                    .map(task -> ((OpenJobAction.JobParams) task.getParams()).getJobId()),
+                persistentTasks.tasks()
+                    .stream()
+                    .filter(task -> MlTasks.JOB_SNAPSHOT_UPGRADE_TASK_NAME.equals(task.getTaskName()))
+                    .map(task -> ((SnapshotUpgradeTaskParams) task.getParams()).getJobId())
+            ).filter(jobId -> jobIdsToSkip.contains(jobId) == false).collect(Collectors.toSet());
+            iterateAnomalyDetectorJobs(mlAnomalyDetectorJobTasks.iterator(), refreshDataFrameAnalyticsJobs);
         }
     }
 
-    private void iterateAnomalyDetectorJobTasks(Iterator<PersistentTasksCustomMetadata.PersistentTask<?>> iterator,
-                                                ActionListener<Void> refreshComplete) {
+    private void iterateAnomalyDetectorJobs(Iterator<String> iterator, ActionListener<Void> refreshComplete) {
         if (iterator.hasNext()) {
-            OpenJobAction.JobParams jobParams = (OpenJobAction.JobParams) iterator.next().getParams();
-            refreshAnomalyDetectorJobMemory(jobParams.getJobId(),
+            refreshAnomalyDetectorJobMemory(
+                iterator.next(),
                 ActionListener.wrap(
                     // Do the next iteration in a different thread, otherwise stack overflow
                     // can occur if the searches happen to be on the local node, as the huge
                     // chain of listeners are all called in the same thread if only one node
                     // is involved
                     mem -> threadPool.executor(MachineLearning.UTILITY_THREAD_POOL_NAME)
-                        .execute(() -> iterateAnomalyDetectorJobTasks(iterator, refreshComplete)),
-                    refreshComplete::onFailure));
+                        .execute(() -> iterateAnomalyDetectorJobs(iterator, refreshComplete)),
+                    refreshComplete::onFailure
+                )
+            );
         } else {
             refreshComplete.onResponse(null);
         }
     }
 
-    private void refreshAllDataFrameAnalyticsJobTasks(List<PersistentTasksCustomMetadata.PersistentTask<?>> mlDataFrameAnalyticsJobTasks,
-                                                      ActionListener<Void> listener) {
+    private void refreshAllDataFrameAnalyticsJobTasks(
+        List<PersistentTasksCustomMetadata.PersistentTask<?>> mlDataFrameAnalyticsJobTasks,
+        ActionListener<Void> listener
+    ) {
         if (mlDataFrameAnalyticsJobTasks.isEmpty()) {
             listener.onResponse(null);
             return;
         }
 
-        Set<String> jobsWithTasks = mlDataFrameAnalyticsJobTasks.stream().map(
-            task -> ((StartDataFrameAnalyticsAction.TaskParams) task.getParams()).getId()).collect(Collectors.toSet());
+        Set<String> jobsWithTasks = mlDataFrameAnalyticsJobTasks.stream()
+            .map(task -> ((StartDataFrameAnalyticsAction.TaskParams) task.getParams()).getId())
+            .collect(Collectors.toSet());
 
-        configProvider.getConfigsForJobsWithTasksLeniently(jobsWithTasks, ActionListener.wrap(
-            analyticsConfigs -> {
-                for (DataFrameAnalyticsConfig analyticsConfig : analyticsConfigs) {
-                    memoryRequirementByDataFrameAnalyticsJob.put(analyticsConfig.getId(),
-                        analyticsConfig.getModelMemoryLimit().getBytes() + DataFrameAnalyticsConfig.PROCESS_MEMORY_OVERHEAD.getBytes());
-                }
-                listener.onResponse(null);
-            },
-            listener::onFailure
-        ));
+        configProvider.getConfigsForJobsWithTasksLeniently(jobsWithTasks, ActionListener.wrap(analyticsConfigs -> {
+            for (DataFrameAnalyticsConfig analyticsConfig : analyticsConfigs) {
+                memoryRequirementByDataFrameAnalyticsJob.put(
+                    analyticsConfig.getId(),
+                    analyticsConfig.getModelMemoryLimit().getBytes() + DataFrameAnalyticsConfig.PROCESS_MEMORY_OVERHEAD.getBytes()
+                );
+            }
+            listener.onResponse(null);
+        }, listener::onFailure));
     }
 
     /**
@@ -455,7 +523,9 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
      */
     public void refreshAnomalyDetectorJobMemory(String jobId, ActionListener<Long> listener) {
         if (isMaster == false) {
-            listener.onFailure(new NotMasterException("Request to refresh anomaly detector memory requirement on non-master node"));
+            String msg = "Request to refresh anomaly detector memory requirement on non-master node";
+            logger.warn(msg);
+            listener.onFailure(new NotMasterException(msg));
             return;
         }
 
@@ -464,41 +534,43 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
         if (stopPhaser.register() != phase.get()) {
             // Phases above not equal to `phase` mean we've been stopped, so don't do any operations that involve external interaction
             stopPhaser.arriveAndDeregister();
-            logger.info(
-                () -> new ParameterizedMessage("[{}] not refreshing anomaly detector memory as node is shutting down", jobId)
-            );
+            logger.info(() -> "[" + jobId + "] not refreshing anomaly detector memory as node is shutting down");
             listener.onFailure(new EsRejectedExecutionException("Couldn't run ML memory update - node is shutting down"));
             return;
         }
-        ActionListener<Long> phaserListener = ActionListener.wrap(
-            r -> {
-                stopPhaser.arriveAndDeregister();
-                listener.onResponse(r);
-            },
-            e -> {
-                stopPhaser.arriveAndDeregister();
-                listener.onFailure(e);
-            }
-        );
+        ActionListener<Long> phaserListener = ActionListener.wrap(r -> {
+            stopPhaser.arriveAndDeregister();
+            listener.onResponse(r);
+        }, e -> {
+            stopPhaser.arriveAndDeregister();
+            listener.onFailure(e);
+        });
 
         try {
-            jobResultsProvider.getEstablishedMemoryUsage(jobId, null, null,
-                establishedModelMemoryBytes -> {
-                    if (establishedModelMemoryBytes <= 0L) {
-                        setAnomalyDetectorJobMemoryToLimit(jobId, phaserListener);
-                    } else {
-                        Long memoryRequirementBytes = establishedModelMemoryBytes + Job.PROCESS_MEMORY_OVERHEAD.getBytes();
-                        memoryRequirementByAnomalyDetectorJob.put(jobId, memoryRequirementBytes);
-                        phaserListener.onResponse(memoryRequirementBytes);
-                    }
-                },
-                e -> {
-                    logger.error("[" + jobId + "] failed to calculate anomaly detector job established model memory requirement", e);
+            jobResultsProvider.getEstablishedMemoryUsage(jobId, null, null, establishedModelMemoryBytes -> {
+                if (establishedModelMemoryBytes <= 0L) {
                     setAnomalyDetectorJobMemoryToLimit(jobId, phaserListener);
+                } else {
+                    Long memoryRequirementBytes = establishedModelMemoryBytes + Job.PROCESS_MEMORY_OVERHEAD.getBytes();
+                    memoryRequirementByAnomalyDetectorJob.put(jobId, memoryRequirementBytes);
+                    phaserListener.onResponse(memoryRequirementBytes);
                 }
-            );
+            }, e -> {
+                logIfNecessary(
+                    () -> logger.error(
+                        () -> format("[%s] failed to calculate anomaly detector job established model memory requirement", jobId),
+                        e
+                    )
+                );
+                setAnomalyDetectorJobMemoryToLimit(jobId, phaserListener);
+            });
         } catch (Exception e) {
-            logger.error("[" + jobId + "] failed to calculate anomaly detector job established model memory requirement", e);
+            logIfNecessary(
+                () -> logger.error(
+                    () -> format("[%s] failed to calculate anomaly detector job established model memory requirement", jobId),
+                    e
+                )
+            );
             setAnomalyDetectorJobMemoryToLimit(jobId, phaserListener);
         }
     }
@@ -524,10 +596,23 @@ public class MlMemoryTracker implements LocalNodeMasterListener {
                 // during the memory refresh.
                 logger.trace("[{}] anomaly detector job deleted during ML memory update", jobId);
             } else {
-                logger.error("[" + jobId + "] failed to get anomaly detector job during ML memory update", e);
+                logIfNecessary(() -> logger.error(() -> "[" + jobId + "] failed to get anomaly detector job during ML memory update", e));
+
             }
             memoryRequirementByAnomalyDetectorJob.remove(jobId);
             listener.onResponse(null);
         }));
+    }
+
+    /**
+     * To reduce spamming the log in an unstable environment, this method will only call the runnable if:
+     *  - The current node is the master node (and thus valid for tracking memory)
+     *  - The current node is NOT stopped (and thus not shutting down)
+     * @param log Runnable that writes the log message
+     */
+    private void logIfNecessary(Runnable log) {
+        if (isMaster && (stopped == false)) {
+            log.run();
+        }
     }
 }
